--- a/Alli-1a12.html
+++ b/Alli-1a12.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -286,7 +286,7 @@ All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>钩锥，可作为鉴别种和主要伴生种</p>
+<p>钩锥（<em>Castanopsis tibetana</em>），可作为鉴别种和主要伴生种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -294,18 +294,18 @@ All.</span></h2>
 <ul>
 <li><p>乔木层：红楠（<em>Machilus
 thunbergii</em>）、赤杨叶（<em>Alniphyllum
-fortunei</em>）、猴欢喜（<em>Sloanea sinensis</em>）,鼠刺(<em>Itea
+fortunei</em>）、猴欢喜（<em>Sloanea sinensis</em>）、鼠刺(<em>Itea
 chinensis</em>)</p></li>
 <li><p>灌木层：黄丹木姜子（<em>Litsea elongata</em>）、杜茎山（<em>Maesa
-japonica</em>）、红茴香（<em>Illicium henryi</em>），栀子（<em>Gardenia
+japonica</em>）、红茴香（<em>Illicium henryi</em>）、栀子（<em>Gardenia
 jasminoides</em>）</p></li>
 <li><p>草本层：狗脊（<em>Woodwardia
 japonica</em>）、淡竹叶（<em>Lophatherum
-gracile</em>），中华复叶耳蕨（<em>Arachniodes
+gracile</em>）、中华复叶耳蕨（<em>Arachniodes
 chinensis</em>）、山姜（<em>Alpinia japonica</em>）等</p></li>
 <li><p>藤本植物：野木瓜（<em>Stauntonia
-chinensis</em>），珍珠莲（<em>Ficus sarmentosa</em> var.
-<em>henryi</em>），尖叶菝葜（<em>Smilax arisanensis</em>）</p></li>
+chinensis</em>）、珍珠莲（<em>Ficus sarmentosa var.
+henryi</em>）、尖叶菝葜（<em>Smilax arisanensis</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
@@ -313,11 +313,11 @@ chinensis</em>），珍珠莲（<em>Ficus sarmentosa</em> var.
 <h3>目前包含11个群落</h3>
 <ul>
 <li><p>(C1）阔鳞鳞毛蕨-阔叶箬竹-枫香/钩锥群落(<em>Dryopteris
-championii</em> -<em>Indocalamus latifolius</em>-<em>Liquidambar
+championii</em>-<em>Indocalamus latifolius</em>-<em>Liquidambar
 formosana</em>/<em>Castanopsis tibetana</em> Comm.)</p>
 <p>分布在杭州（EBLF书中表5-72；曾称：阔叶箬竹/ 钩锥群落)</p></li>
 <li><p>(C2) 多羽复叶耳蕨-尖连蕊茶-猴欢喜/钩锥群落（<em>Arachniodes
-amoena</em> -<em>Camellia cuspidata</em>-<em>Sloanea
+amoena</em>-<em>Camellia cuspidata</em>-<em>Sloanea
 sinensis</em>/<em>Castanopsis tibetana</em> Comm.)</p>
 <p>分布在浙江龙泉（EBLF书中表5-73；曾称：尖连蕊茶-猴欢喜/钩锥群落)</p></li>
 <li><p>(C3) 山姜-鲫鱼胆-深山含笑/钩锥群落(<em>Alpinia
@@ -345,20 +345,19 @@ roxburghiana</em>/<em>Castanopsis tibetana</em>）</p>
 <li><p>(C8) 柏拉木-闽粤石楠/钩锥群落（<em>Blastus
 cochinchinensis</em>-<em>Photinia benthamiana</em>/<em>Castanopsis
 tibetana</em> Comm.）</p>
-<p>分布在广东始兴、南雄、乳源,（EBLF书中表5-76；曾称：柏拉木-闽粤石楠 /
-钩锥群落)</p></li>
+<p>分布在广东始兴、南雄、乳源，（EBLF书中表5-76；曾称：柏拉木-闽粤石楠/钩锥群落)</p></li>
 <li><p>(C9）金毛狗-大叶水团花/钩锥群落（<em>Cibotium
 barometz</em>-<em>Adina polycephala</em>/<em>Castanopsis tibetana</em>
 Comm.）</p>
-<p>分布在广西贺县，引自：《广西植被志要》书中表W5.115-116，原称：？？？（王献溥等，2001）</p></li>
+<p>分布在广西贺县，引自：《广西植被志要》书中表W5.115-116（王献溥等，2001）</p></li>
 <li><p>(C10）东方乌毛蕨-广东杜鹃/钩锥群落（<em>Cibotium
 barometz</em>-<em>Rhododendron kwangtungense</em>/<em>Castanopsis
 tibetana</em> Comm.）</p>
-<p>分布在广西贺县，引自：《广西植被志要》书中表号W5.117-118，原称：？？？（王献溥等，2001）</p></li>
+<p>分布在广西贺县，引自：《广西植被志要》书中表号W5.117-118（王献溥等，2001）</p></li>
 <li><p>(C11）中华复叶耳蕨-小果石笔木/钩锥群落（<em>Arachniodes
 chinensis</em>- <em>Tutcheria microcarpa</em>/<em>Castanopsis
 tibetana</em> Comm.）</p>
-<p>分布在广西金秀，引自《广西植被》书中表格号S9.63-64；原称：？？？（苏宗明等，2001）</p></li>
+<p>分布在广西金秀，引自《广西植被》书中表格号S9.63-64（苏宗明等，2001）</p></li>
 </ul>
 </div>
 </div>
