--- a/Alli-1a13.html
+++ b/Alli-1a13.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,14 +280,15 @@ $(document).ready(function () {
 <div id="毛锥-鹿角锥-罗浮锥群团" class="section level2">
 <h2><span style="color: blue;">毛锥-鹿角锥-罗浮锥群团</span></h2>
 </div>
-<div id="castanopsis-fordii-c.-lamontii-c.-fabri-all."
+<div id="castanopsis-fordii---c.-lamontii---c.-fabri-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis fordii</em>-<em>C.
-lamontii</em>-<em>C. fabri</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis fordii</em> - <em>C.
+lamontii</em> - <em>C. fabri</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>罗浮锥、鹿角锥和毛锥，三者有时混生</p>
+<p>罗浮锥（<em>Castanopsis fabri</em>）、鹿角锥（<em>C.
+lamontii</em>）、毛锥（<em>C. fordii</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -295,28 +296,28 @@ lamontii</em>-<em>C. fabri</em> All.</span></h2>
 <ul>
 <li><p>乔木层：红楠（<em>Machilus
 thunbergii</em>）、黄杞（<em>Engelhardia
-roxburghiana</em>），鹅掌柴（<em>Schefflera
-octophylla</em>），黄丹木姜子（<em>Litsea
-elongata</em>）、罗浮柿（<em>Diospyros morrisiana</em>），鼠刺（<em>Itea
+roxburghiana</em>）、鹅掌柴（<em>Schefflera
+octophylla</em>）、黄丹木姜子（<em>Litsea
+elongata</em>）、罗浮柿（<em>Diospyros morrisiana</em>）、鼠刺（<em>Itea
 chinensis</em>）</p></li>
-<li><p>灌木层：杜茎山（<em>Maesa japonica</em>），草珊瑚（<em>Sarcandra
-glabra</em>）朱砂根（<em>Ardisia
-crenata</em>），以及遍南方分布的九节木（<em>Psychotria
+<li><p>灌木层：杜茎山（<em>Maesa japonica</em>）、草珊瑚（<em>Sarcandra
+glabra</em>）、朱砂根（<em>Ardisia
+crenata</em>）、以及遍南方分布的九节木（<em>Psychotria
 rubra</em>）、罗伞树（<em>Ardisia quinquegona</em>）</p></li>
 <li><p>草本层：狗脊（<em>Woodwardia japonica</em>）、十字薹草（<em>Carex
-cruciata</em>），淡竹叶（<em>Lophatherum
-gracile</em>），艳山姜（<em>Alpinia
-zerumbet</em>），金毛狗（<em>Cibotium barometz</em>）</p></li>
+cruciata</em>）、淡竹叶（<em>Lophatherum
+gracile</em>）、艳山姜（<em>Alpinia
+zerumbet</em>）、金毛狗（<em>Cibotium barometz</em>）</p></li>
 <li><p>藤本植物：既有菝葜（<em>Smilax
 china</em>）、络石（<em>Trachelospermum
-jasminoides</em>），藤黄檀（<em>Dalbergia
+jasminoides</em>）、藤黄檀（<em>Dalbergia
 hancei</em>）；又有南方分布的瓜馥木（<em>Fissistigma
 oldhamii</em>）、网脉酸藤子（<em>Embelia rudis</em>）等</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含22个群落" class="section level3">
-<h3>目前包含22个群落</h3>
+<div id="目前包含15个群落" class="section level3">
+<h3>目前包含15个群落</h3>
 <ul>
 <li><p>(C1）长蕊杜鹃/罗浮锥群落(<em>Rhododendron
 stamineum</em>/<em>Castanopsis fabri</em> Comm.)</p>
@@ -325,9 +326,9 @@ stamineum</em>/<em>Castanopsis fabri</em> Comm.)</p>
 chinensis</em>-<em>Syzygium grijsii</em>/<em>Castanopsis fabri</em>
 Comm.)</p>
 <p>分布在福建天宝岩（EBLF书中表5-81; 曾称：轮叶蒲桃/罗浮锥群落)</p></li>
-<li><p>(C3) 八瓣糙果茶 -刺毛杜鹃/罗浮锥群落(<em>Camellia octopetala</em>
+<li><p>(C3) 八瓣糙果茶-刺毛杜鹃/罗浮锥群落(<em>Camellia octopetala</em>
 -<em>Rhododendron henryi</em>/<em>Castanopsis fabri</em> Comm.)</p>
-<p>分布在福建屏南,引自：《福建森林》（福建森林编委会）??，（EBLF书中表5-82;
+<p>分布在福建屏南，引自：《福建森林》（福建森林编委会）??，（EBLF书中表5-82;
 曾称：弯蒴杜鹃/罗浮锥群落)</p></li>
 <li><p>(C4) 厚叶鼠刺/罗浮锥群落(<em>Pteris insignis</em>-<em>Itea
 coriacea</em>/ <em>Castanopsis fabri</em> Comm.)</p>
@@ -337,15 +338,15 @@ coriacea</em>/ <em>Castanopsis fabri</em> Comm.)</p>
 sparsa</em>-<em>Lasianthus longicauda</em>/<em>Castanopsis fabri</em>
 Comm..)</p>
 <p>分布在广西兴安猫儿山（EBLF书中表5-85/2；曾称：中华石楠/罗浮锥群落)</p></li>
-<li><p>(C6) 稀疏鳞毛蕨-鸭公树∕罗浮锥群落(D<em>ryopteris
+<li><p>(C6) 稀疏鳞毛蕨-鸭公树/罗浮锥群落(D<em>ryopteris
 sparsa</em>-<em>Neolitsea chuii</em>-<em>Castanopsis fabri</em>
 Comm.)</p>
 <p>分布在广西灵川潮田（EBLF书中表5-85/3；曾称：鸭公树/罗浮锥群落)</p></li>
-<li><p>(C7) 青果榕-密花树∕罗浮锥群落（<em>Ficus variegata
+<li><p>(C7) 青果榕-密花树/罗浮锥群落（<em>Ficus variegata
 </em>var.<em>chlorocarpa</em>-<em>Rapanea
 neriifolia</em>/<em>Castanopsis fabri</em> Comm.）</p>
 <p>分布在香港（EBLF书中表8-22/1-2）;
-曾称：青果榕-密花树∕罗浮锥群落)</p></li>
+曾称：青果榕-密花树/罗浮锥群落)</p></li>
 <li><p>(C8) 毛萼红果树-香花枇杷/西南木荷-罗浮锥群落（<em>Stranvaesia
 amphidoxa</em>-<em>Eriobotrya fragrans</em>/<em>Schima
 wallichii</em>-<em>Castanopsis fabri</em> Comm.）</p>
@@ -353,30 +354,30 @@ wallichii</em>-<em>Castanopsis fabri</em> Comm.）</p>
 从季节常绿阔叶林中移来)</p></li>
 <li><p>(C9）桃叶石楠-密花树∕米槠-罗浮锥群落（<em>Photinia
 prunifolia</em>-<em>Rapanea neriifolia</em>/<em>Castanopsis
-carlesii</em> -<em>Castanopsis fabri</em> Comm.）</p>
+carlesii</em>-<em>Castanopsis fabri</em> Comm.）</p>
 <p>分布在广东南昆山（EBLF书中表8-23; 曾称：密花树/鹿角锥群落)</p></li>
 <li><p>(C10）九管血-马尾松/鹿角锥-罗浮锥群落(<em>Ardisia
 brevicaulis</em>-<em>Castanopsis fabri</em>+<em>Castanopsis
-lomontii</em>- <em>Daphniphyllum glaucesens</em>-<em>Woodwardia
+lomontii</em>-<em>Daphniphyllum glaucesens</em>-<em>Woodwardia
 japonica</em> Comm.)</p>
 <p>分布在江西井冈山（原书表5-83; 曾称：虎皮楠/罗浮锥群落)</p></li>
-<li><p>(C11）里白-鹿角杜鹃 /鹿角锥群落(<em>Hicriopteris glauca</em>-
+<li><p>(C11）里白-鹿角杜鹃/鹿角锥群落(<em>Hicriopteris glauca</em>-
 <em>Rhododendron latoucheae</em>/<em>Castanopsis lomontii</em>
 Comm.)</p>
 <p>分布在浙江泰顺（EBLF书中表8-79）(曾称：刺毛杜鹃/鹿角锥群落)</p></li>
-<li><p>(C12）红盖鳞毛蕨-草珊瑚 /鹿角锥群落(<em>Dryopteris
-erythrosora</em> -<em>Sarcandra glabra</em>/<em>Castanopsis
-lamontii</em> Comm.)</p>
+<li><p>(C12）红盖鳞毛蕨-草珊瑚/鹿角锥群落(<em>Dryopteris
+erythrosora</em>-<em>Sarcandra glabra</em>/<em>Castanopsis lamontii</em>
+Comm.)</p>
 <p>分布在江西井冈山（EBLF书中表5-80）(曾称：草珊瑚-杜茎山/鹿角锥群落)</p></li>
-<li><p>(C13）鹅掌柴-蒲桃/ 鹿角锥群落（<em>Schefflera
+<li><p>(C13）鹅掌柴-蒲桃/鹿角锥群落（<em>Schefflera
 octophylla</em>-<em>Syzygium jambos</em>/<em>Castanopsis lamontii</em>
 Comm.）</p>
 <p>香港（EBLF书中表8-22/3; 曾称：蒲桃-鹅掌柴/鹿角锥群落)</p></li>
 <li><p>(C14) 草珊瑚-长瓣金花树/毛锥群落(<em>Sarcandra
-glabra</em>-<em>Blastus apricus</em> var.
-<em>longiflorus</em>/<em>Castinopsis fordii</em> Comm.)</p>
-<p>分布在江西安远（EBLF书中表5-87; 曾称：刺毛杜鹃/鹿角锥群落)。</p></li>
-<li><p>(C15）刚竹-毛冬青∕毛锥群落(<em>Phyllostachys sulphurea
+glabra</em>-<em>Blastus apricus var. longiflorus</em>/<em>Castinopsis
+fordii</em> Comm.)</p>
+<p>分布在江西安远（EBLF书中表5-87; 曾称：刺毛杜鹃/鹿角锥群落)</p></li>
+<li><p>(C15）刚竹-毛冬青/毛锥群落(<em>Phyllostachys sulphurea
 cv.viridis</em>-<em>Ilex pubescens</em>/<em>Castanopsis fordii
 </em>Comm.)</p>
 <p>分布在福建三明（EBLF书中表8-86; 曾称：刺毛杜鹃/鹿角锥群落)</p></li>
