--- a/Alli-1a14.html
+++ b/Alli-1a14.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,22 +281,25 @@ $(document).ready(function () {
 <h2><span style="color: blue;">四川大头茶-栲-湖北锥群团</span></h2>
 </div>
 <div
-id="polyspora-speciosa-castanopsis-fargesii-castanopsis-hupehensis-all."
+id="polyspora-speciosa---castanopsis-fargesii---castanopsis-hupehensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Polyspora
-speciosa</em>-<em>Castanopsis fargesii</em>-<em>Castanopsis
-hupehensis</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Polyspora speciosa</em> -
+<em>Castanopsis fargesii</em> - <em>Castanopsis hupehensis</em>
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>短刺米槠、栲树、四川大头茶，它们可混生，也可分别成为单优种群落</p>
+<p>短刺米槠（<em>Castanopsis carlesii var.
+spinulosa</em>）、栲树（<em>Castanopsis
+fargesii</em>）、四川大头茶（<em>Polyspora
+speciosa</em>），它们可混生，也可分别成为单优种群落</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：粉叶新木姜子（<em>Neolitsea aurata</em> var.
-<em>glauca</em>）、日本杜英（<em>Elaeocarpus
+<li><p>乔木层：粉叶新木姜子（<em>Neolitsea aurata var.
+glauca</em>）、日本杜英（<em>Elaeocarpus
 japonicus</em>）、网脉山龙眼（<em>Helicia
 reticulata</em>）、银木荷（<em>Schima
 argentea</em>）、五列木（<em>Pentaphylax euryoides</em>）</p></li>
@@ -307,59 +310,54 @@ setchuensis</em>）、江南越桔（<em>Vaccinium
 mandarinorum</em>）、矩圆叶鼠刺（<em>Itea
 oblonga</em>）、瑞木（<em>Corylopsis
 multiflora</em>）、云南粗叶木（<em>Lasianthus henryi</em>）</p></li>
-<li><p>草本层：狗脊（<em>Woodwardia japonica</em>），百两金（<em>Ardisia
-crispa</em>），草珊瑚（<em>Sarcandra glabra</em>），山姜（<em>Alpinia
+<li><p>草本层：狗脊（<em>Woodwardia japonica</em>）、百两金（<em>Ardisia
+crispa</em>）、草珊瑚（<em>Sarcandra glabra</em>）、山姜（<em>Alpinia
 japonica</em>）</p></li>
 <li><p>藤本植物：香花崖豆藤（<em>Millettia
-dielsiana</em>），钝药野木瓜（<em>Stauntonia leucantha</em>）</p></li>
+dielsiana</em>）、钝药野木瓜（<em>Stauntonia leucantha</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
 <div id="目前包含9个群落" class="section level3">
 <h3>目前包含9个群落</h3>
 <ul>
-<li><p>(C1）苦竹-马银花-四川大头茶/短刺米槠群落 (<em>Pleioblastus</em>
--<em>Rhododendron ovatum</em>-<em>Gordonia
-acuminata</em>/<em>Castanopsis carlesii</em> var. <em>spinulosa</em>
-Comm.)</p>
+<li><p>(C1）苦竹-马银花-四川大头茶/短刺米槠群落
+(<em>Pleioblastus</em>-<em>Rhododendron ovatum</em>-<em>Gordonia
+acuminata</em>/<em>Castanopsis carlesii var. spinulosa</em> Comm.)</p>
 <p>分布在重庆江津县四面山（EBLF书中表5-88/1；曾称：马银花-四川大头茶/短刺米槠群落)</p></li>
 <li><p>(C2) 四川蒲桃-粉叶新木姜/银木荷-短刺米槠群落(<em>Syzygium
-szechuanense</em>-<em>Neolitsea aurata</em> var.
-<em>glauca</em>/<em>Schima argenta</em> -<em>Castanopsis carlesii</em>
-var. <em>spinulosa</em> Comm.)</p>
+szechuanense</em>-<em>Neolitsea aurata var. glauca</em>/<em>Schima
+argenta</em>-<em>Castanopsis carlesii var. spinulosa</em> Comm.)</p>
 <p>分布在重庆江津县四面山（EBLF书中表5-88/2；曾称：粉叶新木姜/银木荷-短刺米槠群落)</p></li>
-<li><p>(C3) 粉叶新木姜/马尾松-四川大头茶群落(<em>Neolitsea aurata</em>
-var. <em>glauca</em>/<em>Pinus massoniana</em>-<em>Gordonia
-acuminata</em> Comm.)</p>
+<li><p>(C3) 粉叶新木姜/马尾松-四川大头茶群落(<em>Neolitsea aurata var.
+glauca</em>/<em>Pinus massoniana</em>-<em>Gordonia acuminata</em>
+Comm.)</p>
 <p>分布在重庆缙云山（EBLF书中表5-89；曾称：粉叶新木姜/四川大头茶群落)</p></li>
 <li><p>(C4) 小花红苞木/木荷-短刺米槠群落(<em>Rhodoleia
-parvipetala</em>/<em>Schima superba</em>-<em>Castanopsis carlesii</em>
-var. <em>spinulosa</em> Comm.)</p>
+parvipetala</em>/<em>Schima superba</em>-<em>Castanopsis carlesii var.
+spinulosa</em> Comm.)</p>
 <p>分布在贵州茂兰立化（EBLF书中表5-90），曾称：小花红花荷/扁刺锥群落)</p></li>
 <li><p>(C5）东方乌毛蕨-云南粗叶木/短刺米槠群落（<em>Blechnum
-orientale</em>- <em>Lasianthus henryi</em>/<em>Castanopsis carlesii</em>
-var. <em>spinulosa</em> Comm.）</p>
+orientale</em>-<em>Lasianthus henryi</em>/<em>Castanopsis carlesii var.
+spinulosa</em> Comm.）</p>
 <p>引自：《广西植被志要》（王献溥等，2014）</p></li>
 <li><p>(C6) 纤细半蒴苣薹-薄果猴欢喜/短刺米槠-栲树群落（<em>Hemiboea
-gracilis</em>-<em>Sloanea leptocarpa</em>/<em>Castanopsis carlesii</em>
-var. <em>spinulosa</em>-<em>Castanopsis fargesii</em> Comm.）</p>
+gracilis</em>-<em>Sloanea leptocarpa</em>/<em>Castanopsis carlesii var.
+spinulosa</em>-<em>Castanopsis fargesii</em> Comm.）</p>
 <p>分布在重庆缙云寺，（EBLF书中表5-56/1），曾称：四川山矾
 /短刺米槠-栲树群落)</p></li>
 <li><p>(C7) 落地梅-茜草树/短刺米槠 -栲树群落（<em>Lysimachia
 paridiformis</em>-<em>Aidia cochinchinensis</em>/<em>Castanopsis
-carlesii</em> var. <em>spinulosa</em>-<em>Castanopsis fargesii</em>
-Comm.）</p>
+carlesii var. spinulosa</em>-<em>Castanopsis fargesii</em> Comm.）</p>
 <p>分布在重庆高观音（EBLF书中表5-56/2），曾称四川山矾
 /短刺米槠-栲树群落)</p></li>
 <li><p>(C8) 樟树/杉木-栲树群落（<em>Cinnamomum
 camphora</em>/<em>Cunninghamia lanceolata</em>-<em>Castanopsis
-fargesii</em>-<em>Castanopsis carlesii</em> var. <em>spinulosa</em>
-Comm.）</p>
+fargesii</em>-<em>Castanopsis carlesii var. spinulosa</em> Comm.）</p>
 <p>分布在重庆青城山（EBLF书中表5-63），曾称：青城山栲树林)</p></li>
 <li><p>(C9）川桂/杉木-栲树群落（<em>Cinnamomum
 camphora</em>/<em>Cunninghamia lanceolata</em>-<em>Castanopsis
-fargesii</em>-<em>Castanopsis carlesii</em> var. <em>spinulosa</em>
-Comm.）</p>
+fargesii</em>-<em>Castanopsis carlesii var. spinulosa</em> Comm.）</p>
 <p>分布在重庆音（EBLF书中表5-62），曾称：三峡库区栲树群落)</p></li>
 </ul>
 </div>
