--- a/Alli-1a15.html
+++ b/Alli-1a15.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,14 +280,16 @@ $(document).ready(function () {
 <div id="中华木荷-钝齿木荷-扁刺锥群团" class="section level2">
 <h2><span style="color: blue;">中华木荷-钝齿木荷-扁刺锥群团</span></h2>
 </div>
-<div id="schima-sinensis-schima-crenata-castanopsis-platycantha-all."
+<div
+id="schima-sinensis---schima-crenata---castanopsis-platycantha-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Schima sinensis</em>-<em>Schima
-crenata</em>-<em>Castanopsis platycantha</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Schima sinensis</em> - <em>Schima
+crenata</em> - <em>Castanopsis platycantha</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>扁刺锥、钝齿木荷、华木荷</p>
+<p>扁刺锥（<em>Castanopsis platycantha</em>）、钝齿木荷（<em>Schima
+crenata</em>）、中华木荷（<em>Schima sinensis</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -324,21 +326,21 @@ platyacantha</em>+<em>Schima crenata</em> Ass.）</p>
 openshawianum</em>/<em>Sycopsis triplinervis</em>-<em>Castanopsis
 platyacantha</em> Ass.）</p>
 <p>分布在云南大江（EBLF书中表5-93/2；曾称：尖叶杜鹃/三脉水丝梨-扁刺锥群丛)</p></li>
-<li><p>(A3) 川拟水龙骨-鸭公树/ 米心水青冈-扁刺锥群丛（<em>Neolitsea
+<li><p>(A3) 川拟水龙骨-鸭公树/米心水青冈-扁刺锥群丛（<em>Neolitsea
 chuii</em>-<em>Fagus engleriana</em>/<em>Castanopsis platyacantha</em>
 Comm.）</p>
 <p>分布在云南威信（EBLF书中表5-93/3），(书中原称：鸭公树/米心水青冈-扁刺锥群落)</p></li>
-<li><p>(C1) 八月竹-峨眉四照花/华木荷-扁刺锥群落（<em>Chimonobambusa
-szechuanensis</em>-<em>Dendrobenthamia capitata</em> var.
-<em>emeiensis</em>/<em>Schima sinensis</em>-<em>Castanopsis
+<li><p>(C1) 八月竹-峨眉四照花/中华木荷-扁刺锥群落（<em>Chimonobambusa
+szechuanensis</em>-<em>Dendrobenthamia capitata var.
+emeiensis</em>/<em>Schima sinensis</em>-<em>Castanopsis
 platyacantha</em> Comm.）</p>
 <p>分布在峨眉山（EBLF书中表5-91；曾称：八月竹/华木荷-扁刺锥群落)。</p></li>
-<li><p>(C2) 四川山胡椒/华木荷-扁刺锥群落（<em>Lindera
+<li><p>(C2) 四川山胡椒/中华木荷-扁刺锥群落（<em>Lindera
 setchuenensis</em>/<em>Schima sinensis</em>-<em>Castanopsis
 platyacantha</em> Comm.）</p>
 <p>分布在四川瓦屋山（EBLF书中表5-92/1-2；曾称：四川山胡椒/中华木荷-扁刺锥群落)</p></li>
 <li><p>(C3) 狗脊-细枝柃-双齿山茉莉/扁刺锥群落（<em>Woodwardia
-japonica</em> -<em>Eurya loquaiana</em>-<em>Huodendron
+japonica</em>-<em>Eurya loquaiana</em>-<em>Huodendron
 biaristatumi</em>/<em>Castanopsis platyacantha</em> Comm.）</p>
 <p>分布在广西</p></li>
 </ul>
