--- a/Alli-1a16.html
+++ b/Alli-1a16.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="天竺桂-红楠群团" class="section level2">
 <h2><span style="color: blue;">天竺桂-红楠群团</span></h2>
 </div>
-<div id="cinnamomum-japonicum-machilus-thunbergii-all."
+<div id="cinnamomum-japonicum---machilus-thunbergii-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Cinnamomum
-japonicum</em>-<em>Machilus thunbergii</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Cinnamomum japonicum</em> -
+<em>Machilus thunbergii</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -323,7 +323,7 @@ americana</em>-<em>Eurya emarginata</em>/<em>Machilus thunbergii</em>
 Comm.)</p>
 <p>分布在上海大金山（EBLF书中表5-99；曾称：滨柃/ 红楠群落)</p></li>
 <li><p>(C2）异羽复叶耳蕨-尖连蕊茶-红毒茴/红楠群落(<em>Machilus
-thunbergii</em> +<em>Illicium lanceolatum</em>-<em>Camellia
+thunbergii</em>+<em>Illicium lanceolatum</em>-<em>Camellia
 cuspidata</em>-<em>Woodwardia japonica</em> Comm.)</p>
 <p>分布在浙江遂昌（EBLF书中表5-100；曾称：尖连蕊茶/ 红楠群落)</p></li>
 <li><p>(C3）茜草树-短柱柃/青冈-红楠群落（<em>Aidia
