--- a/Alli-1a17.html
+++ b/Alli-1a17.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,48 +280,48 @@ $(document).ready(function () {
 <div id="紫楠-薄叶润楠群团" class="section level2">
 <h2><span style="color: blue;">紫楠-薄叶润楠群团</span></h2>
 </div>
-<div id="phoebe-sheareri-machilus-leptophylla-all."
+<div id="phoebe-sheareri---machilus-leptophylla-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Phoebe sheareri</em>-<em>Machilus
-leptophylla</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Phoebe sheareri</em> -
+<em>Machilus leptophylla</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>紫楠、薄叶润楠</p>
+<p>紫楠（<em>Phoebe sheareri</em>）、薄叶润楠（<em>Machilus
+leptophylla</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
 <li><p>乔木层：青冈（<em>Cyclobalanopsis
-glauca</em>），豹皮樟（<em>Litsea coreana var.
-sinensis</em>），红脉钓樟（<em>Lindera
+glauca</em>）、豹皮樟（<em>Litsea coreana var.
+sinensis</em>）、红脉钓樟（<em>Lindera
 rubronervia</em>）、红毒茴（<em>Illicium
 lanceolatum</em>）、红柴枝（<em>Meliosma
 oldhamii</em>）、红楠（<em>Machilus thunbergii</em>）</p></li>
 <li><p>灌木层：尖连蕊茶（<em>Camellia
-cuspidata</em>），毛柄连蕊茶（<em>Camellia
-fraterna</em>），三尖杉（<em>Cephalotaxus fortunei</em>）</p></li>
-<li><p>草本层：薹草（<em>Carex</em> sp.），多花黄精（<em>Polygonatum
-cyrtonema</em>），虎耳草（<em>Saxifraga
-stolonifera</em>），贯众（<em>Cyrtomium
-fortunei</em>），大西坑复叶耳蕨（<em>Arachniodes
+cuspidata</em>）、毛柄连蕊茶（<em>Camellia
+fraterna</em>）、三尖杉（<em>Cephalotaxus fortunei</em>）</p></li>
+<li><p>草本层：薹草（<em>Carex</em> spp.）、多花黄精（<em>Polygonatum
+cyrtonema</em>）、虎耳草（<em>Saxifraga
+stolonifera</em>）、贯众（<em>Cyrtomium
+fortunei</em>）、大西坑复叶耳蕨（<em>Arachniodes
 daxikengensis</em>）</p></li>
 <li><p>藤本植物：络石（<em>Trachelospermum
-jasminoides</em>），三叶木通（<em>Akebia
-trifoliata</em>），常春藤（<em>Hedera nepalensis</em> var.
-<em>Sinensis</em>），有较多喜湿植物</p></li>
+jasminoides</em>）、三叶木通（<em>Akebia
+trifoliata</em>）、常春藤（<em>Hedera nepalensis var.
+Sinensis</em>）等多喜湿植物</p></li>
 </ul>
 <p><br></p>
 </div>
 <div id="目前包含3个群落" class="section level3">
 <h3>目前包含3个群落</h3>
 <ul>
-<li><p>(C1）虎耳草-红脉钓樟/ 紫楠 (<em>Saxifraga
+<li><p>(C1）虎耳草-红脉钓樟/紫楠 (<em>Saxifraga
 stolonifera</em>-<em>Lindera rubronervia</em>/<em>Phoebe sheareri</em>
 Comm.)</p>
-<p>分布在安徽太平，泾县（EBLF书中表5-107/1-2；曾称：红脉钓樟/
-紫楠群落)</p></li>
+<p>分布在安徽太平，泾县（EBLF书中表5-107/1-2；曾称：红脉钓樟/紫楠群落)</p></li>
 <li><p>(C2）大西坑复叶耳蕨-红毒茴/紫楠-薄叶润楠群落(<em>Arachniodes
 daxikengensis</em>-<em>Illicium lanceolata</em>/<em>Phoebe
 sheareri</em>-<em>Machilus leptophylla</em> Comm.)</p>
