--- a/Alli-1a18.html
+++ b/Alli-1a18.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,35 +280,36 @@ $(document).ready(function () {
 <div id="闽楠-刨花润楠群团" class="section level2">
 <h2><span style="color: blue;">闽楠-刨花润楠群团</span></h2>
 </div>
-<div id="phoebe-bournei-machilus-pauhoi-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Phoebe bournei</em>-<em>Machilus
-pauhoi</em> All.</span></h2>
+<div id="phoebe-bournei---machilus-pauhoi-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Phoebe bournei</em> -
+<em>Machilus pauhoi</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>闽楠、刨花润楠</p>
+<p>闽楠（<em>Phoebe bournei</em>）、刨花润楠（<em>Machilus
+pauhoi</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
 <li><p>乔木层：山槐（<em>Albizia kalkora</em>）、枫香树（<em>Liquidambar
-formosana</em>），南酸枣（<em>Choerospondias
+formosana</em>）、南酸枣（<em>Choerospondias
 axillaris</em>）、木油桐（<em>Vernicia
 montana</em>）、赤杨叶（<em>Alniphyllum fortunei</em>）</p></li>
 <li><p>灌木层：杜茎山（<em>Maesa japonica</em>）、朱砂根（<em>Ardisia
-crenata</em>），枇杷叶紫珠（<em>Callicarpa
+crenata</em>）、枇杷叶紫珠（<em>Callicarpa
 kochiana</em>）、毛茶（<em>Antirhea chinensis</em>）、地桃花(<em>Urena
 lobata</em> )、方竹（<em>Chimonobambusa quadrangularis</em>）</p></li>
 <li><p>草本层：淡竹叶（<em>Lophatherum
-gracile</em>），江南星蕨（<em>Microsorum
-fortunei</em>），狗脊（<em>Woodwardia
-japonica</em>），十字薹草（<em>Carex
-cruciata</em>），东方乌毛蕨（<em>Blechnum orientale</em>）</p></li>
+gracile</em>）、江南星蕨（<em>Microsorum
+fortunei</em>）、狗脊（<em>Woodwardia
+japonica</em>）、十字薹草（<em>Carex
+cruciata</em>）、东方乌毛蕨（<em>Blechnum orientale</em>）</p></li>
 <li><p>藤本植物：三叶木通（<em>Akebia
-trifoliata</em>），网脉酸藤子（<em>Embelia
-rudis</em>），广东蛇葡萄（<em>Ampelopsis
-cantoniensis</em>）。络石（<em>Trachelospermum
+trifoliata</em>）、网脉酸藤子（<em>Embelia
+rudis</em>）、广东蛇葡萄（<em>Ampelopsis
+cantoniensis</em>）、络石（<em>Trachelospermum
 jasminoides</em>）</p></li>
 </ul>
 <p><br></p>
@@ -318,15 +319,15 @@ jasminoides</em>）</p></li>
 <ul>
 <li><p>(C1）地桃花-杜茎山/闽楠群落(<em>Urena lobate</em>-<em>Maesa
 japonica</em>/<em>Phoebe bournei</em> Comm.)</p>
-<p>分布在湖南酃县（EBLF书中表5-109; c曾称：杜茎山/ 闽楠群落)</p></li>
-<li><p>(C2）蕨-毛茶/闽楠群落(<em>Pteridium aquilinum</em> var.
-<em>latiusculum</em>-<em>Antirhea chinensis</em>/<em>Phoebe bournei</em>
+<p>分布在湖南酃县（EBLF书中表5-109；曾称：杜茎山/ 闽楠群落)</p></li>
+<li><p>(C2）蕨-毛茶/闽楠群落(<em>Pteridium aquilinum var.
+latiusculum</em>-<em>Antirhea chinensis</em>/<em>Phoebe bournei</em>
 Comm.)</p>
-<p>分布在福建南平（EBLF书中表5-110；曾称：毛茶∕ 闽楠群落)</p></li>
+<p>分布在福建南平（EBLF书中表5-110；曾称：毛茶/ 闽楠群落)</p></li>
 <li><p>(C3）狗脊-方竹/ 刨花润楠群落(<em>Woodwardia japonica</em>
 -<em>Chimonobambusa quadrangularis</em>/<em>Machilus pauhoi</em>
 Comm.)</p>
-<p>分布在福建南平（EBLF书中表5-111；曾称：方竹∕ 刨花润楠群落)</p></li>
+<p>分布在福建南平（EBLF书中表5-111；曾称：方竹/ 刨花润楠群落)</p></li>
 <li><p>(C4）落地紫金牛-野锦香/刨花润楠群落(<em>Ardisia
 primulaefolia</em>-<em>Blastus cochinchinensis</em>/<em>Machilus
 pauhoi</em> Comm.)</p>
