--- a/Alli-1a19.html
+++ b/Alli-1a19.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -292,18 +292,19 @@ All.</span></h2>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li>厚皮香、山杜英、虎皮楠、软荚红豆等</li>
+<li>厚皮香（<em>Ternstroemia gymnanthera</em>）、山杜英（<em>Elaeocarpus
+sylvestris</em>）、虎皮楠（<em>Daphniphyllum
+pentandrum</em>）、软荚红豆（<em>Ormosia semicastrata</em>）等</li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含个群落" class="section level3">
-<h3>目前包含?个群落</h3>
+<div id="目前包含2个群落" class="section level3">
+<h3>目前包含2个群落</h3>
 <ul>
-<li><p>(C1) 虎皮楠∕深山含笑群落(<em>Daphniphyllum
-oldhamii</em>∕<em>Michelia maudiae</em> Comm.)</p>
+<li><p>(C1) 虎皮楠/深山含笑群落(<em>Daphniphyllum
+oldhamii</em>/<em>Michelia maudiae</em> Comm.)</p>
 <p>分布在浙江南部山区</p></li>
-<li><p>(C2) 筷子竹∕深山含笑群群落 (筷子竹∕<em>Michelia maudiae</em>
-Comm.)</p>
+<li><p>(C2) 筷子竹/深山含笑群落 (<em>Michelia maudiae</em> Comm.)</p>
 <p>分布在江西九江</p></li>
 </ul>
 </div>
