--- a/Alli-1a20.html
+++ b/Alli-1a20.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -288,27 +288,28 @@ class="section level2">
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>利川润楠、宜昌润楠，竹叶润楠,兼为鉴别种</p>
+<p>利川润楠（<em>Machilus lichuanensis</em>）、宜昌润楠（<em>M.
+ichangensis</em>）、竹叶润楠（<em>Phoebe fabrei</em>）兼为鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：长柄槭（<em>Acer longipes</em>），青榨槭（<em>Acer
-davidii</em>）、罗浮槭（<em>Acer fabri</em>），黄樟（<em>Cinnamomum
+<li><p>乔木层：长柄槭（<em>Acer longipes</em>）、青榨槭（<em>Acer
+davidii</em>）、罗浮槭（<em>Acer fabri</em>）、黄樟（<em>Cinnamomum
 porrectum</em>）、臭檀吴茱萸（<em>Euodia daniellii</em>）</p></li>
 <li><p>灌木层：金竹（<em>Phyllostachys
 sulphurea</em>）、黄丹木姜子（<em>Litsea
 elongata</em>）、香叶树（<em>Lindera communis</em>）、常山（<em>Dichroa
-febrifuga</em>）、野柿（<em>Diospyros kaki</em> var.
-<em>silvestris</em>）</p></li>
+febrifuga</em>）、野柿（<em>Diospyros kaki var.
+silvestris</em>）</p></li>
 <li><p>草本层：金线草（<em>Antenoron
-filiforme</em>），日本蛇根草（<em>Ophiorrhiza
+filiforme</em>）、日本蛇根草（<em>Ophiorrhiza
 japonica</em>）、赤车（<em>Pellionia
 radicans</em>）、悬铃叶苎麻（<em>Boehmeria tricuspis</em>）</p></li>
 <li><p>藤本植物：络石（<em>Trachelospermum
-jasminoides</em>）、常春藤（<em>Hedera nepalensis</em> var.
-<em>sinensis</em>）、三叶木通（<em>Akebia trifoliata</em>）</p></li>
+jasminoides</em>）、常春藤（<em>Hedera nepalensis var.
+sinensis</em>）、三叶木通（<em>Akebia trifoliata</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
