--- a/Alli-1a21.html
+++ b/Alli-1a21.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,13 +280,13 @@ $(document).ready(function () {
 <div id="细叶楠-楠木群团" class="section level2">
 <h2><span style="color: blue;">细叶楠-楠木群团</span></h2>
 </div>
-<div id="phoebe-hui-p.-zhennan-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Phoebe hui</em>-<em>P.
+<div id="phoebe-hui---p.-zhennan-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Phoebe hui</em> - <em>P.
 zhennan</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>楠木、细叶楠</p>
+<p>楠木（<em>Phoebe zhennan</em>）、细叶楠（<em>Phoebe hui</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -314,12 +314,11 @@ hemsleyanus</em>）</p></li>
 <ul>
 <li><p>(C1）方竹-尖叶榕/楠木群落（<em>Chimonobambusa</em> sp.- <em>Ficus
 henryi</em>/<em>Phoebe zhennan</em> Comm.）</p>
-<p>分布在峨眉山（EBLF书中表5-114；曾称：方竹- 尖叶榕 ∕
-楠木群落)</p></li>
-<li><p>(C2）大果冬青/ 白楠-细叶楠群落（<em>Ilex
+<p>分布在峨眉山（EBLF书中表5-114；曾称：方竹-尖叶榕/楠木群落)</p></li>
+<li><p>(C2）大果冬青/白楠-细叶楠群落（<em>Ilex
 macrocarpa</em>/<em>Phoebe neurantha</em>-<em>Phoebe hui</em>
 Comm.）</p>
-<p>分布在峨眉山（EBLF书中表5-115/1-2；曾称：大果冬青∕
+<p>分布在峨眉山（EBLF书中表5-115/1-2；曾称：大果冬青/
 细叶楠群落)</p></li>
 </ul>
 </div>
