--- a/Alli-1a23.html
+++ b/Alli-1a23.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,15 +281,17 @@ $(document).ready(function () {
 <h2><span style="color: blue;">元江锥-滇青冈群团</span></h2>
 </div>
 <div
-id="castanopsis-orthacantha-quercus-cyclobalanopsis-schottkyana-all."
+id="castanopsis-orthacantha---quercus-cyclobalanopsis-schottkyana-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-orthacantha</em>-<em>Quercus</em> (<em>Cyclobalanopsis</em>)
-<em>schottkyana</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis orthacantha</em> -
+<em>Quercus</em> (<em>Cyclobalanopsis</em>) <em>schottkyana</em>
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>滇青冈、元江锥，可以其中一种为优势种，或两种相互交叉为优势种</p>
+<p>滇青冈（<em>Quercus</em> (<em>Cyclobalanopsis</em>)
+<em>schottkyana</em>）、元江锥（<em>Castanopsis
+orthacantha</em>），可以其中一种为优势种，或两种相互交叉为优势种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -304,11 +306,11 @@ yuennanensis</em>）、清香木（<em>Pistacia
 weinmannifolia</em>）、山玉兰（<em>Magnolia delavayi</em>）</p></li>
 <li><p>灌木层：爆杖花（<em>Rhododendron
 spinuliferum</em>）、铁仔（<em>Myrsine
-africana</em>）、窄叶西南红山茶（<em>Camellia pitardii</em> var.
-<em>yunnanica</em>）、香叶树（<em>Lindera communis</em>）</p></li>
+africana</em>）、窄叶西南红山茶（<em>Camellia pitardii var.
+yunnanica</em>）、香叶树（<em>Lindera communis</em>）</p></li>
 <li><p>草本层：沿阶草（<em>Ophiopogon
-bodinieri</em>）、凤尾蕨（<em>Pteris cretica</em> var.
-<em>nervosa</em>）、刚莠竹（<em>Microstegium ciliatum</em>）</p></li>
+bodinieri</em>）、凤尾蕨（<em>Pteris cretica var.
+nervosa</em>）、刚莠竹（<em>Microstegium ciliatum</em>）</p></li>
 <li><p>藤本植物：马钱叶菝葜（<em>Smilax
 lunglingensis</em>）、土茯苓（<em>Smilax
 glabra</em>）、长托菝葜（<em>Smilax ferox</em>）</p></li>
@@ -329,12 +331,12 @@ glaucoides</em> Ass.）</p>
 <li><p>(A3）云南泡花树-山玉兰/元江锥-滇青冈群落（<em>Cyclobalanopsis
 glaucoides</em>-<em>Magnolia delavayi</em>-<em>Meliosma yunnanensis</em>
 Comm.）</p>
-<p>分布于嵩明县，富民县（EBLF书中表6-5/2-3；曾称。云南泡花树-山玉兰/滇青冈群落）</p></li>
-<li><p>(A4) 滇山茶-云南杨梅-白柯∕滇青冈-元江锥群丛（M<em>yrica
+<p>分布于嵩明县，富民县（EBLF书中表6-5/2-3；曾称：云南泡花树-山玉兰/滇青冈群落）</p></li>
+<li><p>(A4) 滇山茶-云南杨梅-白柯/滇青冈-元江锥群丛（<em>Myrica
 nana</em>-<em>Lithocarpus dealbatus</em>/<em>Castanopsis
 orthacantha</em> Ass.）</p>
 <p>分布于昆明筇竹寺（EBLF书中表6-8/2；曾称:
-云南杨梅-白柯∕元江锥群丛）</p></li>
+云南杨梅-白柯/元江锥群丛）</p></li>
 <li><p>(A5) 毛杨梅-银木荷/元江锥群丛（<em>Myrica
 exculenta</em>-<em>Schima argentea</em>/<em>Castanopsis orthacantha</em>
 Ass.）</p>
@@ -342,14 +344,14 @@ Ass.）</p>
 <li><p>(C1) 野八角-白穗柯/元江锥群落（<em>Illicium
 simonsii</em>-<em>Lithocarpus craibianus</em>/<em>Castanopsis
 orthacantha</em> Comm.）</p>
-<p>分布于禄劝县，嵩明县，（EBLF书中表6-8/3；曾称:野八角-白穗柯/元江锥群落）</p></li>
+<p>分布于禄劝县，嵩明县，（EBLF书中表6-8/3；曾称：野八角-白穗柯/元江锥群落）</p></li>
 <li><p>(C2) 南亚枇杷-清香木∕滇青冈群落（<em>Eriobotrya
 bengalensis</em>-<em>Pistacia weinmannifolia</em>/ <em>Cyclobalanopsis
 glaucoides</em> Comm.）</p>
 <p>分布于武定狮子山（EBLF书中表6-8/1；曾称：云南木犀榄-清香木∕滇青冈群丛）</p></li>
 <li><p>(C3）金沙槭/滇青冈群落（<em>Acer paxii</em>/<em>Cyclobalanopsis
 glaucoides</em> Comm.）</p>
-<p>分布于西昌（EBLF书中表6-6；曾称西昌滇青冈林）</p></li>
+<p>分布于西昌（EBLF书中表6-6；曾称：西昌滇青冈林）</p></li>
 </ul>
 </div>
 </div>
