--- a/Alli-1a24.html
+++ b/Alli-1a24.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,15 +280,17 @@ $(document).ready(function () {
 <div id="高山锥-黄毛青冈群团" class="section level2">
 <h2><span style="color: blue;">高山锥-黄毛青冈群团</span></h2>
 </div>
-<div id="castanopsis-delavayi-quercus-cyclobalanopsis-delavayi-all."
+<div id="castanopsis-delavayi---quercus-cyclobalanopsis-delavayi-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-delavayi</em>-<em>Quercus</em> (<em>Cyclobalanopsis</em>)
-<em>delavayi</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis delavayi</em> -
+<em>Quercus</em> (<em>Cyclobalanopsis</em>) <em>delavayi</em>
+All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>黄毛青冈和高山锥，可以其中一种或两种为优势种组成群落</p>
+<p>黄毛青冈（<em>Quercus</em> (<em>Cyclobalanopsis</em>)
+<em>delavayi</em>）和高山锥（<em>Castanopsis
+delavayi</em>），可以其中一种或两种为优势种组成群落</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -303,19 +305,19 @@ africana</em>）、野拔子（<em>Elsholtzia
 rugulosa</em>）、水红木（<em>Viburnum
 cylindricum</em>）外，还有乌鸦果（<em>Vaccinium
 fragile</em>）、沙针（<em>Osyris
-wightiana</em>），大叶小檗（<em>Berberis
+wightiana</em>）、大叶小檗（<em>Berberis
 ferdinandi</em>-<em>coburgii</em>）、西南栒子（<em>Cotoneaster
-franchetii</em>）、绒毛野丁香（<em>Leptodermis potanini</em> var.
-<em>tamentosa</em>）</p></li>
+franchetii</em>）、绒毛野丁香（<em>Leptodermis potanini var.
+tamentosa</em>）</p></li>
 <li><p>草本层：除沿阶草（<em>Ophiopogon
 bodinieri</em>）、薹草（<em>Carex</em>
 spp.）外，还有钩苞大丁草（<em>Gerbera
 delavayi</em>）、尖裂假瘤蕨（<em>Phymatopteris
 oxyloba</em>）、阳荷（<em>Zingiber
-striolatum</em>），一把伞南星（<em>Arisaema erubescens</em>）</p></li>
+striolatum</em>）、一把伞南星（<em>Arisaema erubescens</em>）</p></li>
 <li><p>藤本植物：记录较少，较多的是：土茯苓（<em>Smilax
-glabra</em>），高原黄檀（<em>Dalbergia yunnanensis</em> var.
-<em>collettii</em>），粘山药（<em>Dioscorea
+glabra</em>、高原黄檀（<em>Dalbergia yunnanensis var.
+collettii</em>）、粘山药（<em>Dioscorea
 hemsleyi</em>）、小花青藤（<em>Illigera parviflora</em>）</p></li>
 </ul>
 <p><br></p>
@@ -338,7 +340,7 @@ delavayi</em> Ass.）</p>
 <li><p>(C1）短萼海桐/滇青冈+高山锥-群落（<em>Cyclobalanopsis
 glaucoides</em>+<em>Castanopsis delavayi</em>-<em>Pittosporum
 brevicalyx</em> Comm.）</p>
-<p>分布于昆明，易门，文山（EBLF书中表6-5/1；曾称</p></li>
+<p>分布于昆明，易门，文山（EBLF书中表6-5/1）</p></li>
 <li><p>(C2) 高山栲-贵州山柳-水红木-狗脊群落（<em>Castanopsis
 delavayi</em>-<em>Clethera esguiirolii</em>-<em>Viburnum
 cylindricum</em>-<em>Woodwardia japonica</em> Comm.）</p>
