--- a/Alli-1a25.html
+++ b/Alli-1a25.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,35 +281,36 @@ $(document).ready(function () {
 <h2><span style="color: blue;">毛叶青冈-毛枝青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-kerrii-q.-cyclobalanopsis-hefleriana-all."
+id="quercus-cyclobalanopsis-kerrii---q.-cyclobalanopsis-hefleriana-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>kerrii</em>-<em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>kerrii</em> - <em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>hefleriana</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>毛叶青冈和毛枝青冈</p>
+<p>毛叶青冈（<em>Quercus</em> (<em>Cyclobalanopsis</em>)
+<em>kerrii</em>）和毛枝青冈（<em>Q.</em> (<em>Cyclobalanopsis</em>)
+<em>hefleriana</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：栓皮栎(<em>Quercus variabilis</em>), 白栎（<em>Quercus
-fabri</em>）、假吊钟(<em>Craibiodendron stellatum</em>) ,
-杨梅（<em>Myrica rubra</em>），细叶云南松（<em>Pinus yunnanensis</em>
-var. <em>tunuifolia</em>）、高山锥（<em>Castanopsis
+<li><p>乔木层：栓皮栎（<em>Quercus variabilis</em>）、 白栎（<em>Quercus
+fabri</em>）、假吊钟（<em>Craibiodendron stellatum</em>）
+、杨梅（<em>Myrica rubra</em>）、细叶云南松（<em>Pinus yunnanensis var.
+tunuifolia</em>）、高山锥（<em>Castanopsis
 delavayi</em>）、西南槲栎（<em>Quercus yuii</em>）</p></li>
 <li><p>灌木层：毛木蓝（<em>Indigofera
-hirsuta</em>），米饭花（<em>Vaccinium
+hirsuta</em>）、米饭花（<em>Vaccinium
 sprengelii</em>）、白牛胆（<em>Inula cappa</em>）</p></li>
 <li><p>草本层：石芒草（<em>Arundinella
-nepalensis</em>）、金发草（<em>Pogonatherum paniceum</em>），
+nepalensis</em>）、金发草（<em>Pogonatherum paniceum</em>）、
 十字薹草（<em>Carex cruciata</em>）</p></li>
-<li><p>藤本植物：菝葜（<em>Smilax china</em>），卵叶菝葜（<em>Smilax
-megacarpa</em>）、柳叶菝葜（<em>Smilax lanceaefolia</em> var.
-<em>lanceolata</em>）、异果崖豆藤（<em>Millettia
-heterocarpa</em>）</p></li>
+<li><p>藤本植物：菝葜（<em>Smilax china</em>）、卵叶菝葜（<em>Smilax
+megacarpa</em>）、柳叶菝葜（<em>Smilax lanceaefolia var.
+lanceolata</em>）、异果崖豆藤（<em>Millettia heterocarpa</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
@@ -319,12 +320,12 @@ heterocarpa</em>）</p></li>
 <li><p>(C1）十字苔草-毛木蓝/毛叶青冈群落（<em>Carex
 cruciata</em>-<em>Indigofera hirsuta</em>/<em>Cyclobalanopsis
 kerrii</em> Comm.）</p>
-<p>引自：《广西植被志要》（王献溥等，2014，原称：）</p></li>
+<p>引自：《广西植被志要》（王献溥等，2014）</p></li>
 <li><p>(C2) 扇叶铁线蕨 -蔓性千斤拔/毛叶青冈群落（<em>Adiantum
 flabellulatum</em>- <em>Moghania philippinensis</em>/<em>Cyclobalanopsis
 kerrii</em> Comm.）</p>
-<p>引自：《广西植被志要》（王献溥等，2014，原称：）</p></li>
-<li><p>(C3) 二花珍珠茅-野蚂蝗/ 杨梅-毛枝青冈群落（<em>Scleria
+<p>引自：《广西植被志要》（王献溥等，2014）</p></li>
+<li><p>(C3) 二花珍珠茅-野蚂蝗/杨梅-毛枝青冈群落（<em>Scleria
 biflora</em>-<em>Desmodium triangulare</em>/<em>Myrica
 rubra</em>-<em>Cyclobalanopsis hefleriana</em> Comm.）</p>
 <p>引自：《广西植被志要》（王献溥等，2014。原称：毛枝青冈-毛杨梅-毛木蓝-狗脊+芒萁群丛）</p></li>
