--- a/Alli-1a26.html
+++ b/Alli-1a26.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,14 +280,15 @@ $(document).ready(function () {
 <div id="白穗柯-麻子壳柯群团" class="section level2">
 <h2><span style="color: blue;">白穗柯-麻子壳柯群团</span></h2>
 </div>
-<div id="lithocarpus-craibianus-l.-variolosus-all."
+<div id="lithocarpus-craibianus---l.-variolosus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus
-craibianus</em>-<em>L. variolosus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus craibianus</em> -
+<em>L. variolosus</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>白穗柯和麻子壳柯，兼为鉴别种</p>
+<p>白穗柯（<em>Lithocarpus craibianus</em>）和麻子壳柯（<em>L.
+variolosus</em>），兼为鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -297,21 +298,21 @@ craibianus</em>-<em>L. variolosus</em> All.</span></h2>
 glaucoides</em>）、云南冬青（<em>Ilex
 yunnanensis</em>）、掌叶梁王茶（<em>Nothopanax
 delavayi</em>）、五加属一种（<em>Acanthopanax</em>
-sp.），此外一些立地中，高山栎类和一些温带起源的落叶树种常见，如；川西栎（<em>Quercus
+sp.），此外一些立地中，高山栎类和一些温带起源的落叶树种常见，如：川西栎（<em>Quercus
 gilliana</em>）、杈叶槭（<em>Acer robustum</em>）、疏花槭（<em>Acer
-laxiflorum</em>），滇腊瓣花（<em>Corylopsis yunnanensis</em>）</p></li>
+laxiflorum</em>）、滇腊瓣花（<em>Corylopsis yunnanensis</em>）</p></li>
 <li><p>灌木层：水红木（<em>Viburnum
 cylindricum</em>）、针齿铁仔（<em>Myrsine
 semiserrata</em>）、箭竹一种（<em>Fargesia</em>
-sp.）、木姜子一种（<em>Litsea</em> sp.）山茶属一种（<em>Camellia</em>
+sp.）、木姜子一种（<em>Litsea</em> sp.）、山茶属一种（<em>Camellia</em>
 sp.）、多种杜鹃（<em>Rhododendron</em> spp.）、 豪猪刺（<em>Berberis
-julianae</em>）、窄叶西南红山茶（<em>Camellia pitardii</em> var.
-<em>yunnanica</em>）</p></li>
+julianae</em>）、窄叶西南红山茶（<em>Camellia pitardii var.
+yunnanica</em>）</p></li>
 <li><p>草本层：吉祥草（<em>Reineckia carnea</em>）、凤尾蕨（<em>Pteris
-cretica</em> var. <em>nervosa</em>）、宽叶兔儿风（<em>Ainsliaea
+cretica var. nervosa</em>）、宽叶兔儿风（<em>Ainsliaea
 latifolia</em>）、一把伞南星（<em>Arisaema erubescens</em>）</p></li>
-<li><p>藤本植物：常春藤（<em>Hedera nepalensis</em> var.
-<em>sinensis</em>）、游藤卫矛（<em>Euonymus
+<li><p>藤本植物：常春藤（<em>Hedera nepalensis var.
+sinensis</em>）、游藤卫矛（<em>Euonymus
 vagans</em>）、滑叶藤（<em>Clematis
 fasciculiflora</em>）、扭瓦韦（<em>Lepisorus contortus</em>）</p></li>
 </ul>
@@ -320,20 +321,20 @@ fasciculiflora</em>）、扭瓦韦（<em>Lepisorus contortus</em>）</p></li>
 <div id="目前包含1个群丛3个群落" class="section level3">
 <h3>目前包含1个群丛，3个群落</h3>
 <ul>
-<li><p>(A1) 黄金凤-野八角∕白穗柯群丛（<em>Sinarundinaria</em>
+<li><p>(A1) 黄金凤-野八角/白穗柯群丛（<em>Sinarundinaria</em>
 sp.-<em>Illicium simonsii</em>/<em>Lithocarpus craibianus</em>
 Ass.）</p>
 <p>分布于禄劝县（EBLF书中表6-12）。再分：A)
-袋花忍藏刺榛-藏刺榛冬亚群丛(<em>Lonicera saccata</em> <em>Corylus
-ferox</em> var. <em>thibetica</em> Subass.)
+袋花忍藏刺榛-藏刺榛冬亚群丛(<em>Lonicera saccata</em> <em>Corylus ferox
+var. thibetica</em> Subass.)
 (EBLF书中表6-12/1），心叶兔儿风-橙花瑞香亚群丛(<em>Ainsliaea
 bonatii</em>-<em>Daphne aurantiaca</em> Subass.)
 （EBLF书中表6-12/2）</p></li>
 <li><p>(C1）滇蜡瓣花-杜鹃一种/麻子壳柯群落（<em>Corylopsis
 yunnanensis</em>-<em>Rhododendron</em> sp./<em>Lithocarpus
 variolosus</em> Comm.）</p>
-<p>分布于漾鼻县苍山（EBLF书中表6-13/1; 曾称：杜鹃-元江锥
-/麻子壳柯群落）</p></li>
+<p>分布于漾鼻县苍山（EBLF书中表6-13/1;
+曾称：杜鹃-元江锥/麻子壳柯群落）</p></li>
 <li><p>(C2) 绵毛房杜鹃-箭竹一种/麻子壳柯群落（<em>Rhododendron
 facetum</em>-<em>Fargesia</em> sp./<em>Lithocarpus variolosus</em>
 Comm.）</p>
