--- a/Alli-1a27.html
+++ b/Alli-1a27.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,14 +280,15 @@ $(document).ready(function () {
 <div id="刺壳柯-壶壳柯群团" class="section level2">
 <h2><span style="color: blue;">刺壳柯-壶壳柯群团</span></h2>
 </div>
-<div id="lithocarpus-echinotholus-l.-echinophorus-all."
+<div id="lithocarpus-echinotholus---l.-echinophorus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus
-echinotholus</em>-<em>L. echinophorus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus echinotholus</em> -
+<em>L. echinophorus</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>刺壳柯，壶壳柯</p>
+<p>刺壳柯（<em>Lithocarpus echinotholus</em>）、壶壳柯（<em>L.
+echinophorus</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -297,7 +298,7 @@ echinotholus</em>-<em>L. echinophorus</em> All.</span></h2>
 hancei</em>）、山青木（<em>Meliosma
 kirkii</em>）、滇青冈（<em>Cyclobalanopsis
 glaucoides</em>）、银木荷（<em>Schima argentea</em>）、森林榕（<em>Ficus
-neriifolia</em> var. <em>nemoralis</em>）、木莲（<em>Manglietia
+neriifolia var. nemoralis</em>）、木莲（<em>Manglietia
 fordiana</em>）、水青树（<em>Tetracentron
 sinense</em>）、瑞丽润楠（<em>Machilus
 shweliensis</em>）、乔木茵芋（<em>Skimmia arborescens</em>）</p></li>
@@ -312,14 +313,14 @@ vagans</em>）、假蒟（<em>Piper sarmentosum</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含3个群落" class="section level3">
-<h3>目前包含3个群落</h3>
+<div id="目前包含2个群丛1个群落" class="section level3">
+<h3>目前包含2个群丛，1个群落</h3>
 <ul>
-<li><p>(C1) 长蒴杜鹃-滇木荷/刺壳柯群丛（<em>Rhododendron
+<li><p>(A1) 长蒴杜鹃-滇木荷/刺壳柯群丛（<em>Rhododendron
 stenaulum</em>-<em>Schima noronhae</em>/<em>Lithocarpus
 echinotholus</em> Ass.）</p>
-<p>分布于临沧永德县（EBLF书中表6-14/1；曾称：长蒴杜鹃-滇木荷/刺壳柯群落））</p></li>
-<li><p>(C2) 细齿锡金槭-德氏木莲/刺壳柯群丛（<em>Lithocarpus
+<p>分布于临沧永德县（EBLF书中表6-14/1；曾称：长蒴杜鹃-滇木荷/刺壳柯群落）</p></li>
+<li><p>(A2) 细齿锡金槭-德氏木莲/刺壳柯群丛（<em>Lithocarpus
 echinotholus</em>-<em>Manglietia delavayi</em>-<em>Acer sikkimense</em>
 Ass.）</p>
 <p>分布于临沧镇康县大雪山（EBLF书中表6-14/2；曾称：细齿锡金槭-德氏木莲/刺壳柯群落）</p></li>
