--- a/Alli-1a28.html
+++ b/Alli-1a28.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,15 +280,15 @@ $(document).ready(function () {
 <div id="木果柯-水仙柯-截果柯群团" class="section level2">
 <h2><span style="color: blue;">木果柯-水仙柯-截果柯群团</span></h2>
 </div>
-<div id="lithocarpus-xylocarpus-l.-naiadarum-l.-truncatus-all."
+<div id="lithocarpus-xylocarpus---l.-naiadarum---l.-truncatus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus
-xylocarpus</em>-<em>L. naiadarum</em>-<em>L. truncatus</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus xylocarpus</em> -
+<em>L. naiadarum</em> - <em>L. truncatus</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>木果柯、水仙柯、截果柯</p>
+<p>木果柯（<em>Lithocarpus xylocarpus</em>）、水仙柯（<em>L.
+naiadarum</em>）、截果柯（<em>L. truncatus</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -303,13 +303,13 @@ bengalensis</em>）、乔木茵芋（<em>Skimmia
 arborescens</em>）、折柄茶（<em>Hartia
 sinensis</em>）、变色锥（<em>Castanopsis
 rufescens</em>）、大花八角（<em>Illicium
-macranthum</em>），多花含笑（<em>Michelia floribunda</em>）</p></li>
+macranthum</em>）、多花含笑（<em>Michelia floribunda</em>）</p></li>
 <li><p>灌木层：针齿铁仔（<em>Myrsine
 semiserrata</em>）、喜马拉雅珊瑚（<em>Aucuba
 himalaica</em>）、多花山矾（<em>Symplocos
 ramosissima</em>）、丛花山矾（<em>Symplocos poilanei</em>）</p></li>
-<li><p>草本层：凤尾蕨（<em>Pteris cretica</em> var.
-<em>nervosa</em>）、长柱头薹草（<em>Carex
+<li><p>草本层：凤尾蕨（<em>Pteris cretica var.
+nervosa</em>）、长柱头薹草（<em>Carex
 teinogyna</em>）、四回毛枝蕨（<em>Leptorumohra
 quadripinnata</em>）、间型沿阶草（<em>Ophiopogon
 intermedius</em>）、卵叶锦香草（<em>Phyllagathis
@@ -319,30 +319,30 @@ communis</em>）等多种喜湿植物</p></li>
 <li><p>藤本植物：叉须崖爬藤（<em>Tetrastigma
 hypoglaucum</em>）、肖菝葜（<em>Heterosmilax
 japonica</em>）、瘤茎菝葜（<em>Smilax
-granulicaulis</em>）、柔毛水龙骨（<em>Polypodiodes amoena</em>
-var.<em>pilosa</em>）、白花树萝卜（<em>Agapetes mannii</em>）</p></li>
+granulicaulis</em>）、柔毛水龙骨（<em>Polypodiodes amoena
+var.pilosa</em>）、白花树萝卜（<em>Agapetes mannii</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
 <div id="目前包含2个群丛3个群落" class="section level3">
-<h3>目前包含2个群丛3个群落</h3>
+<h3>目前包含2个群丛，3个群落</h3>
 <ul>
 <li><p>(A1) 滇西瘤足蕨-华西箭竹/变色栲-木果柯群丛（<em>Plagiogyria
 communis</em>-<em>Fargesia nitida</em>/<em>Castanopsis
 rufescens</em>-<em>Lithocarpus xylocarpus</em> Ass.）</p>
 <p>分布于景东哀牢山徐家坝（EBLF书中表6-16/1；曾称：
-华西箭竹∕变色栲-木果柯群落）</p></li>
+华西箭竹/变色栲-木果柯群落）</p></li>
 <li><p>(A2)
 卵叶锦香草-方竹-锈毛吴茱萸五加/水仙柯-截果柯群丛（<em>Phyllagathis
 ovalifolia</em>-<em>Chimonobambusa</em> sp.-<em>Acanthopanax
 evodiaefolius</em> var.<em>ferrugineus</em>/<em>Lithocarpus
-naiadarum</em> -<em>Lithocarpus truncatus</em> Comm.）</p>
+naiadarum</em> -<em>Lithocarpus truncatus</em> Ass.）</p>
 <p>分布于西畴县草果山（EBLF书中表6-17；曾称：方竹/锈毛吴茱萸五加-水仙柯群落）</p></li>
 <li><p>(C1）团花新木姜子-华西箭竹/变色栲-木果柯群丛（<em>Neolitsea
 homilantha</em>-<em>Fargesia nitida</em>/<em>Castanopsis
-rufescens</em>-<em>Lithocarpus xylocarpus</em> Ass.）</p>
+rufescens</em>-<em>Lithocarpus xylocarpus</em> Comm.）</p>
 <p>分布于景东哀牢山徐家坝（EBLF书中表6-16/2；曾称：
-华西箭竹∕变色栲-木果柯群落）</p></li>
+华西箭竹/变色栲-木果柯群落）</p></li>
 <li><p>(C2) 尖瓣瑞香-云南方竹/截果柯-木果柯群落（<em>Daphne
 acutiloba</em>-<em>Chimonobambusa yunnanensis</em>/<em>Lithocarpus
 truncatus</em>-<em>Lithocarpus xylocarpus</em> Comm.）</p>
