--- a/Alli-1a29.html
+++ b/Alli-1a29.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -282,16 +282,19 @@ $(document).ready(function () {
 style="color: blue;">薄片青冈-独龙江青冈-通麦栎-西藏栎群团</span></h2>
 </div>
 <div
-id="quercus-lamellosa-q.-kiukiangensis-q.-cyclobalanopsis-lanata-q.-cyclobalanopsis-lodicosa-all."
+id="quercus-lamellosa---q.-kiukiangensis---q.-cyclobalanopsis-lanata---q.-cyclobalanopsis-lodicosa-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Quercus lamellosa</em>-<em>Q.
-kiukiangensis</em>-<em>Q.</em> (<em>Cyclobalanopsis</em>)
-<em>lanata</em>-<em>Q.</em> (<em>Cyclobalanopsis</em>) <em>lodicosa</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Quercus lamellosa</em> - <em>Q.
+kiukiangensis</em> - <em>Q.</em> (<em>Cyclobalanopsis</em>)
+<em>lanata</em> - <em>Q.</em> (<em>Cyclobalanopsis</em>)
+<em>lodicosa</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>薄片青冈、俅江青冈、西藏栎、通麦栎</p>
+<p>薄片青冈（<em>Quercus lamellosa</em>）、俅江青冈（<em>Cyclobalanopsis
+kiukiangensis</em>）、西藏栎（<em>Q.</em> (<em>Cyclobalanopsis</em>)
+<em>lodicosa</em>）、通麦栎（<em>Q.</em> (<em>Cyclobalanopsis</em>)
+<em>lanata</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -317,8 +320,8 @@ wattii</em>）、滇西瘤足蕨（<em>Plagiogyria
 communis</em>）、奇异南星（<em>Arisaema decipiens</em>）</p></li>
 <li><p>藤本植物：西南卫矛（<em>Euonymus
 hamiltonianus</em>）、劲直菝葜（<em>Smilax
-rigida</em>）、常春藤（<em>Hedera nepalensis</em> var.
-<em>sinensis</em>）、长叶兰（<em>Cymbidium
+rigida</em>）、常春藤（<em>Hedera nepalensis var.
+sinensis</em>）、长叶兰（<em>Cymbidium
 erythraeum</em>）、藏布江树萝卜（<em>Agapetes
 praeclara</em>）、多种石韦（<em>Pyrrosia</em> spp.）</p></li>
 </ul>
@@ -337,8 +340,8 @@ alpinus</em>-<em>Cyclobalanopsis kiukiangensis</em> Comm.)</p></li>
 gambri</em>-<em>Quercus lodicosa</em>+<em>Cyclobalanopsis gambleana</em>
 Comm.）</p>
 <p>此外，在珠穆朗玛峰西侧河谷地区分布有西藏润楠林（<em>Machilus
-yunnanensis</em> var.
-<em>tibetana</em>）；在察隅、樟木、定结等地分布有曼青冈林（<em>Cyclobalaniosis
+yunnanensis var.
+tibetana</em>）；在察隅、樟木、定结等地分布有曼青冈林（<em>Cyclobalaniosis
 oxyodon</em>）和环带青冈林（<em>Quercus
 annulata</em>）（陈伟烈，1988）。西藏常绿阔叶林面积很大，群落类型很多，有待深入调查研究。含盖：《中国植被图说明书》中“薄皮青冈林”（植被图编辑委员会，2007）。</p></li>
 </ul>
