--- a/Alli-1a30.html
+++ b/Alli-1a30.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,10 +281,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">台湾窄叶青冈-台湾青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-stenophylloides-q.-cyclobalanopsis-morii-all."
+id="quercus-cyclobalanopsis-stenophylloides---q.-cyclobalanopsis-morii-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>stenophylloides</em>-Q.
+(<em>Cyclobalanopsis</em>) <em>stenophylloides</em> - Q.
 (<em>Cyclobalanopsis</em>) <em>morii</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
@@ -300,8 +300,8 @@ morii</em>），同时也是鉴别种</p>
 <li><p>乔木层：昆栏树（<em>Trochodendron
 aralioides</em>）、尖叶新木姜子（<em>Neolitsea
 acuminatissima</em>）、光柃（<em>Eurya
-glaberrima</em>）、台湾铁杉（<em>Tsuga chinensis</em> var.
-<em>formosana</em>）、玉山假沙梨（<em>Stranvaesia
+glaberrima</em>）、台湾铁杉（<em>Tsuga chinensis var.
+formosana</em>）、玉山假沙梨（<em>Stranvaesia
 niitakayamensis</em>）、虎皮楠（<em>Daphniphyllum
 oldhami</em>）</p></li>
 <li><p>灌木层：尖叶新木姜子（<em>Neolitsea
@@ -312,10 +312,10 @@ taiwaniana</em>）、玉山木姜子（<em>Litsea morrisonensis</em>）</p></li>
 rhomboidea</em>）、茯苓菜（<em>Dichrocephala
 integrifolia</em>）、台湾瘤足蕨（<em>Plagiogyria
 formosana</em>）、华中瘤足蕨（<em>Plagiogyria
-euphlebia</em>）、密花苎麻（<em>Boehmeria penduliflora</em> var.
-<em>loochooensis</em>）</p></li>
-<li><p>藤本植物：台湾常春藤（<em>Hedera rhombea</em> var.
-<em>formosana</em>）、石月（<em>Stauntonia
+euphlebia</em>）、密花苎麻（<em>Boehmeria penduliflora var.
+loochooensis</em>）</p></li>
+<li><p>藤本植物：台湾常春藤（<em>Hedera rhombea var.
+formosana</em>）、石月（<em>Stauntonia
 obovatifoliola</em>）、圆叶钻地风（<em>Schizophragma
 fauriei</em>）、波氏星蕨（<em>Microsorium buergerianum</em>）</p></li>
 </ul>
