--- a/Alli-1a31.html
+++ b/Alli-1a31.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,35 +281,37 @@ $(document).ready(function () {
 <h2><span style="color: blue;">云山青冈-长果青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-sessilifolia-q.-cyclobalanopsis-longinux-all."
+id="quercus-cyclobalanopsis-sessilifolia---q.-cyclobalanopsis-longinux-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>sessilifolia</em>-<em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>sessilifolia</em> - <em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>longinux</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>长果青冈和云山青冈，同时也是鉴别种</p>
+<p>长果青冈（<em>Q.</em> （<em>Cyclobalanopsis</em>）
+<em>longinux</em>）和云山青冈（<em>Quercus</em>
+（<em>Cyclobalanopsis</em>） <em>sessilifolia</em>），同时也是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
 <li><p>乔木层：水丝梨（<em>Sycopsis
-sinensis</em>），腺叶桂樱（<em>Laurocerasus
+sinensis</em>）、腺叶桂樱（<em>Laurocerasus
 phaeosticta</em>）、长叶木姜子（<em>Litsea
 acuminata</em>）、台湾红榨槭（<em>Acer morrisonense</em>）</p></li>
 <li><p>灌木层：早田氏冬青（<em>Ilex
 hayataiana</em>）、福建假卫矛（<em>Microtropis
 fokienensis</em>）、西施花（<em>Rhododendron
 ellipticum</em>）、海岛冬青（<em>Ilex
-goshiensis</em>），拟日本灰木（<em>Symplocos
+goshiensis</em>）、拟日本灰木（<em>Symplocos
 migoi</em>）、台湾灰木（<em>Symplocos
 formosana</em>）、细枝柃（<em>Eurya loquaiana</em>）</p></li>
 <li><p>草本层：台湾瘤足蕨（<em>Plagiogyria
 formosana</em>）、齿头鳞毛蕨（<em>Dryopteris labordei</em>）</p></li>
-<li><p>藤本植物：台湾常春藤（<em>Hedera rhombea</em> var.
-<em>formosana</em>）、飞龙掌血（<em>Toddalia
+<li><p>藤本植物：台湾常春藤（<em>Hedera rhombea var.
+formosana</em>）、飞龙掌血（<em>Toddalia
 asiatica</em>）、阿里山五味子（<em>Schisandra
 arisanensis</em>）</p></li>
 </ul>
@@ -324,24 +326,24 @@ longinux</em> Ass.）</p>
 <p>分布于太鲁阁碧绿（EBLF书中表
 7-15/2-3;表7-16；曾称：西施花/长果青冈群落；西施花/长果青冈群丛）</p></li>
 <li><p>(C1）裂羽斜方复叶耳蕨-台湾红榨槭/长果青冈群落（<em>Arachniodes
-rhomboides</em> var. <em>yakusimensis</em>-<em>Acer
+rhomboides var. yakusimensis</em>-<em>Acer
 morrisonense</em>/<em>Cyclobalanopsis longinux</em> Comm.）</p>
 <p>分布于太鲁阁慈恩（EBLF书中表7-15/1；曾称：台湾红榨槭/长果青冈群落）</p></li>
 <li><p>(C2）台湾杜鹃∕长果青冈群落（<em>Rhododendron
 formosanum</em>/<em>Cyclobalanopsis longinux</em> Comm.）</p>
 <p>分布于乌石坑大安溪，插天山（EBLF书中表7-17/a-b；曾称：台湾杜鹃∕长果青冈群落）</p></li>
-<li><p>(C3）台湾石楠-青枫∕云山青冈落（P<em>ourthiaea
+<li><p>(C3）台湾石楠-青枫∕云山青冈落（<em>Pourthiaea
 lucida</em>-<em>Acer serrulatum</em>/<em>Cyclpbalanopsis
 sessilifolia</em> Comm.）</p>
 <p>分布于达观山（EBLF书中表7-12；曾称：昆栏树/云山青冈落）</p></li>
 <li><p>(C4）台湾十大功劳-雾社木姜子/云山青冈-水丝梨落（<em>Mahonia
-japonica</em>-<em>Litsea elongata</em> var.
-<em>mushaensis</em>/<em>Cyclpbalanopsis sessilifolia</em>-<em>Sycopsis
+japonica</em>-<em>Litsea elongata var.
+mushaensis</em>/<em>Cyclpbalanopsis sessilifolia</em>-<em>Sycopsis
 sinensis</em> Comm.）</p>
 <p>分布于南插天山（EBLF书中表7-13/1；曾称：雾社木姜子/云山青冈-水丝梨落）</p></li>
 <li><p>(C5）台湾核子木-雾社木姜子/云山青冈-水丝梨落（<em>Perrottetia
-arisanensis</em>-<em>Litsea elongata</em> var.
-<em>mushaensis</em>/<em>Cyclpbalanopsis sessilifolia</em>- <em>Sycopsis
+arisanensis</em>-<em>Litsea elongata var.
+mushaensis</em>/<em>Cyclpbalanopsis sessilifolia</em>- <em>Sycopsis
 sinensis</em> Comm.）</p>
 <p>分布于南插天山（EBLF书中表7-13；曾称：雾社木姜子/云山青冈-水丝梨落）</p></li>
 </ul>
