--- a/Alli-1a32.html
+++ b/Alli-1a32.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,15 +280,17 @@ $(document).ready(function () {
 <div id="南投黄肉楠-米槠群团" class="section level2">
 <h2><span style="color: blue;">南投黄肉楠-米槠群团</span></h2>
 </div>
-<div id="actinodaphne-litsea-acuminata-castanopsis-carlesii-all."
+<div id="actinodaphne-litsea-acuminata---castanopsis-carlesii-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Actinodaphne</em>
-(<em>Litsea</em>) <em>acuminata</em>-<em>Castanopsis carlesii</em>
+(<em>Litsea</em>) <em>acuminata</em> - <em>Castanopsis carlesii</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>优势种兼为鉴别种除米槠、长叶木姜子外，可有木荷（<em>Schima
+<p>优势种兼为鉴别种除米槠（<em>Castanopsis
+carlesii</em>）、长叶木姜子（<em>Litsea
+acuminata</em>）外，可有木荷（<em>Schima
 superba</em>）、甜槠（<em>Castanopsis
 eyrei</em>）、台湾含笑（<em>Michelia compressa</em>）</p>
 <p><br></p>
@@ -300,7 +302,7 @@ eyrei</em>）、台湾含笑（<em>Michelia compressa</em>）</p>
 acuminatissima</em>）、腺叶桂樱（<em>Laurocerasus
 phaeosticta</em>）、日本杜英（<em>Elaeocarpus
 japonicus</em>）、齿叶柯（<em>Lithocarpus
-kawakamii</em>），阿里山灰木（<em>Symplocos
+kawakamii</em>）、阿里山灰木（<em>Symplocos
 arisanensis</em>）、树参（<em>Dendropanax dentiger</em>）</p></li>
 <li><p>灌木层：海桐山矾（<em>Symplocos
 heishanensis</em>）、西施花（<em>Rhododendron ellipticum</em>）</p></li>
@@ -310,8 +312,8 @@ formosana</em>）、台湾小膜盖蕨（<em>Araiostegia
 parvipinnata</em>）华中瘤足蕨（<em>Plagiogyria
 euphlebia</em>）、稀子蕨（<em>Monachosorum henryi</em>）</p></li>
 <li><p>藤本植物：尖叶菝葜（<em>Smilax
-arisanensis</em>）、台湾常春藤（<em>Hedera rhombea</em> var.
-<em>formosana</em>）、波氏星蕨（<em>Microsorium
+arisanensis</em>）、台湾常春藤（<em>Hedera rhombea var.
+formosana</em>）、波氏星蕨（<em>Microsorium
 buergerianum</em>）、台湾崖爬藤（<em>Tetrastigma
 umbellatum</em>）</p></li>
 </ul>
@@ -331,7 +333,7 @@ carlesii</em> Comm.）</p>
 <li><p>(C3）台湾泽兰-樟叶槭 /米槠群落（<em>Eupatorium
 formosanum</em>-<em>Acer albopurpurascensa</em>/<em>Castanopsis
 carlesii</em> Comm.）</p>
-<p>分布于南横公路（EBLF书中表7-18/7，曾称：台湾八角金盘/米槠群落（部分）</p></li>
+<p>分布于南横公路（EBLF书中表7-18/7，曾称：台湾八角金盘/米槠群落（部分））</p></li>
 <li><p>(C4）台湾虎刺-台湾八角金盘/米槠群落（<em>Trachodendron
 aralioides</em>-<em>Eurya acuminate</em>/<em>Castanopsis
 carlesii</em>+<em>Schima superba</em> Comm.）</p>
