--- a/Alli-1a33.html
+++ b/Alli-1a33.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -282,10 +282,10 @@ $(document).ready(function () {
 style="color: blue;">鬼石柯-油叶柯-杏叶柯-齿叶柯群团</span></h2>
 </div>
 <div
-id="lithocarpus-lepidocarpus-l.-konishii-l.-amygdalifolius-l.-kawakamii-all."
+id="lithocarpus-lepidocarpus---l.-konishii---l.-amygdalifolius---l.-kawakamii-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus
-lepidocarpus</em>-<em>L. konishii</em>-<em>L. amygdalifolius</em>-<em>L.
+<h2><span style="color: darkblue;"><em>Lithocarpus lepidocarpus</em> -
+<em>L. konishii</em> - <em>L. amygdalifolius</em> - <em>L.
 kawakamii</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
@@ -306,12 +306,12 @@ zuihoensis</em>）、黄杞（<em>Engelhardia roxburghiana</em>）</p></li>
 matsumuranus</em>）、小花鼠刺（<em>Itea
 parviflora</em>）、变叶新木姜子（<em>Neolitsea
 variabillima</em>）、虎刺（<em>Damnacanthus indicus</em>）</p></li>
-<li><p>草本层：圆叶钻地风（<em>Schizophragma integrifolium</em> var.
-<em>fauriei</em>）、细梗络石（<em>Trachelospermum
+<li><p>草本层：圆叶钻地风（<em>Schizophragma integrifolium var.
+fauriei</em>）、细梗络石（<em>Trachelospermum
 gracilipes</em>）、大鳞巢蕨（<em>Neottopteris
 antiqua</em>）、瓶蕨（<em>Vandenboschia auriculata</em>）</p></li>
-<li><p>藤本植物：圆叶钻地风（<em>Schizophragma integrifolium</em> var.
-<em>fauriei</em>）、细梗络石（<em>Trachelospermum
+<li><p>藤本植物：圆叶钻地风（<em>Schizophragma integrifolium var.
+fauriei</em>）、细梗络石（<em>Trachelospermum
 gracilipes</em>）、大鳞巢蕨（<em>Neottopteris
 antiqua</em>）、瓶蕨（<em>Vandenboschia auriculata</em>）</p></li>
 </ul>
@@ -321,7 +321,7 @@ antiqua</em>）、瓶蕨（<em>Vandenboschia auriculata</em>）</p></li>
 <h3>目前包含1个群丛，5个群落</h3>
 <ul>
 <li><p>(A1）三齿钝叶楼梯草-薄叶灰木/油叶柯-齿叶柯群丛（ <em>Symplocos
-eriostroma</em>/<em>Lithocarpus konishii</em> -<em>Lithocarpus
+eriostroma</em>/<em>Lithocarpus konishii</em>-<em>Lithocarpus
 kawakamii</em> Ass.）</p>
 <p>分布于南澳南溪（EBLF书中表7-25，曾称：牛矢果/油叶柯-齿叶柯群落）</p></li>
 <li><p>(C1）台湾鳞盖蕨-台湾赤杨叶/齿叶柯-米槠群落（<em>Microlepis
