--- a/Alli-1a34.html
+++ b/Alli-1a34.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,16 +281,18 @@ $(document).ready(function () {
 <h2><span style="color: blue;">沉水樟-台琼楠-润楠群团</span></h2>
 </div>
 <div
-id="cinnamomum-micranthum-beilschmiedia-erithrophloia-machilus-spp.-all."
+id="cinnamomum-micranthum---beilschmiedia-erithrophloia---machilus-spp.-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Cinnamomum
-micranthum</em>-<em>Beilschmiedia erithrophloia</em>-<em>Machilus</em>
-spp. All.</span></h2>
+<h2><span style="color: darkblue;"><em>Cinnamomum micranthum</em> -
+<em>Beilschmiedia erithrophloia</em> - <em>Machilus</em> spp.
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>沉水樟、台琼楠，润楠属植物（<em>Machilus japonica</em>，<em>Machilus
-kusanoi</em>，<em>Machilus thunbergii</em>）</p>
+<p>沉水樟（<em>Cinnamomum micranthum</em>）、台琼楠（<em>Beilschmiedia
+erithrophloia</em>）、润楠属植物（<em>Machilus
+japonica</em>，<em>Machilus kusanoi</em>，<em>Machilus
+thunbergii</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -301,10 +303,10 @@ carlesii</em>）、香润楠（<em>Machilus
 zuihoensis</em>）、红楠（<em>Machilus
 thunbergii</em>）、台湾含笑（<em>Michelia compressa</em>）</p></li>
 <li><p>灌木层：长叶木姜子（<em>Litsea
-acuminata</em>）、变叶新木姜子（<em>Neolitsea aciculata</em> var.
-<em>variabillima</em>）、尾尖叶柃（<em>Eurya
+acuminata</em>）、变叶新木姜子（<em>Neolitsea aciculata var.
+variabillima</em>）、尾尖叶柃（<em>Eurya
 acuminata</em>）、五蕊虎皮楠（<em>Daphniphyllum
-pentandrum</em>）,台湾枇杷（<em>Eriobotrya
+pentandrum</em>）、台湾枇杷（<em>Eriobotrya
 deflexa</em>）、阿里山灰木（<em>Symplocos arisanensis</em>）</p></li>
 <li><p>草本层：波氏星蕨（<em>Microsorium
 buergerianum</em>）、广叶锯齿双盖蕨（<em>Diplazium
@@ -321,7 +323,7 @@ auriculata</em>）</p></li>
 callicarpaefolia</em>/<em>Cinnamomum subavenium</em>+<em>Cinnamomum
 micranthum</em> Ass.）</p>
 <p>分布于雪山坑溪（EBLF书中表7-27/1-11；曾称：紫珠叶泡花树∕香桂-沉水樟群落）</p></li>
-<li><p>(C2) 长梗山矾 /台湾山香圆-红楠群落（<em>Symplocos
+<li><p>(C2) 长梗山矾/台湾山香圆-红楠群落（<em>Symplocos
 modesta</em>/<em>Turpinia formosana</em>-<em>Machilus thunbergii</em>
 Comm.）</p>
 <p>分布于雪山坑溪（EBLF书中表7-27/12-14；曾称：长梗山矾/红楠-台湾山香圆群落）</p></li>
@@ -341,18 +343,17 @@ Comm.）</p>
 championii</em>-<em>Litsea acuminate</em>/<em>Machilus
 zuihoensis</em>-<em>Machilus japonica</em> Comm.）</p>
 <p>分布于鹿林山（EBLF书中表7-28/2；曾称：长叶木姜子/假长叶楠群落）</p></li>
-<li><p>(C7) 倒叶瘤足蕨-海岛冬青/ 长果青冈-红楠群落（<em>Plagiogyria
+<li><p>(C7) 倒叶瘤足蕨-海岛冬青/长果青冈-红楠群落（<em>Plagiogyria
 dunnii</em>-<em>Ilex goshiensis</em>/<em>Cyclobalanopsis
 longinux</em>-<em>Machilus thunbergii</em> Comm.）</p>
-<p>分布于双鬼湖（EBLF书中表7-30/1-4，曾称：海岛冬青/
-长果青冈-红楠群落）</p></li>
-<li><p>(C8) 野海棠-腺齿紫金牛/长果青冈-红楠群落（B<em>redia hirsuta</em>
-var. <em>scandens</em>-<em>Ardisia cornudentata</em>/<em>Cyclobalanopsis
+<p>分布于双鬼湖（EBLF书中表7-30/1-4，曾称：海岛冬青/长果青冈-红楠群落）</p></li>
+<li><p>(C8) 野海棠-腺齿紫金牛/长果青冈-红楠群落（<em>Bredia hirsuta var.
+scandens</em>-<em>Ardisia cornudentata</em>/<em>Cyclobalanopsis
 longinux</em>-<em>Machilus thunbergii</em>）</p>
-<p>分布于双鬼湖（EBLF书中表7-30/5-8，曾称：腺齿紫金牛∕长果青冈-红楠群落）</p></li>
+<p>分布于双鬼湖（EBLF书中表7-30/5-8，曾称：腺齿紫金牛/长果青冈-红楠群落）</p></li>
 <li><p>(C9）小芽新木姜/米槠-大叶楠群落（<em>Castanopsis
 carlesii</em>+<em>Machilus kusanoi</em>-<em>Neolitsea parvigemma</em>
-Com）</p>
+Comm.）</p>
 <p>分布于双鬼湖（EBLF书中表7-23；曾称：小芽新木姜-大叶楠/米槠群落）</p></li>
 </ul>
 </div>
