--- a/Alli-1a5.html
+++ b/Alli-1a5.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -305,9 +305,8 @@ cuspidata</em>）、鹿角杜鹃（<em>Rhododendron
 latoucheae</em>）、猴头杜鹃（<em>Rhododendron
 simiarum</em>）、长蕊杜鹃（<em>Rhododendron
 stamineum</em>）、阔叶箬竹（<em>Indocalamus latifolius</em>）</p></li>
-<li><p>草本层：蕨（<em>Pteridium aquilinum</em> var.
-<em>latiusculum</em>）、禾叶山麦冬（<em>Liriope
-graminifolia</em>）</p></li>
+<li><p>草本层：蕨（<em>Pteridium aquilinum var.
+latiusculum</em>）、禾叶山麦冬（<em>Liriope graminifolia</em>）</p></li>
 <li><p>藤本植物：寒莓（<em>Rubus buergeri</em>）、粉背菝葜（<em>Smilax
 hypoglauca</em>）</p></li>
 </ul>
@@ -316,9 +315,9 @@ hypoglauca</em>）</p></li>
 <div id="目前包含5个群落" class="section level3">
 <h3>目前包含5个群落</h3>
 <ul>
-<li><p>(C1) 鹿角杜鹃-秀丽槭/多脉青群落（<em>Rhododendron latoucheae</em>
-- <em>Acer elegantutum</em> / <em>Cyclobalanopsis multinervis</em>
-Comm.）</p>
+<li><p>(C1) 鹿角杜鹃-秀丽槭/多脉青群落（<em>Rhododendron
+latoucheae</em>-<em>Acer elegantutum</em>/<em>Cyclobalanopsis
+multinervis</em> Comm.）</p>
 <p>见于浙江遂昌。它是：《九龙山森林植被》中的“多脉青冈-木荷林”，“多脉青冈-鹿角杜鹃林”
 和
 “多脉青冈-百山祖八角林”（张方钢，1996）的综合（EBLF书中表5-26/1-3；曾称：鹿角杜鹃-秀丽槭/
