--- a/Alli-1a6.html
+++ b/Alli-1a6.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="巴东栎-包果柯群团" class="section level2">
 <h2><span style="color: blue;">巴东栎-包果柯群团</span></h2>
 </div>
-<div id="quercus-engleriana-lithocarpus-cleistocarpus-all."
+<div id="quercus-engleriana---lithocarpus-cleistocarpus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Quercus
-engleriana</em>-<em>Lithocarpus cleistocarpus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Quercus engleriana</em> -
+<em>Lithocarpus cleistocarpus</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -317,16 +317,17 @@ urophylla</em>）、竹叶鸡爪茶（<em>Rubus bambusarum</em>）</p></li>
 <div id="目前包含3个群落" class="section level3">
 <h3>目前包含3个群落</h3>
 <ul>
-<li><p>(C1) 金佛山方竹-红茴香/巴东栎群落（<em>Chimonobambusa utilis</em>
-- <em>Illicium henryi</em> / <em>Quercus engleriana</em> Comm.）</p>
+<li><p>(C1) 金佛山方竹-红茴香/巴东栎群落（<em>Chimonobambusa
+utilis</em>-<em>Illicium henryi</em>/<em>Quercus engleriana</em>
+Comm.）</p>
 <p>见于四川金佛山。引自：《亚热带石灰岩山地存在常绿阔叶林-以南川金佛山为例》（方任吉，刘宗群，1984）（EBLF书中表5-35；曾称：金佛山方竹-红茴香/巴东栎群落）</p></li>
-<li><p>(C2) 短锥玉山竹/包果柯群落（<em>Yushania brevipaniculata</em> -
-<em>Lithocarpus cleistocarpus</em> Comm.）</p>
+<li><p>(C2) 短锥玉山竹/包果柯群落（<em>Yushania
+brevipaniculata</em>-<em>Lithocarpus cleistocarpus</em> Comm.）</p>
 <p>见于贵州梵净山永顺县. 引自：《贵州植被》中 “包果石栎群系”（黄威廉等.
 1988）。(EBLF书中表5-34/1；曾称：短锥玉山竹/包果柯群落)</p></li>
 <li><p>(C3) 小叶黄背杜鹃-三脉水丝梨/包果柯群落（<em>Rhododendron</em>
-sp. - <em>Sycopsis triplinervius</em> / <em>Lithocarpus
-cleistocarpus</em> Comm.）</p>
+sp.-<em>Sycopsis triplinervius</em>/<em>Lithocarpus cleistocarpus</em>
+Comm.）</p>
 <p>见于云南大关。引自：《云南植被》中
 “包果石栎、三脉水丝梨、小叶黄背杜鹃群落”（云南植被编写组.
 1987）(EBLF书中表5-34/2-3；曾称：小叶黄背杜鹃/三脉水丝梨-包果柯群落)。</p></li>
