--- a/Alli-1a8.html
+++ b/Alli-1a8.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,9 +280,10 @@ $(document).ready(function () {
 <div id="木荷-甜槠群团" class="section level2">
 <h2><span style="color: blue;">木荷-甜槠群团</span></h2>
 </div>
-<div id="schima-superba-castanopsis-eyrei-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Schima
-superba</em>-<em>Castanopsis eyrei</em> All.</span></h2>
+<div id="schima-superba---castanopsis-eyrei-all."
+class="section level2">
+<h2><span style="color: darkblue;"><em>Schima superba</em> -
+<em>Castanopsis eyrei</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -307,95 +308,96 @@ japonica</em>）、里白（<em>Diplopterygium
 glaucum</em>）、淡竹叶（<em>Lophatherum
 gracile</em>），以及薹草（<em>Carex</em> spp.）</p></li>
 <li><p>藤本植物：菝葜（<em>Smilax
-china</em>），络石（<em>Trachelospermum
-jasminoidesv</em>），野木瓜（<em>Stauntonia chinensis</em>）</p></li>
+china</em>）、络石（<em>Trachelospermum
+jasminoidesv</em>）、野木瓜（<em>Stauntonia chinensis</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
 <div id="a木荷-甜槠群团-江南丘陵群丛组" class="section level3">
 <h3>(a)木荷-甜槠群团-江南丘陵群丛组</h3>
 <p>分布在苏、浙、皖、赣，以及福建、湖南部分丘陵低山地区。群落中南烛（<em>Vaccinium
-bracteatum</em>），天竺桂（<em>Cinnamomum
-japonicum</em>）,冬青（<em>Ilex chinensis</em>），杜鹃（<em>Rhododendron
-simsii</em>），淡竹叶（<em>Lophatherum
+bracteatum</em>）、天竺桂（<em>Cinnamomum
+japonicum</em>）、冬青（<em>Ilex
+chinensis</em>）、杜鹃（<em>Rhododendron
+simsii</em>）、淡竹叶（<em>Lophatherum
 gracile</em>），可以其作为鉴别别种组</p>
 <p><br></p>
 <div id="鉴别种" class="section level4">
 <h4>鉴别种</h4>
-<p>光叶石楠、马银花、细齿叶柃、短尾越桔等</p>
+<p>光叶石楠（<em>Photinia glabra</em>）、马银花（<em>Rhododendron
+ovatum</em>）、细齿叶柃（<em>Eurya
+nitida</em>）、短尾越桔（<em>Vaccinium carlesii</em>）等</p>
 <p><br></p>
 </div>
 <div id="包含13个群丛2个群落" class="section level4">
 <h4>包含13个群丛，2个群落</h4>
 <ul>
 <li><p>(A1) 疏花野青茅-羊踯躅/木荷群丛(<em>Deyeuxia arundinacea var.
-laxiflora</em>-<em>Rhododendron molle</em> /<em>Schima superba</em>
+laxiflora</em>-<em>Rhododendron molle</em>/<em>Schima superba</em>
 Ass.)</p>
-<p>分布在苏州光福，这是分布纬度最北的一个木荷林（EBLF书中表5-37；曾称：满山红-杨梅∕木荷群丛)</p></li>
+<p>分布在苏州光福，这是分布纬度最北的一个木荷林（EBLF书中表5-37；曾称：满山红-杨梅/木荷群丛)</p></li>
 <li><p>(A2) 三枝九叶草-马银花-檵木/甜槠群丛（<em>Lindera
 erythrocarpa</em>-<em>Rhododendron ovatum</em>-<em>Loropetalum
 chinense</em>/<em>Castanopsis eyrei</em> Ass.）</p>
-<p>分布在江西庐山。（EBLF书中表5-38b；曾称：檵木-马银花∕甜槠群丛)</p></li>
-<li><p>(A3) 春兰-马银花-檵木/ 甜槠群丛（<em>Cymbidium
+<p>分布在江西庐山。（EBLF书中表5-38b；曾称：檵木-马银花/甜槠群丛)</p></li>
+<li><p>(A3) 春兰-马银花-檵木/甜槠群丛（<em>Cymbidium
 goeringii</em>-<em>Rhododendron ovatum</em>-<em>Loropetalum
 chinense</em>/<em>astanopsis eyrei</em> Ass.）</p>
-<p>分布在安徽南部黄山、祁门、石台、宁国、贵池，以及江西庐山等地。（EBLF书中表5-38a，表5-38c；原称：檵木-马银花∕甜槠群丛)</p></li>
+<p>分布在安徽南部黄山、祁门、石台、宁国、贵池，以及江西庐山等地。（EBLF书中表5-38a，表5-38c；原称：檵木-马银花/甜槠群丛)</p></li>
 <li><p>(A4) 金线草-马银花-檵木/木荷-甜槠群丛（<em>Antenoron
 filiforme</em>-<em>Rhododendron ovatum</em>-<em>Loropetalum
 chinense</em>/<em>Schima superba</em>-<em>Castanopsis eyrei</em>
 Ass.）</p>
-<p>分布在安徽南部旌德（EBLF书中表5-39；曾称：毛柄连蕊茶-马银花∕木荷-甜槠群丛)</p></li>
-<li><p>(A5) 两色鳞毛蕨-马银花+檵木∕甜槠+木荷群丛（<em>Hicriopteris
+<p>分布在安徽南部旌德（EBLF书中表5-39；曾称：毛柄连蕊茶-马银花/木荷-甜槠群丛)</p></li>
+<li><p>(A5) 两色鳞毛蕨-马银花+檵木/甜槠+木荷群丛（<em>Hicriopteris
 glauca</em>-<em>Rhododendron ovatum</em>/<em>Castanopsis eyrei</em>
 +<em>Schima superba</em> Ass.）</p>
-<p>分布在浙江天目山、建德等地（EBLF书中表5-40；曾称：尖连蕊茶-马银花∕木荷-甜槠群丛)</p></li>
-<li><p>(A6) 鸡仔木-鹿角杜鹃∕木荷-甜槠群丛 (S<em>inoadina
+<p>分布在浙江天目山、建德等地（EBLF书中表5-40；曾称：尖连蕊茶-马银花/木荷-甜槠群丛)</p></li>
+<li><p>(A6) 鸡仔木-鹿角杜鹃/木荷-甜槠群丛 (S<em>inoadina
 racemosa</em>-<em>Rhododendron latoucheae</em>/<em>chima
 superba</em>+<em>Castanopsis eyrei</em> Ass.)</p>
-<p>分布在浙江西部古田山（EBLF书中表5-41；曾称：短尾越桔-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
-<li><p>(A7) 岩柃-鹿角杜鹃∕木荷-甜槠群丛（<em>Eurya Saxicola</em>-
-<em>Rhododendron latoucheae</em>/<em>Schima superba</em>
--<em>Castanopsis eyrei</em> Comm.)</p>
-<p>分布在浙江龙塘山、九龙山（EBLF书中表5-42b；曾称：细齿叶柃-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
-<li><p>(A8) 十字薹草-云锦杜鹃∕木荷-甜槠群丛(<em>Carex
+<p>分布在浙江西部古田山（EBLF书中表5-41；曾称：短尾越桔-鹿角杜鹃/木荷-甜槠群丛)</p></li>
+<li><p>(A7) 岩柃-鹿角杜鹃/木荷-甜槠群丛（<em>Eurya
+Saxicola</em>-<em>Rhododendron latoucheae</em>/<em>Schima
+superba</em>-<em>Castanopsis eyrei</em> Ass.)</p>
+<p>分布在浙江龙塘山、九龙山（EBLF书中表5-42b；曾称：细齿叶柃-鹿角杜鹃/木荷-甜槠群丛)</p></li>
+<li><p>(A8) 十字薹草-云锦杜鹃/木荷-甜槠群丛(<em>Carex
 cruciata</em>-<em>Rhododendron fortunei</em>/<em>chima superba
 </em>-<em>Castanopsis eyrei</em> Ass.)</p>
-<p>分布在江西中部三清山（EBLF书中表5-42a；曾称：细齿叶柃-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
-<li><p>(A9) 倒叶瘤足蕨-鹿角杜鹃-长柄紫果槭∕木荷-甜槠群丛(<em>Plagiogyria
-dunnii</em>-<em>Rhododendron latoucheae</em>-<em>Acer cordatum</em> var.
-<em>subtrinervium</em>/<em>Schima superba</em> -<em>Castanopsis
-eyrei</em> Ass.)</p>
-<p>分布在浙江遂昌大西坑（EBLF书中表5-43a；曾称：短叶鼠刺-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
+<p>分布在江西中部三清山（EBLF书中表5-42a；曾称：细齿叶柃-鹿角杜鹃/木荷-甜槠群丛)</p></li>
+<li><p>(A9) 倒叶瘤足蕨-鹿角杜鹃-长柄紫果槭/木荷-甜槠群丛(<em>Plagiogyria
+dunnii</em>-<em>Rhododendron latoucheae</em>-<em>Acer cordatum var.
+subtrinervium</em>/<em>Schima superba</em>-<em>Castanopsis eyrei</em>
+Ass.)</p>
+<p>分布在浙江遂昌大西坑（EBLF书中表5-43a；曾称：短叶鼠刺-鹿角杜鹃/木荷-甜槠群丛)</p></li>
 <li><p>(A10) 绿叶甘橿-鹿角杜鹃/木荷-甜槠群丛（<em>Lindera
 neesiana</em>-<em>Rhododendron latoucheae</em>/<em>Schima
 superba</em>-<em>Castanopsis eyrei</em> Ass.）</p>
-<p>分布在浙江松阳（EBLF书中表5-43c/1-6；曾称：短叶鼠刺-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
-<li><p>(A11) 肥肉草-扁枝越桔∕木荷-甜槠群丛（<em>Fordiophyton
-fordii</em>-<em>Vaccinium japonicum</em> var.
-<em>Sinicum</em>/<em>Schima superba</em>-<em>Castanopsis eyrei</em>
-Ass.）</p>
-<p>分布在浙江大西坑（EBLF书中表5-43c/7-13；曾称：短叶鼠刺-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
+<p>分布在浙江松阳（EBLF书中表5-43c/1-6；曾称：短叶鼠刺-鹿角杜鹃/木荷-甜槠群丛)</p></li>
+<li><p>(A11) 肥肉草-扁枝越桔/木荷-甜槠群丛（<em>Fordiophyton
+fordii</em>-<em>Vaccinium japonicum var. Sinicum</em>/<em>Schima
+superba</em>-<em>Castanopsis eyrei</em> Ass.）</p>
+<p>分布在浙江大西坑（EBLF书中表5-43c/7-13；曾称：短叶鼠刺-鹿角杜鹃/木荷-甜槠群丛)</p></li>
 <li><p>(A12) 建兰-鹿角杜鹃-绒毛润楠/木荷-甜槠群丛（<em>Cymbidium
 ensifolium</em>-<em>Rhododendron latoucheae</em>-<em>Machilus
 velutina</em>/<em>Schima superba</em>-<em>Castanopsis eyrei</em>
 Ass.）</p>
-<p>分布在福建蒲城武夷山（EBLF书中表5-43b；曾称：短叶鼠刺-鹿角杜鹃∕木荷-甜槠群丛)</p></li>
-<li><p>(A13) 肿节少穗竹-鹿角杜鹃 ∕木荷-甜槠群丛（<em>Oligostachyum
+<p>分布在福建蒲城武夷山（EBLF书中表5-43b；曾称：短叶鼠刺-鹿角杜鹃/木荷-甜槠群丛)</p></li>
+<li><p>(A13) 肿节少穗竹-鹿角杜鹃/木荷-甜槠群丛（<em>Oligostachyum
 oedogonatum</em>-<em>Rhododendron latoucheae</em>/<em>Schima superba
 </em>-<em>Castanopsis eyrei</em> Ass.）</p>
-<p>分布在武夷山（EBLF书中表5-44；曾称-肿节少穗竹-鹿角杜鹃
-∕木荷-甜槠群丛</p></li>
+<p>分布在武夷山（EBLF书中表5-44；曾称-肿节少穗竹-鹿角杜鹃/木荷-甜槠群丛</p></li>
 <li><p>(C1) 香附子-篌竹-云和新木姜子/甜槠群落(<em>Cyperus
-rotundus</em>-<em>Phyllostachys nidularia</em>-<em>Neolitsea aurata</em>
-var. <em>paraciculata</em>/<em>Castanopsis eyrei</em> Comm.)</p>
+rotundus</em>-<em>Phyllostachys nidularia</em>-<em>Neolitsea aurata var.
+paraciculata</em>/<em>Castanopsis eyrei</em> Comm.)</p>
 <p>分布在湖南南岳的龙池。引自：《
 湖南省南岳原生型森林群落的研究》（左家哺等. 2001）（EBLF书中表5-45;
-曾称：篌竹-云和新木姜子∕甜槠群落)</p></li>
+曾称：篌竹-云和新木姜子/甜槠群落)</p></li>
 <li><p>(C2) 广西杜鹃-云和新木姜子/甜槠群落(<em>Rhododendron
-kwangsiense</em>-<em>Neolitsea aurata</em> var. <em>Paraciculata</em>/
-<em>Castanopsis eyrei</em> Comm.)</p>
-<p>分布在湖南城步。引自：《湖南植被》 中的（祁承经.
-1990）（EBLF书中表5-46；曾称：满山红-云和新木姜子∕甜槠群落)</p></li>
+kwangsiense</em>-<em>Neolitsea aurata var.
+Paraciculata</em>/<em>Castanopsis eyrei</em> Comm.)</p>
+<p>分布在湖南城步。引自：《湖南植被》 中的（祁承经，
+1990）（EBLF书中表5-46；曾称：满山红-云和新木姜子/甜槠群落)</p></li>
 </ul>
 <p><br></p>
 </div>
@@ -405,22 +407,63 @@ kwangsiense</em>-<em>Neolitsea aurata</em> var. <em>Paraciculata</em>/
 <p>分布在福建中部和南部，以及广东北部地区。群落中有较多南部树种，如：罗伞树（<em>Ardisia
 quinquegona</em>）、少叶黄杞（<em>Engelhardia
 fenzelii</em>）、山杜英（<em>Elaeocarpus
-sylvestris</em>），中华里白（<em>Diplopterygium
+sylvestris</em>）、中华里白（<em>Diplopterygium
 chinensis</em>）等，可以其作为鉴别种组</p>
 <p><br></p>
 <div id="包含2个群丛6个群落" class="section level4">
 <h4>包含2个群丛，6个群落</h4>
+<ul>
+<li><p>(A1）里白-绒毛润楠/甜槠+木荷群丛(<em>Diplopterygium
+glaucum</em>-<em>Machilus velutina</em>/<em>Castanopsis
+eyrei</em>+<em>Schima superba</em> Ass.)</p>
+<p>分布在福建梅花山（引自：邱喜昭，林鹏，1989：闽西梅花山自然保护区的常绿阔叶林），《中国常绿阔叶林》书中表5-49，曾称：“绒毛润楠/木荷-甜槠群丛”</p></li>
+<li><p>(A2）鳞籽莎-黄绒润楠/甜槠+木荷群丛(<em>Lepidosperma
+chinense</em>-<em>Machilus grijsii</em>/<em>Castanopsis
+eyrei</em>+<em>Schima superba</em> Ass.)</p>
+<p>分布在福建梁野山（引自：林鹏，2001：福建梁野山自然保护区综合科学考察报告），（《中国常绿阔叶林》书中表5-48/1-3，曾称：“黄绒润楠/木荷-甜槠群丛”</p></li>
+<li><p>(C1）莎草-溪畔杜鹃-轮叶蒲桃/甜槠+木荷群落（<em>Cyperus</em>-<em>Rhododendron
+rivulare</em>-<em>Syzygium grijsii</em>/<em>Castanopsis
+eyrei</em>+<em>Schima superba</em> Comm.)</p>
+<p>分布在福建梁野山（引自：林鹏，2001：福建梁野山自然保护区综合科学考察报告)，《中国常绿阔叶林》书中表5-48/4-5，曾称：“溪畔杜鹃/甜槠+木荷群落”</p></li>
+<li><p>(C2）弯蒴杜鹃-黄山松/甜槠+木荷群落(<em>Rhododendron
+henryi</em>-<em>Pinus taiwanensis</em>/<em>Castanopsis
+eyrei</em>+<em>Schima superba</em> Comm.)</p>
+<p>分布在福建寿宁（引自：福建森林编委会，1993；《福建森林》中的“华里白-弯蒴杜鹃-细齿叶柃-甜槠林”，《中国常绿阔叶林》书中表5-50，曾称：“弯蒴杜鹃/
+木荷-甜槠群落”</p></li>
+<li><p>(C3）倒叶瘤足蕨-秀丽野海棠-刨花润楠/甜槠群落（<em>Plagiogyria
+dunnii</em>-<em>Bredia amoena</em>-<em>Machilus
+pauhoi</em>/<em>Castanopsis eyrei</em> Comm.）</p>
+<p>分布在福建安溪（引自：林鹏，1990《福建植被》中“甜槠-翅柃＋美丽野海棠-倒叶瘤足蕨群丛”（<em>Castanopsis
+eyrei</em>-<em>Eurya alata</em>+<em>Bredia amoena</em>-<em>Plagiogyria
+dunnii</em>
+Ass.），《中国常绿阔叶林》书中表5-51/1，曾称：“黄杞/甜槠群落”</p></li>
+<li><p>(C4）乌毛蕨-青皮木-刨花润楠/甜槠群落（<em>Blechnum
+orientale</em>-<em>Schoepfia jasminodora</em>-<em>Machilus
+pauhoi</em>/<em>Castanopsis eyrei</em> Comm.）</p>
+<p>分布在福建安溪（引自：林鹏，1990《福建植被》中“甜槠-翅柃＋美丽野海棠-倒叶瘤足蕨群丛”（<em>Castanopsis
+eyrei</em>-<em>Eurya alata</em>+<em>Bredia amoena</em>-<em>Plagiogyria
+dunnii</em> Ass.），《中国常绿阔叶林》书中表5-51/2，曾称：“黄杞/
+甜槠群落”</p></li>
+<li><p>(C5）毛棉杜鹃-冷箭竹/甜槠+木荷群落（<em>Rhododendron
+moulmainense</em>-<em>Bashanica fangiana</em>/<em>Castanopsis
+eyrei</em>+<em>Schima superba</em> Comm）</p>
+<p>分布在广东乳源（引自：广东省植物研究所,1976：《广东植被》中的“甜槠、荷木、羊角花（毛棉杜鹃）冷箭竹群落），《中国常绿阔叶林》书中表5-52/1，曾称：“冷箭竹-毛棉杜鹃/木荷-甜槠群落”</p></li>
+<li><p>(C6）猴头杜鹃-冷箭竹/甜槠+木荷群落（<em>Rhododendron
+moulmainense</em>-<em>Bashanica fangiana</em>/<em>Castanopsis
+eyrei</em>+<em>Schima superba</em> Comm）</p>
+<p>分布在广东乳源（引自：广东省植物研究所,1976：《广东植被》中的“甜槠、荷木、羊角花（毛棉杜鹃）冷箭竹群落），《中国常绿阔叶林》书中表5-52/2，曾称：“冷箭竹-毛棉杜鹃/木荷-甜槠群落”</p></li>
+</ul>
 <p><br></p>
 </div>
 </div>
 <div id="c木荷-甜槠群团-黔桂山地群丛组" class="section level3">
 <h3>(c)木荷-甜槠群团-黔桂山地群丛组</h3>
 <p>主要分布在广西北部、中部，以及贵州东北部地区，群落中毛叶木姜（<em>Litsea
-mollis</em>），九管血（<em>Ardisia
-brevicaulis</em>），野锦香（<em>Blastus
-cochinchinensis</em>），凹脉柃（<em>Eurya
-impressinervis</em>），网脉山龙眼（<em>Helicia
-reticulata</em>），岭南杜鹃（<em>Rhododendron
+mollis</em>）、九管血（<em>Ardisia
+brevicaulis</em>）、野锦香（<em>Blastus
+cochinchinensis</em>）、凹脉柃（<em>Eurya
+impressinervis</em>）、网脉山龙眼（<em>Helicia
+reticulata</em>）、岭南杜鹃（<em>Rhododendron
 mariae</em>）常见，以其作为鉴别种组</p>
 <p><br></p>
 <div id="目前包含16个群落" class="section level4">
@@ -435,16 +478,17 @@ orbiculata</em>-<em>Evodia lepta</em>-<em>Blastus
 dunnianus</em>/<em>Schima superba</em> Comm.）</p>
 <p>阳朔金宝《广西植被志要》书中表格号5.261-262</p></li>
 <li><p>(C3) 大叶排草-单耳柃-金花树/甜槠-木荷群落（<em>Lysimachia
-fordiana</em>-<em>Eurya weissiae</em>-<em>Blastus dunnianus</em>/
-<em>Castanopsis eyrei</em>-<em>Schima superba</em> Comm.）</p>
+fordiana</em>-<em>Eurya weissiae</em>-<em>Blastus
+dunnianus</em>/<em>Castanopsis eyrei</em>-<em>Schima superba</em>
+Comm.）</p>
 <p>阳朔碎江《广西植被志要》书中表格号5.263-264</p></li>
 <li><p>(C4) 花叶细辛-金花树/木荷-甜槠群落（<em>Asarum
-geophyllum</em>-<em>Blastus dunnianus</em>/<em>Schima superba</em>-
-<em>Castanopsis eyrei</em> Comm.）</p>
+geophyllum</em>-<em>Blastus dunnianus</em>/<em>Schima
+superba</em>-<em>Castanopsis eyrei</em> Comm.）</p>
 <p>阳朔兴坪《广西植被志要》书中表格号W5.83-84</p></li>
 <li><p>(C5) 百两金-石壁杜鹃-金花树/甜槠群落（<em>Ardisia
-crispa</em>-<em>Rhododendron bachii</em>-<em>Blastus dunnianus</em>/
-<em>Castanopsis eyrei</em> Comm.）</p>
+crispa</em>-<em>Rhododendron bachii</em>-<em>Blastus
+dunnianus</em>/<em>Castanopsis eyrei</em> Comm.）</p>
 <p>龙胜花坪《广西植被志要》书中表格号W5.69-70</p></li>
 <li><p>(C6) 倒挂草-广西杜鹃-金花树/甜槠群落（<em>Asplennium
 normale</em>-<em>Rhododendron kwangsiense</em>-<em>Blastus
