--- a/Alli-2a35.html
+++ b/Alli-2a35.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,17 +280,17 @@ $(document).ready(function () {
 <div id="厚壳桂-锥-红锥群团" class="section level2">
 <h2><span style="color: blue;">厚壳桂-锥-红锥群团</span></h2>
 </div>
-<div id="cryptocarya-chinensis-castanopsis-chinensis-c.-hystrix-all."
+<div
+id="cryptocarya-chinensis---castanopsis-chinensis---c.-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Cryptocarya
-chinensis</em>-<em>Castanopsis chinensis</em>-<em>C. hystrix</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Cryptocarya chinensis</em> -
+<em>Castanopsis chinensis</em> - <em>C. hystrix</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>红锥（<em>Castanopsis hystrix</em>）、锥树（<em>C.
-chinesis</em>）、厚壳桂(<em>Cryptocarya
-chinensis</em>)、黄果厚壳桂(<em>C. concina</em>)，它们也是鉴别种</p>
+chinesis</em>）、厚壳桂（<em>Cryptocarya
+chinensis</em>）、黄果厚壳桂（<em>C. concina</em>），它们也是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -305,23 +305,19 @@ rubra</em>）、柏拉木（<em>Blastus
 cochinchinensis</em>）、草珊瑚（<em>Sarcandra glabra</em>）</p></li>
 <li><p>草本层：金狗毛（<em>Cibotium
 barometz</em>）、东方乌毛蕨（<em>Blechnum
-orientale</em>）、淡竹叶(<em>Lophatherum
-gracile</em>)、狗脊(<em>Woodwardia japonica</em>)，山姜（<em>Alpinia
+orientale</em>）、淡竹叶（<em>Lophatherum
+gracile</em>）、狗脊（<em>Woodwardia japonica</em>）、山姜（<em>Alpinia
 chinensis</em>）、扇叶铁线蕨（<em>Adiantum flabellulatum</em>）</p></li>
-<li><p>藤本植物：瓜馥木（<em>Fissistigma
-oldhamii</em>）、香花崖豆藤(<em>Millettia
-dielsiana</em>)、酸藤子（<em>Embelia
-laeta</em>）、玉叶金花（<em>Mussaenda pubescens</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含1个群丛17个群落" class="section level3">
-<h3>目前包含1个群丛，17个群落</h3>
+<div id="目前包含1个群丛16个群落" class="section level3">
+<h3>目前包含1个群丛，16个群落</h3>
 <ul>
 <li><p>(A1）中华复叶耳蕨-柏拉木/鹿角锥-红锥群丛（<em>Arachniodes
 chinensis</em>-<em>Blastus cochinchinensis</em>/<em>Castanopsis
 lamontii</em>-<em>Castanopsis hystrix</em> Ass.）</p>
-<p>分布在广东英德滑水山。引自：《广东英徳滑水山的植物群落》中“红栲（红锥）＋青栲（鹿角锥）＋荷树群落”（徐祥浩等，1958）（EBLF书中表8-4;曾称：柏拉木-鹿角锥/红锥群落）</p></li>
+<p>分布在广东英德滑水山。引自：《广东英徳滑水山的植物群落》中“红栲（红锥）+青栲（鹿角锥）+荷树群落”（徐祥浩等，1958）（EBLF书中表8-4;曾称：柏拉木-鹿角锥/红锥群落）</p></li>
 <li><p>(C1）华里白-面杆竹-鹅掌柴/红锥群落（<em>Hicriopteris
 chinensis</em>-<em>Pseudosasa orthotropa</em>-<em>Schefflera
 octophylla</em>/<em>Castanopsis hystrix</em> Comm.）</p>
@@ -335,7 +331,7 @@ angustifolia</em>/<em>Castanopsis hystrix</em> Comm.）</p>
 simplex</em>-<em>Psychotria rubra</em>-<em>Schefflera
 octophylla</em>/<em>Machilus thunbergii</em>-<em>Cryptocarya
 chinensis</em> Comm.）</p>
-<p>分布在福建安溪。引自：《福建植被》中“厚壳桂+红楠-九节木-单叶新月蕨群丛”（林鹏，1990）（EBLF书中表8-7，曾称：鹅掌柴-九节木/红楠-厚壳桂群落</p></li>
+<p>分布在福建安溪。引自：《福建植被》中“厚壳桂+红楠-九节木-单叶新月蕨群丛”（林鹏，1990）（EBLF书中表8-7，曾称：鹅掌柴-九节木/红楠-厚壳桂群落）</p></li>
 <li><p>(C4) 猴耳环-鹅掌柴/乌榄-厚壳桂群落（<em>Pithecellobium
 clypearia</em>-<em>Schefflera octophylla</em>/<em>Canarium
 pimela</em>-<em>Cryptocarya chinensis</em> Comm.）</p>
@@ -344,16 +340,15 @@ pimela</em>-<em>Cryptocarya chinensis</em> Comm.）</p>
 barbatus</em>-<em>Eurya tetragonoclada</em>/<em>Elaeocarpus
 nitendifolia</em>-<em>Cryptocarya concinna</em> Comm.）</p>
 <p>分布在广西桂平。引自：引自：《亚热带常绿阔叶林生态系统》中
-“黄果厚壳桂林”（王献溥，黄建辉，2005）（EBLF书中表8-9，曾称：）</p></li>
+“黄果厚壳桂林”（王献溥，黄建辉，2005）（EBLF书中表8-9）</p></li>
 <li><p>(C6) 红叶藤-大节竹/锥树-红锥群落（<em>Santaodes
 microphyllum</em>-<em>AIndosasa crassiflora</em>/<em>Castanopsis
 chinensis</em>-<em>Castanopsis hystrix</em> Comm.）</p>
-<p>分布在广西容县大王十里。引自：《广西植被志要》中“？？？？表5-269-270；271-272”（王献溥，2014）</p></li>
+<p>分布在广西容县大王十里。引自：《广西植被志要》书中表5-269-270；271-272（王献溥，2014）</p></li>
 <li><p>(C7) 大叶仙茅-罗伞树/锥树-红锥群落（<em>Curculigo
 capitulata</em>-<em>Ardisia quinquegona</em>/<em>Castanopsis
 chinensis</em>-<em>Castanopsis hystrix</em> Comm.）</p>
-<p>分布在广西容县松山。引自：《广西植被志要》中“
-？？？？”书中表5.267-268（王献溥，2014）</p></li>
+<p>分布在广西容县松山。引自：《广西植被志要》书中表5.267-268（王献溥，2014）</p></li>
 <li><p>(C8）沙皮蕨-鼎湖钓樟/锥树-厚壳桂群落（<em>Hemigramma
 decurrens</em>-<em>Lindera chunii</em>/<em>Castanopsis
 chinensis</em>+<em>Cryptocarya concinna</em> Ass.）</p>
@@ -362,12 +357,12 @@ chinensis</em>+<em>Cryptocarya concinna</em> Ass.）</p>
 canthioides</em>-<em>Lindera chunii</em>/<em>Cryptocarya
 concinna</em>-<em>Erythrophleum fordii</em> Comm.）</p>
 <p>分布在广东高要鼎湖山。引自：《鼎湖山格木群落的组成种类和结构特征》中“格木群落”
-（蚁伟民等. 1999)
+（蚁伟民等，1999）
 （EBLF书中表8-10，曾称：鼎湖钓樟/黄果厚壳桂-格木群落）</p></li>
 <li><p>(C10）锦香草-四角柃/黄果厚壳桂群落（<em>Phyllagathis
 cavaleriei</em>-<em>Eurya tetragonoclada</em>/<em>Cryptocarya
 concinna</em> Comm.）</p>
-<p>广西桂平太平山。引自：《广西植被志要》（王献溥 等，2014）</p></li>
+<p>广西桂平太平山。引自：《广西植被志要》（王献溥等，2014）</p></li>
 <li><p>(C11）沙罗单竹/锥树群落（<em>Schizostachuium
 funghomii</em>/<em>Castanopsis chinensis</em> Comm.）</p>
 <p>分布在广西容县自良；引自：《广西植被志要》（表5：171-172，原称：锥栗栲-罗伞树-淡竹叶群丛）</p></li>
@@ -384,7 +379,11 @@ Comm.）</p>
 <li><p>(C14）山菅兰-岗松/锥树群落（<em>Dianella ensifolia</em>-
 <em>Baeckea frutescens</em>/<em>Castanopsis chinensis</em> Comm.）</p>
 <p>分布在广西容县杨杨村，引自：《广西植被志要》（表5：173-174原称：锥栗栲-桃金娘-芒萁群丛）</p></li>
-<li><p>(C15）阔叶楼梯草-罗伞树/黄果厚壳桂群落（<em>Elatostema
+<li><p>(C15）大节竹-鹅掌柴/华锥群落（<em>Indosasa
+crassiflora</em>-<em>Schefflera octophylla</em>/<em>Castanopsis
+chinensis</em> Comm.）</p>
+<p>分布在广西容县十里塘（引自：王献溥等，2014，《广西植被志要》中的锥栗栲-鸭脚木-大节竹-狗脊蕨群丛，书中表5.165-5.166）</p></li>
+<li><p>(C16）阔叶楼梯草-罗伞树/黄果厚壳桂群落（<em>Elatostema
 platyphyllum</em>-<em>Ardisia quinquegona</em>/<em>Cryptocarya
 chinensis</em> Comm.）</p>
 <p>分布在广滑水冲。引自：《广西植被志要》中“黄果厚壳桂-罗伞树+九节木-阔叶楼梯草群丛”书中表：5.209-210（王献溥，2014）</p></li>
