--- a/Alli-2a36.html
+++ b/Alli-2a36.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,15 +281,18 @@ $(document).ready(function () {
 <h2><span style="color: blue;">大果马蹄荷-黏木-蕈树群团</span></h2>
 </div>
 <div
-id="exbucklandia-tonkinensis-ixonanthes-reticulata-liquidambar-altingia-chinensis-all."
+id="exbucklandia-tonkinensis---ixonanthes-reticulata---liquidambar-altingia-chinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Exbucklandia
-tonkinensis</em>-<em>Ixonanthes reticulata</em>-<em>Liquidambar</em>
+<h2><span style="color: darkblue;"><em>Exbucklandia tonkinensis</em> -
+<em>Ixonanthes reticulata</em> - <em>Liquidambar</em>
 (<em>Altingia</em>) <em>chinensis</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>蕈树、大果马蹄荷、粘木，它们同时也可作为鉴别种</p>
+<p>蕈树（<em>Liquidambar</em> (<em>Altingia</em>)
+<em>chinensis</em>）、大果马蹄荷（<em>Exbucklandia
+tonkinensis</em>）、粘木（<em>Ixonanthes
+reticulata</em>），它们同时也可作为鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -328,12 +331,10 @@ chinensis</em>+<em>Ixonanthes chinensis</em> Ass.）</p>
 <li><p>(C2）光叶红豆/米槠-蕈树群落（<em>Ormosia
 glaberrima</em>/<em>Castanopsis carlesii</em>-<em>Altingia
 chinensis</em> Comm.）</p>
-<p>分布在广东封开黑石顶。引自：《黑石顶自然保护区植被分类系统和主要类型及分布》中“米锥+荷树+甜茶椆-桂北木姜+阿丁枫-生虫树-省藤群落”和“水栗+
-粘木-阿丁枫+光叶红豆-生虫树-罗伞-省藤群落，以及“米锥-阿丁枫+岭南槭+光叶红豆+显脉新木姜-苦竹群落”
-（刘雄恩，王伯荪．1987）的综合（EBLF书中表8-11∕4-6，曾称：光叶红豆∕米槠-蕈树群落）</p></li>
+<p>分布在广东封开黑石顶。引自：《黑石顶自然保护区植被分类系统和主要类型及分布》中“米锥+荷树+甜茶椆-桂北木姜+阿丁枫-生虫树-省藤群落”和“水栗+粘木-阿丁枫+光叶红豆-生虫树-罗伞-省藤群落，以及“米锥-阿丁枫+岭南槭+光叶红豆+显脉新木姜-苦竹群落”（刘雄恩，王伯荪．1987）的综合（EBLF书中表8-11∕4-6，曾称：光叶红豆∕米槠-蕈树群落）</p></li>
 <li><p>(C3) 合柱金莲木/大果马蹄荷群落（<em>Sinia
 rhodoleuca</em>/<em>Exbucklandia tonkinensis</em> Comm.）</p>
-<p>分布在广东封开黑石顶。引自：《黑石顶自然保护区植被分类系统和主要类型及分布》中“马蹄荷-桂北木姜子+陈氏钓樟-线齿木”（刘雄恩，王伯荪．1987）（EBLF书中表8-11∕7，曾称：合柱金莲木/大果马蹄荷群落）</p></li>
+<p>分布在广东封开黑石顶。引自：《黑石顶自然保护区植被分类系统和主要类型及分布》中“马蹄荷-桂北木姜子+陈氏钓樟-线齿木”（刘雄恩，王伯荪．1987）（EBLF书中表8-11/7，曾称：合柱金莲木/大果马蹄荷群落）</p></li>
 <li><p>(C4) 林仔竹-赤竹/蕈树-大果马蹄群落 (<em>Oligostachyum
 nuspiculum</em>-<em>Sasa</em> sp./<em>Altingia
 chinensis</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
@@ -341,9 +342,7 @@ chinensis</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
 <li><p>(C5) 光里白-柏拉木/鹿角锥-大果马蹄荷群落(<em>Hicriopteris
 laevissima</em>-<em>Blastus cochinchinensis</em>/<em>Castanopsis
 lamontii</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
-<p>分布在湖南八面山，江西井冈山。引自：《湖南植被》中“红钩锥（鹿角锥）、大果马蹄荷林”
-（祁承经，1990）和《江西森林》“狗脊-柏拉木-大果马蹄荷林型”
-（江西森林编委会，1986）（EBLF书中表8-13，曾称：柏拉木∕鹿角锥-大果马蹄荷群落）</p></li>
+<p>分布在湖南八面山，江西井冈山。引自：《湖南植被》中“红钩锥（鹿角锥）、大果马蹄荷林”（祁承经，1990）和《江西森林》“狗脊-柏拉木-大果马蹄荷林型”（江西森林编委会，1986）（EBLF书中表8-13，曾称：柏拉木/鹿角锥-大果马蹄荷群落）</p></li>
 <li><p>(C6) 沿阶草-上思粗叶木/蕈树-大果马蹄荷群落(<em>Ophiopogon
 bodinieri</em>-<em>Lasianthus tsiangii</em>/<em>Altingia
 chinensis</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
