--- a/Alli-2a37.html
+++ b/Alli-2a37.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -286,7 +286,7 @@ All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>吊皮锥</p>
+<p>吊皮锥（<em>Castanopsis kawakamii</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -317,9 +317,11 @@ reticulata</em>）、买麻藤（<em>Gnetum montanum</em>）</p></li>
 <ul>
 <li><p>(A1) 狗脊-百两金/吊皮锥群丛(<em>Woodwardia japonica</em>
 -<em>Ardisia crispa</em>/<em>Castanopsis kawakami</em> Ass.)</p>
-<p>分布在福建三明。引自：《福建三明瓦坑的赤枝锥林》中“赤枝栲(吊皮锥)-百两金-狗脊蕨+山姜群丛”、“赤枝栲+木荷-百两金-芒萁+狗脊蕨群丛”、“毛竹+木荷+赤枝栲-百两金-芒萁+狗脊蕨群丛”
-(林鹏，邱喜昭，1986)
-。现为3样方综合（EBLF书中表8-16∕1-3；EBLF书中表8-17，曾称：百两金-鼠刺/吊皮锥群落）</p></li>
+<p>分布在福建三明。引自：《福建三明瓦坑的赤枝锥林》中“赤枝栲(吊皮锥)-百两金-狗脊蕨+山姜群丛”、“赤枝栲+木荷-百两金-芒萁+狗脊蕨群丛”、“毛竹+木荷+赤枝栲-百两金-芒萁+狗脊蕨群丛”(林鹏，邱喜昭，1986)。现为3样方综合（EBLF书中表8-16/1-3；EBLF书中表8-17，曾称：百两金-鼠刺/吊皮锥群落）</p></li>
+<li><p>(A2）金毛狗-鹅掌柴/吊皮锥群丛(<em>Ardisia
+quingueqona</em>/<em>Castanopsis kawakami</em>+<em>Erythrophloeum
+fordii</em> Ass.)</p>
+<p>引自：《广西吊皮锥（大叶苦槠）林分类的研究》（王献溥和蒋高明，2002）</p></li>
 <li><p>(C1）光叶红豆/粘木-吊皮锥群落（<em>Ormosia
 glaberrima</em>/<em>Ixonanthes chinensis</em>-<em>Castanopsis
 kawakamii</em> Comm.）</p>
@@ -336,21 +338,21 @@ kawakami</em> Comm.)</p>
 <li><p>(C4) 绿竹/黄果厚壳-吊皮锥群落(<em>Dendrocalamopsis
 oldhami</em>/<em>Cryptocarya concinna</em>-<em>Castanopsis
 kawakamii</em> Comm.）</p>
-<p>分布在广西容县自良，引自：引自：《广西植被志要》（表5:183-184，原称：青钩栲-大节竹-淡竹叶群丛）；（EBLF书中表8-15∕2，曾称：罗伞树/格木-吊皮锥群落）</p></li>
+<p>分布在广西容县自良，引自：引自：《广西植被志要》（表5:183-184，原称：青钩栲-大节竹-淡竹叶群丛）；（EBLF书中表8-15/2，曾称：罗伞树/格木-吊皮锥群落）</p></li>
 <li><p>(C5) 沙罗单竹-鹅掌柴/乌榄-吊皮锥群落(<em>Schizostachyum
 funghomii</em>-<em>Schefflera octophylla</em>/<em>Castanopsis
 kawakamii</em>+<em>Canarium pimela</em> Comm.）</p>
-<p>分布在广西容县。引自：《广西植被志要》（表5:175-176，原称：青钩栲-罗伞树-苦竹-金毛狗群丛（王献溥，蒋高明，2002）（EBLF书中表8-15∕3，曾称：沙罗单竹-乌榄/吊皮锥群落）</p></li>
+<p>分布在广西容县。引自：《广西植被志要》（表5:175-176，原称：青钩栲-罗伞树-苦竹-金毛狗群丛（王献溥，蒋高明，2002）（EBLF书中表8-15/3，曾称：沙罗单竹-乌榄/吊皮锥群落）</p></li>
 <li><p>(C6) 金叶子-岭南山竹子/吊皮锥群落(<em>Craibiodendron
 stellatum</em>-<em>Garcinia oblongifolia</em>/<em>Castanopsis
 kawakamii</em> Comm.)</p>
 <p>分布在广西大新县。引自：《广西植被志要》（表5:177-1178
-，原称青钩栲-鸭脚木-罗伞树+九节木-狗脊+金毛狗群丛），（EBLF书中表8-15∕4，曾称：金叶子-岭南山竹子/吊皮锥群落）</p></li>
+，原称青钩栲-鸭脚木-罗伞树+九节木-狗脊+金毛狗群丛），（EBLF书中表8-15/4，曾称：金叶子-岭南山竹子/吊皮锥群落）</p></li>
 <li><p>(C7) 大节竹-鹅掌柴/吊皮锥群落(<em>Indosasa
 crassiflora</em>-<em>Schefflera octophylla</em>/<em>Castanopsis
 kawakami</em> Comm.)</p>
 <p>分布在广西容县。引自：《广西植被志要》（表5:181-182
-，原称“青钩栲+黄果厚壳桂-九节木-东方乌毛蕨群丛”（EBLF书中表8-15∕5，曾称：大节竹/吊皮锥群落）</p></li>
+，原称“青钩栲+黄果厚壳桂-九节木-东方乌毛蕨群丛”（EBLF书中表8-15/5，曾称：大节竹/吊皮锥群落）</p></li>
 </ul>
 </div>
 </div>
