--- a/Alli-2a38.html
+++ b/Alli-2a38.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -286,7 +286,7 @@ All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>黧蒴锥</p>
+<p>黧蒴锥（<em>Castanopsis fissa</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -296,7 +296,7 @@ All.</span></h2>
 roxburghiana</em>）、笔罗子（<em>Meliosma
 rigida</em>）、栲树（<em>Castanopsis fargesii</em>）、红楠（<em>Machilus
 thunbergii</em>）山杜英（<em>Elaeocarpus
-sylvestris</em>）、木荷（<em>Schima superba</em>），山乌桕（<em>Sapium
+sylvestris</em>）、木荷（<em>Schima superba</em>）、山乌桕（<em>Sapium
 discolor</em>）、猴耳环（<em>Pithecellobium clypearia</em>）</p></li>
 <li><p>灌木层：毛冬青（<em>Ilex pubescens</em>）、九节木（<em>Psychotria
 rubra</em>）、三桠苦（<em>Evodia lepta</em>）、柏拉木（<em>Blastus
@@ -315,45 +315,45 @@ oldhamii</em>）、羊角藤（<em>Morinda umbellata</em> subsp.
 <div id="目前包含9个群落" class="section level3">
 <h3>目前包含9个群落</h3>
 <ul>
-<li><p>(C1）毛果柃-油茶∕黧蒴锥群落(<em>Eurya
+<li><p>(C1）毛果柃-油茶/黧蒴锥群落(<em>Eurya
 trichocarpa</em>-<em>Camellia oleifera</em>/<em>Castanopsis fissa</em>
 Comm.)</p>
 <p>分布在湖南通道。引自：引自《湖南植被》中的“黧蒴栲林”（祁承经，1990）（EBLF书中表8-19，曾称：罗伞树-油茶/黧蒴锥群落）</p></li>
 <li><p>(C2）鼠刺-润楠/木荷-黧蒴锥群落(<em>Itea
 chinensis</em>-<em>Machilus</em> sp./<em>Schima
 superba</em>-<em>Castanopsis fissa</em> Comm.)</p>
-<p>分布在福建南平。引自《福建植被》中的“闽粤锥-华鼠刺-狗脊群丛“（林鹏，1990）（EBLF书中表8-21∕1，曾称：鼠刺∕木荷-黧蒴锥群落）</p></li>
+<p>分布在福建南平。引自《福建植被》中的“闽粤锥-华鼠刺-狗脊群丛“（林鹏，1990）（EBLF书中表8-21∕1，曾称：鼠刺/木荷-黧蒴锥群落）</p></li>
 <li><p>(C3) 箬竹-野含笑/黧蒴锥群落(<em>Indocalamus
 tessellatus</em>-<em>Michelia skinneriana</em>/<em>Castanopsis
 fissa</em> Comm.)</p>
-<p>分布在福建邵武。引自《福建森林》中的“华里白箬竹野含笑黧蒴锥林”（福建森林编委会，1993）（EBLF书中表8-21∕2，曾称：箬竹-野含笑/黧蒴锥群落）</p></li>
+<p>分布在福建邵武。引自《福建森林》中的“华里白箬竹野含笑黧蒴锥林”（福建森林编委会，1993）（EBLF书中表8-21/2，曾称：箬竹-野含笑/黧蒴锥群落）</p></li>
 <li><p>(C4) 白花灯笼-黑桫椤/黧蒴锥群落（<em>Clerodendrum
 fortunatum</em>-<em>Alsophila podophylla</em>/<em>Castanopsis fissa</em>
 Comm.）</p>
 <p>分布在福建南靖。引自：《福建省南靖南亚热带雨林自然保护区科学考察报告》中的“闽粵锥-白花灯笼-狗脊群丛”
-（林鹏等，1999）（EBLF书中表8-20∕1，曾称：白花灯笼-红楠/黧蒴锥群落）</p></li>
+（林鹏等，1999）（EBLF书中表8-20/1，曾称：白花灯笼-红楠/黧蒴锥群落）</p></li>
 <li><p>(C5) 金毛榕-猴耳环/黧蒴锥群落（<em>Ficus
 chryComarpa</em>-<em>Pithecellobium clypearia</em>/<em>Castanopsis
 fissa</em> Comm.）</p>
 <p>分布在福建长泰。引自《福建植被》一书中“闽粤锥（黧蒴锥）+围延树（猴耳环）+鹅掌柴—野牡丹—胎生狗脊+淡竹叶群落”
-（林鹏，1990）（EBLF书中表8-20∕2，曾称：金毛榕-猴耳环/黧蒴锥群落）</p></li>
+（林鹏，1990）（EBLF书中表8-20/2，曾称：金毛榕-猴耳环/黧蒴锥群落）</p></li>
 <li><p>(C6) 二色波罗蜜-鹅掌柴/黧蒴锥群落（<em>Ardisia
 quinquegona</em>-<em>Schefflera octophylla</em>/<em>Castanopsis
 fissa</em>Comm.）</p>
-<p>分布在广西容县。引自：《广西植被志要》（表：5:107-108；:109-110，原称：“黧蒴栲-鸭脚木-罗伞树+东方乌毛蕨群丛”和“黧蒴锥-鸭脚木-九节木+东方乌毛蕨群丛”综合（王献溥，2008）（EBLF书中表8-18∕1-2，曾称：罗伞树-鹅掌柴/黧蒴锥群落）</p></li>
+<p>分布在广西容县。引自：《广西植被志要》（表：5:107-108；:109-110，原称：“黧蒴栲-鸭脚木-罗伞树+东方乌毛蕨群丛”和“黧蒴锥-鸭脚木-九节木+东方乌毛蕨群丛”综合（王献溥，2008）（EBLF书中表8-18/1-2，曾称：罗伞树-鹅掌柴/黧蒴锥群落）</p></li>
 <li><p>(C7) 高大短肠蕨-基脉润楠/黧蒴锥群落（<em>Allantodia
 procera</em>-<em>Machilus decursinervis</em>/<em>Castanopsis fissa</em>
 Comm.）</p>
 <p>分布在广西武鸣大明山。引自：《广西植被志要》（表5:111-112，原称“黧蒴锥-基脉润楠-野锦香-金毛狗+东方乌毛蕨群丛”
-，（EBLF书中表8-18∕3，曾称：柏拉木-基脉润楠∕黧蒴锥群落）</p></li>
+，（EBLF书中表8-18∕3，曾称：柏拉木-基脉润楠/黧蒴锥群落）</p></li>
 <li><p>(C8）变叶榕-鹅掌柴/黧蒴锥群落（<em>Ficus
 variolosa</em>-<em>Schefflera octophylla</em>/<em>Castanopsis fissa</em>
 Comm.）</p>
-<p>分布在广西阳朔。引自：《广西植被志要》（表5:105-106，原称：“黧蒴锥-鼠刺-杜茎山-狗脊+金狗群丛“，（EBLF书中表8-18∕4，曾称：粗叶榕-鹅掌柴/黧蒴锥群落）</p></li>
+<p>分布在广西阳朔。引自：《广西植被志要》（表5:105-106，原称：“黧蒴锥-鼠刺-杜茎山-狗脊+金狗群丛“，（EBLF书中表8-18/4，曾称：粗叶榕-鹅掌柴/黧蒴锥群落）</p></li>
 <li><p>(C9）茶杆竹-紫荆木/黧蒴锥群落（<em>Pseudosasa
 amabilis</em>-<em>Madhuca pasquieri</em>/<em>Castanopsis fissa</em>
 Comm.）</p>
-<p>分布在广西容县。引自：《广西植被志要》（表5:113-114，原称“黧蒴锥-茶杆竹+淡竹叶群丛”（王献溥，2008）（EBLF书中表8-18∕5，曾称：茶杆竹/黧蒴锥群落）</p></li>
+<p>分布在广西容县。引自：《广西植被志要》（表5:113-114，原称“黧蒴锥-茶杆竹+淡竹叶群丛”（王献溥，2008）（EBLF书中表8-18/5，曾称：茶杆竹/黧蒴锥群落）</p></li>
 </ul>
 </div>
 </div>
