--- a/Alli-2a40.html
+++ b/Alli-2a40.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,11 +280,11 @@ $(document).ready(function () {
 <div id="琼楠-润楠-华润楠群团" class="section level2">
 <h2><span style="color: blue;">琼楠-润楠-华润楠群团</span></h2>
 </div>
-<div id="beilschmiedia-intermedia-machilus-spp.-machilus-chinensis-all."
+<div
+id="beilschmiedia-intermedia---machilus-spp.---machilus-chinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Beilschmiedia
-intermedia</em>-<em>Machilus</em> spp.-<em>Machilus chinensis</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Beilschmiedia intermedia</em> -
+<em>Machilus</em> spp. - <em>Machilus chinensis</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -293,9 +293,9 @@ tsangii</em>）、广东琼楠（<em>Beilschmiesia
 fordii</em>），以及多种润楠（猪脚润楠<em>Machilus
 cathayensis</em>、基脉润楠<em>Machilus
 decursinervis</em>、两广润楠<em>Machilus
-liangkwangensis</em>，纳槁润楠<em>Machilus
+liangkwangensis</em>、纳槁润楠<em>Machilus
 nakao</em>、长梗润楠<em>Machilus
-longipedicellata</em>，多脉润楠<em>Machilus nultinervis</em>）</p>
+longipedicellata</em>、多脉润楠<em>Machilus nultinervis</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -339,27 +339,27 @@ chinensis</em> Comm.)</p>
 <li><p>(C3) 大叶仙茅-九节木/厚叶琼楠-网脉琼楠群落（<em>Curculigo
 capitulata</em>-<em>Psychotria rubra</em>/<em>Beilschmiedia
 percoriacea</em>-<em>Beilschmiedia tsangii</em> Comm.）</p>
-<p>分布在广西桂平金田，引自：《广西植被志要》（原称“？？？”，表格号：5.211-212）（王献溥等，2014）</p></li>
+<p>分布在广西桂平金田，引自：《广西植被志要》（表格号：5.211-212）（王献溥等，2014）</p></li>
 <li><p>(C4) 平滑楼梯草-九节木/厚叶琼楠-网脉琼楠群落（<em>Elatostema
 laevigatum</em>-<em>Psychotria rubra</em>/<em>Beilschmiedia
 percoriacea</em>-<em>Beilschmiedia tsangii</em> Comm.）</p>
-<p>分布在广西桂平金田，引自：《广西植被志要》（原称“？？？”，表格号：5.213-214）（王献溥等，2014）</p></li>
+<p>分布在广西桂平金田，引自：《广西植被志要》（表格号：5.213-214）（王献溥等，2014）</p></li>
 <li><p>(C5）红紫珠-三叉苦罗/猪脚润楠-华润楠群落（<em>Callicarpa
 rubella</em>-<em>Evodia lepta</em>/<em>Machilus
 cathayensis</em>-<em>Machilus chinensis</em> Comm.）</p>
-<p>分布在广西容县水口，引自：《广西植被志要》（原称“？？？”，表格号：5.215-216）（王献溥等，2014）</p></li>
+<p>分布在广西容县水口，引自：《广西植被志要》（表格号：5.215-216）（王献溥等，2014）</p></li>
 <li><p>(C6) 东南鳞毛蕨-班叶珠砂根/基脉润楠-猪脚润楠群落(<em>Dryopteris
 championii</em>-<em>Ardisia punctata</em>/<em>Machilus
 decursinervis</em>-<em>Machilus cathayensis</em> Comm.)</p>
-<p>分布在广西桂平金田，引自：《广西植被志要》（原称“？？？”，表格号：5.217-218）（王献溥等，2014）</p></li>
+<p>分布在广西桂平金田，引自：《广西植被志要》（表格号：5.217-218）（王献溥等，2014）</p></li>
 <li><p>(C7) 长生铁角蕨-长尾粗叶木/山龙眼-纳搞润楠群落”（<em>Asplenium
 prolongatum</em>-<em>Lasianthus longicauda</em>/<em>Helicia
 taiwaniana</em>-<em>Machilus nakao</em> Comm.）</p>
-<p>分布在广西上思红旗林场.引自：《广西植被志要》（原称“？？？”，表格号：5.221-222）（王献溥等，2014）</p></li>
+<p>分布在广西上思红旗林场.引自：《广西植被志要》（表格号：5.221-222）（王献溥等，2014）</p></li>
 <li><p>(C8）潘南新月蕨-短柄紫珠-水东哥/长梗润楠群落（<em>Abacopteris
 penangiana</em>-<em>Callicarpa brevipes</em>-<em>Saurauia
 tristyla</em>/<em>Machilus longipedicellata</em> Comm.）</p>
-<p>分布在广西容县天堂顶，引自：《广西植被志要》（原称“？？？”，表格号：5.223-224）（王献溥等，2014）</p></li>
+<p>分布在广西容县天堂顶，引自：《广西植被志要》（表格号：5.223-224）（王献溥等，2014）</p></li>
 </ul>
 </div>
 </div>
