--- a/Alli-2a41.html
+++ b/Alli-2a41.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,15 +281,16 @@ $(document).ready(function () {
 <h2><span style="color: blue;">鹅掌柴-假苹婆-红楠群团</span></h2>
 </div>
 <div
-id="heptapleurum-heptaphyllum-sterculia-lanceolata-machilus-thunbergii-all."
+id="heptapleurum-heptaphyllum---sterculia-lanceolata---machilus-thunbergii-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Heptapleurum
-heptaphyllum</em>-<em>Sterculia lanceolata</em>-<em>Machilus
-thunbergii</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Heptapleurum heptaphyllum</em> -
+<em>Sterculia lanceolata</em> - <em>Machilus thunbergii</em>
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>红楠和广东润楠</p>
+<p>红楠（<em>Machilus thunbergii</em>）和广东润楠（<em>Machilus
+kwangtungensis</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -321,16 +322,15 @@ odoratissimum</em>），种类组成中有一些适雨常绿阔叶林中植物</
 levinei</em>-<em>Schefflera octophylla</em>/<em>Machilus thunbergii</em>
 Comm.）</p>
 <p>分布在香港。引自：《香港植被》中的
-①“红楠+泡吹(笔罗子)群丛”、②“红楠+白桂木群丛”、③“鸭脚木+黄樟+红楠群丛”、④“红楠+鸭脚木+亮叶肉实群丛”，（张宏达和王伯荪，1989）的综合（EBLF书中表8-32∕1-4；曾称：鹅掌柴-山蒲桃/
-红楠群落）</p></li>
+①“红楠+泡吹（笔罗子）群丛”、②“红楠+白桂木群丛”、③“鸭脚木+黄樟+红楠群丛”、④“红楠+鸭脚木+亮叶肉实群丛”，（张宏达和王伯荪，1989）的综合（EBLF书中表8-32∕1-4；曾称：鹅掌柴-山蒲桃/红楠群落）</p></li>
 <li><p>(C2）鼠刺-鹅掌柴/山杜英-红楠群丛（<em>Itea
 chinensis</em>-<em>Schefflera octophylla</em>/<em>Elaeocarpus
 sylvestris</em>-<em>Machilus thunbergii</em> Comm.）</p>
 <p>分布在香港。引自：《香港植被》中的 ① “红楠+山杜英+鸭脚木群丛”、②
 “山杜英+鸭脚木+光叶灰木+红楠群丛”，以及③
 “红楠+短花润楠群丛”（<em>Machilus thunbergii</em>+<em>Machilus
-breviflora</em> Ass.）综合（张宏达和王伯荪，1989）（EBLF书中表8-32∕5-7;
-曾称：）</p></li>
+breviflora</em>
+Ass.）综合（张宏达和王伯荪，1989）（EBLF书中表8-32/5-7）</p></li>
 <li><p>(C3) 水团花-鹅掌柴/山杜英-红楠群落（<em>Machilus
 thunbergii</em>-<em>Schefflera octophylla</em>-<em>Adina pilulifera</em>
 Comm.）</p>
@@ -344,12 +344,11 @@ Comm.）</p>
 <li><p>(C5）细齿叶柃-鹅掌柴/广东润楠-红楠群落（<em>Machilus
 thunbergii</em>+<em>Machilus thunbergii</em>-<em>Schefflera
 octophylla</em>-<em>Eurya nitida</em> Comm.）</p>
-<p>分布在香港。引自：《香港植被》中的“红楠+广东润楠+木荷群丛”和
-“红楠+华润楠+鹅掌柴群丛”（张宏达和王伯荪，1989）（EBLF书中表8-32∕11-12，曾称：鹅掌柴/广东润楠-红楠群落）</p></li>
+<p>分布在香港。引自：《香港植被》中的“红楠+广东润楠+木荷群丛”和“红楠+华润楠+鹅掌柴群丛”（张宏达和王伯荪，1989）（EBLF书中表8-32∕11-12，曾称：鹅掌柴/广东润楠-红楠群落）</p></li>
 <li><p>(C6) 鱼骨木-鹅掌柴/木荷-红楠群落（<em>Schima
 superba</em>+<em>Machilus thunbergii</em>-<em>Schefflera
 octophylla</em>-<em>Canthium dicoccum</em> Comm.）</p>
-<p>分布在香港亚妈笏、大潭水塘等地,引自：《香港植被》中的”?????“（EBLF书中表8-33∕1-2，曾称：罗伞树-鱼骨木/木荷群落）</p></li>
+<p>分布在香港亚妈笏、大潭水塘等地，引自：《香港植被》（EBLF书中表8-33/1-2，曾称：罗伞树-鱼骨木/木荷群落）</p></li>
 </ul>
 </div>
 </div>
