--- a/Alli-2a42.html
+++ b/Alli-2a42.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,16 +280,15 @@ $(document).ready(function () {
 <div id="西南木荷-印锥-红锥群团" class="section level2">
 <h2><span style="color: blue;">西南木荷-印锥-红锥群团</span></h2>
 </div>
-<div id="schima-wallichii-castanopsis-indica-c.-hystrix-all."
+<div id="schima-wallichii---castanopsis-indica---c.-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Schima
-wallichii</em>-<em>Castanopsis indica</em>-<em>C. hystrix</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Schima wallichii</em> -
+<em>Castanopsis indica</em> - <em>C. hystrix</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>红锥(<em>Castanopsis
-hystrix</em>)、印锥、西南木荷、截果柯（<em>Lithocarpus
+<p>红锥（<em>Castanopsis
+hystrix</em>）、印锥、西南木荷、截果柯（<em>Lithocarpus
 truncatus</em>）、小果锥（<em>Castanopsis fleuryi</em>）</p>
 <p><br></p>
 </div>
@@ -337,47 +336,47 @@ simonsii</em>-<em>Schima wallichii</em> Comm.）</p>
 “西南木荷+滇八角-滑竹+小金竹群落”（<em>Schima
 wallichii</em>+<em>Illicium simonsii</em>-<em>Shinatala
 chinensis</em>+<em>Indcalamus pedolis</em>
-Comm.）（云南大学生态地植物学研究室，1960）（EBLF书中表8-36∕2，曾称：坚木山矾∕野八角-西南木荷群落）</p></li>
+Comm.）（云南大学生态地植物学研究室，1960）（EBLF书中表8-36/2，曾称：坚木山矾∕野八角-西南木荷群落）</p></li>
 <li><p>(C3) 糙叶大沙叶-闽粤石楠/毛木荷-红锥群落（<em>Pavetta
 scabrifolia</em>-<em>Photinia benthamiana</em>/<em>Schima
 villosa</em>-<em>Castanopsis hystrix</em> Comm.）</p>
 <p>分布于勐海县盆地边缘。引自《云南植被》中的“红锥、毛木荷群落”（<em>Castanopsis
-hystrix</em>, <em>Schima villosa</em> Comm.) （云南植被编写组,
-1987）（EBLF书中表8-37∕1，曾称：闽粤石楠/毛木荷-红锥群落）</p></li>
+hystrix</em>, <em>Schima villosa</em> Comm.)
+（云南植被编写组，1987）（EBLF书中表8-37∕1，曾称：闽粤石楠/毛木荷-红锥群落）</p></li>
 <li><p>(C4) 黑鳞珍珠-滇白珠-深绿山龙眼/红锥群落（<em>Scleria
-hookeriana</em>-<em>Gaultheria leucocarpa</em> var.
-<em>Crenulata</em>-<em>Helicia nilagirica</em>/<em>Castanopsis
-hystrix</em> Comm.）</p>
+hookeriana</em>-<em>Gaultheria leucocarpa var.
+Crenulata</em>-<em>Helicia nilagirica</em>/<em>Castanopsis hystrix</em>
+Comm.）</p>
 <p>分布于思茅、普洱、澜沧、双江、镇越。引自《云南植被》一书中的“刺栲、小果石栎、红木荷群落”（<em>Castanopsis
-hystrix</em>，<em>Lithocarpus microspermus</em>，<em>Schima
-wallichii</em> Comm.）（云南植被编写组,
+hystrix</em>、<em>Lithocarpus microspermus</em>，<em>Schima
+wallichii</em> Comm.）（云南植被编写组，
 1987）（EBLF书中表8-37∕2-3，曾称：深绿山龙眼-小果柯/西南木荷群落）</p></li>
-<li><p>(C5）齿缘吊钟花-深绿山龙眼∕红锥-短刺锥群落（E<em>nkianthus
+<li><p>(C5）齿缘吊钟花-深绿山龙眼∕红锥-短刺锥群落（<em>Enkianthus
 serrulatus</em>-<em>Helicia nilagirica</em>/<em>Castanopsis
 hystrix</em>-<em>Castanopsis echidnocarpa</em> Comm.）</p>
 <p>分布于思茅、普洱、澜沧、双江、镇越。引自《云南植被》一书中的“刺栲、小果石栎、红木荷群落”（<em>Castanopsis
-hystrix</em>，<em>Lithocarpus microspermus</em>，<em>Schima
-wallichii</em> Comm.）（云南植被编写组,
-1987）（EBLF书中表8-37∕2-3，曾称：深绿山龙眼-小果柯/西南木荷群落）</p></li>
+hystrix</em>、<em>Lithocarpus microspermus</em>、<em>Schima
+wallichii</em>
+Comm.）（云南植被编写组，1987）（EBLF书中表8-37/2-3，曾称：深绿山龙眼-小果柯/西南木荷群落）</p></li>
 <li><p>(C6) 茶梨-毛枝柯/红锥-短穗泥柯群落（<em>Anneslea
-fragrans</em>-<em>Lithocarpus fenestratus</em> var.
-<em>Brachycarpus</em>/<em>Castanopsis hystrix</em>-<em>Lithocarpus
-fenestratus</em> var. <em>brachycarpus</em> Comm.）</p>
+fragrans</em>-<em>Lithocarpus fenestratus var.
+Brachycarpus</em>/<em>Castanopsis hystrix</em>-<em>Lithocarpus
+fenestratus var. brachycarpus</em> Comm.）</p>
 <p>西双版纳、临沧和德宏等地。引自《云南植被》中的“刺栲、印栲群落”（<em>Castanopsis
-hystrix</em> , <em>Castanopsis
-indica</em>）（云南植被编写组，1987）（EBLF书中表8-37∕4，曾称：茶梨/红锥-印锥群落）</p></li>
+hystrix</em> 、<em>Castanopsis
+indica</em>）（云南植被编写组，1987）（EBLF书中表8-37/4，曾称：茶梨/红锥-印锥群落）</p></li>
 <li><p>(C7) 深绿山龙眼/小果锥-截果柯群落（<em>Helicia
 nilagirica</em>/<em>Castanopsis fleuryi</em>-<em>Lithocarpus
 truncates</em> Comm.）</p>
-<p>分布于云县、景东、镇源、峨山、新平。引自《云南植被》中的“小果锥、截果柯群落”（云南植被编写组,
-1987）（EBLF书中表8-38∕1，曾称：深绿山龙眼/截果柯-小果锥群落）</p></li>
+<p>分布于云县、景东、镇源、峨山、新平。引自《云南植被》中的“小果锥、截果柯群落”（云南植被编写组，1987）（EBLF书中表8-38/1，曾称：深绿山龙眼/截果柯-小果锥群落）</p></li>
 <li><p>(C8) 大叶黑桫椤-云南柿/罗浮锥-截果柯群落（<em>Alsophila
 gigantea</em>-<em>Diospyros yunnanensis</em>/<em>Castanopsis
 fabri</em>-<em>Lithocarpus truncates</em> Comm.）</p>
 <p>分布于西畴、麻栗坡、马关。引自《云南植被》中的“罗浮栲、杯状栲（枹丝锥）、截果石栎群落”(<em>Castanopsis
 fabri</em>、<em>Castanopsis calathiformis</em>、<em>Lithocarpus
-truncates</em>) （云南植被编写组，1987）（EBLF书中表8-38∕2，曾称:
-云南柿/截果柯- 罗浮锥群落）</p></li>
+truncates</em>)
+（云南植被编写组，1987）（EBLF书中表8-38/2，曾称:：云南柿/截果柯-
+罗浮锥群落）</p></li>
 </ul>
 </div>
 </div>
