--- a/Alli-2a43.html
+++ b/Alli-2a43.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="栲-秃枝润楠群团" class="section level2">
 <h2><span style="color: blue;">栲-秃枝润楠群团</span></h2>
 </div>
-<div id="castanopsis-fargesii-machilus-kurzi-all."
+<div id="castanopsis-fargesii---machilus-kurzi-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-fargesii</em>-<em>Machilus kurzi</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis fargesii</em> -
+<em>Machilus kurzi</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -308,8 +308,8 @@ wightianum</em>）</p></li>
 caudigerum</em>）、长圆楼梯草（<em>Elatostema
 oblongifolium</em>）、麒麟叶（<em>Epipremnum
 pinnatum</em>）、爵床科一种(<em>Acanthaceae</em> sp.)</p></li>
-<li><p>藤本植物：六尺卫矛（<em>Euonymus bockii</em> var.
-<em>orgyalis</em>）、狭叶崖爬藤（<em>Tetrastigma
+<li><p>藤本植物：六尺卫矛（<em>Euonymus bockii var.
+orgyalis</em>）、狭叶崖爬藤（<em>Tetrastigma
 serrulatum</em>）、瘤枝微花藤（<em>Iodes
 seguini</em>）、翼核果（<em>Ventilago leiocarpa</em>）</p></li>
 </ul>
@@ -323,8 +323,8 @@ scripta</em>-<em>Schefflera diversifoliolata</em>/<em>Castanopsis
 fargesii</em>-<em>Machilus kurzii</em> Ass.）</p>
 <p>分布于西畴董槽。引自《云南植被》中的“桢楠、栲树、异叶鹅掌柴群落”（<em>Machilus
 kurzii</em>、<em>Castanopsis fargesii</em>、<em>Schefflera
-diversifoliolata</em> Comm.）。（云南植被编写组,
-1987）（EBLF书中表8-39,曾称：异叶鹅掌柴/栲树-秃枝润楠群落）</p></li>
+diversifoliolata</em>
+Comm.）。（云南植被编写组，1987）（EBLF书中表8-39，曾称：异叶鹅掌柴/栲树-秃枝润楠群落）</p></li>
 </ul>
 </div>
 </div>
