--- a/Alli-2a44.html
+++ b/Alli-2a44.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">细青皮-红锥-短刺锥群团</span></h2>
 </div>
 <div
-id="liquidambar-altingia-excelsa-castanopsis-hystrix-c.-echinocarpa-all."
+id="liquidambar-altingia-excelsa---castanopsis-hystrix---c.-echinocarpa-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Liquidambar</em>
-(<em>Altingia</em>) <em>excelsa</em>-<em>Castanopsis hystrix</em>-<em>C.
-echinocarpa</em> All.</span></h2>
+(<em>Altingia</em>) <em>excelsa</em> - <em>Castanopsis hystrix</em> -
+<em>C. echinocarpa</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -297,10 +297,10 @@ echidnocarpa</em>）、西藏柯（<em>Lithocarpus xizangensis</em>）</p>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：云南黄杞(<em>Engelhardia
-spicata</em>)、长尾毛蕊茶(<em>Camellia
-caudata</em>)、锈毛山龙眼(<em>Helicia vestita</em> var.
-<em>longipes</em>)</p></li>
+<li><p>乔木层：云南黄杞（<em>Engelhardia
+spicata</em>）、长尾毛蕊茶（<em>Camellia
+caudata</em>）、锈毛山龙眼（<em>Helicia vestita var.
+longipes</em>）</p></li>
 <li><p>灌木层：分叉露兜（<em>Pandanus
 furcatus</em>）、山矾多种（<em>Symplocos</em>
 spp.）、美果九节（<em>Psychotria
@@ -311,11 +311,11 @@ furcatus</em>）、山矾多种（<em>Symplocos</em>
 spp.）、美果九节（<em>Psychotria
 calocarpa</em>）、梗花粗叶木（<em>Lasianthus
 biermanni</em>）、水红木（<em>Viburnum cylindricum</em>）</p></li>
-<li><p>藤本植物：主要有：云南省藤(<em>Calamus
-yunnanensis</em>)、飞龙掌血(<em>Toddalia
-asiatica</em>)、球穗胡椒（<em>Piper
-mulleesua</em>）、短柄垂子买麻藤(<em>Gnetum pendulum
-f. intermedium</em>)、长叶兰（<em>Cymbidium
+<li><p>藤本植物：主要有：云南省藤（<em>Calamus
+yunnanensis</em>）、飞龙掌血（<em>Toddalia
+asiatica</em>）、球穗胡椒（<em>Piper
+mulleesua</em>）、短柄垂子买麻藤（<em>Gnetum pendulum
+f. intermedium</em>）、长叶兰（<em>Cymbidium
 erythraeum</em>）、黄蝉兰（<em>Cymbidium
 iridioides</em>）、藏布江树萝卜（<em>Agapetes praeclara</em>）</p></li>
 </ul>
@@ -328,17 +328,17 @@ iridioides</em>）、藏布江树萝卜（<em>Agapetes praeclara</em>）</p></li
 wallichiana</em>-<em>Brassaiopsis simplicifolia</em>/ <em>Altingia
 excels</em>-<em>Castanopsis hystrix</em> Comm.)</p>
 <p>分布在墨脱，大峡谷海拔1100~1400m (EBLF
-书中表8-9/1,曾称：雅鲁藏布江大峡谷河谷地区植物群落)</p></li>
+书中表8-9/1，曾称：雅鲁藏布江大峡谷河谷地区植物群落)</p></li>
 <li><p>(C2）长穗薹草-越桔/墨脱柯-红锥群落(<em>Carex
 eminene</em>-<em>Vaccinium</em>/<em>Lithocarpus obscures</em>-
 <em>Castanopsis hystrix</em> Comm.)</p>
 <p>分布在墨脱，大峡谷海拔1100~1400m (EBLF
-书中表8-9/2,曾称：雅鲁藏布江大峡谷河谷地区植物群落)</p></li>
+书中表8-9/2，曾称：雅鲁藏布江大峡谷河谷地区植物群落)</p></li>
 <li><p>(C3) 西南虾脊兰-大叶假卫矛/毛曼青冈-西藏柯群落（<em>Calanthe
 herbacea</em>-<em>Microtropis macrophyllus</em> /<em>Cyclobalanopsis
 gambleana</em>-<em>Lithocarpus xizangensis</em> Comm.）</p>
 <p>分布在墨脱，大峡谷海拔1800~2000m (EBLF
-书中表8-9/3,曾称：雅鲁藏布江大峡谷河谷地区植物群落)</p></li>
+书中表8-9/3，曾称：雅鲁藏布江大峡谷河谷地区植物群落)</p></li>
 </ul>
 </div>
 </div>
