--- a/Alli-2a46.html
+++ b/Alli-2a46.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,18 +281,18 @@ $(document).ready(function () {
 <h2><span style="color: blue;">香润楠-山龙眼-疏脉山香园群团</span></h2>
 </div>
 <div
-id="machilus-zuihoensis-helicia-formosana-staphylea-indochinensis-all."
+id="machilus-zuihoensis---helicia-formosana---staphylea-indochinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Machilus
-zuihoensis</em>-<em>Helicia formosana</em>-<em>Staphylea
-indochinensis</em> All.</span></h2>
-<p><br></p>
+<h2><span style="color: darkblue;"><em>Machilus zuihoensis</em> -
+<em>Helicia formosana</em> - <em>Staphylea indochinensis</em>
+All.</span></h2>
+<hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>山香圆（<em>Turpinia montana</em>）、三叶山香圆（<em>Staphylea
 ternata</em>）、山龙眼（<em>Helicia
 formosana</em>）、香润楠（<em>Machilus
-zuihoensis</em>）、疏脉山香圆(<em>Staphylea indochinensis</em>)</p>
+zuihoensis</em>）、疏脉山香圆（<em>Staphylea indochinensis</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -306,8 +306,8 @@ acuminata</em>）、白楸（<em>Mallotus
 paniculatus</em>）、亮叶猴耳环（<em>Pithecellobium
 lucidum</em>）</p></li>
 <li><p>草本层：艳山姜（<em>Alpinia zerumbet</em>）、红果薹（<em>Carex
-baccans</em>）、狭叶楼梯草（<em>Elatostema lineolatum</em> var.
-<em>majus</em>）</p></li>
+baccans</em>）、狭叶楼梯草（<em>Elatostema lineolatum var.
+majus</em>）</p></li>
 <li><p>藤本植物：黄藤（<em>Daemonorops
 margaritae</em>）、白背爬藤榕（<em>Ficus sarmentosa var.
 nipponica</em>）、石柑子（<em>Pothos chinensis</em>）</p></li>
@@ -320,30 +320,24 @@ nipponica</em>）、石柑子（<em>Pothos chinensis</em>）</p></li>
 <li><p>(C1）白楸-异色山黄/台湾山香圆群落（<em>Mallotus
 paniculata</em>-<em>Trema orientalis</em>/<em>Tupinia formosana</em>
 Comm.）</p>
-<p>分布于台中乌石坑（EBLF书中表8-50/1-4.
-曾称：白楸-异色山黄-台湾山香圆群落）</p></li>
+<p>分布于台中乌石坑（EBLF书中表8-50/1-4。曾称：白楸-异色山黄-台湾山香圆群落）</p></li>
 <li><p>(C2）香桂-鹅掌柴/厚壳桂-台湾山香圆群落（<em>Cinnamomum
 subavenium</em>-<em>Schefflera octophylla</em>/<em>Tupinia
 formosana</em>+<em>Cryptocarya chinensis</em> Comm.）</p>
-<p>分布于台中乌石坑（EBLF书中表8-50/5-9.
-曾称：香桂-鹅掌柴/厚壳桂-台湾山香圆群落</p></li>
+<p>分布于台中乌石坑（EBLF书中表8-50/5-9。曾称：香桂-鹅掌柴/厚壳桂-台湾山香圆群落</p></li>
 <li><p>(C3) 柏拉木-鹅掌柴/台湾山龙眼-台湾山香圆群落 (<em>Blastus
 cochinchinensis</em>-<em>Schefflera octophylla</em>/<em>Helicia
 formosana</em>-<em>Turpinia formosana</em> Comm. )</p>
-<p>分布于插天山（EBLF书中表8-51.
-曾称：柏拉木-鹅掌柴/台湾山龙眼-台湾山香圆群落）</p></li>
+<p>分布于插天山（EBLF书中表8-51。曾称：柏拉木-鹅掌柴/台湾山龙眼-台湾山香圆群落）</p></li>
 <li><p>(C4)大头艾纳香-多枝紫金牛-苦枥木/三叶山香圆群落（<em>Blumea
-riparia</em> var. <em>megacephala</em>-<em>Ardisia
-sieboldii</em>-<em>Fraxinus insularis</em>/<em>Turpinia ternate</em>
-Comm.）</p>
-<p>分布于台东海岸山脉（EBLF书中表8-52/1.
-曾称：红淡比/多枝紫金牛-红楠群落）</p></li>
+riparia var. megacephala</em>-<em>Ardisia sieboldii</em>-<em>Fraxinus
+insularis</em>/<em>Turpinia ternate</em> Comm.）</p>
+<p>分布于台东海岸山脉（EBLF书中表8-52/1。曾称：红淡比/多枝紫金牛-红楠群落）</p></li>
 <li><p>(C5) 斜基粗叶木-多枝紫金牛/三叶山香圆-红楠群落（<em>Lasianthus
 wallichii</em>-<em>Ardisia sieboldii</em>-<em>Fraxinus
 insularis</em>/<em>Turpinia ternate</em>-<em>Machilus thunbergii</em>
 Comm.）</p>
-<p>分布于台东海岸8-52/2.
-曾称：曾称：红淡比/多枝紫金牛-红楠群落）</p></li>
+<p>分布于台东海岸8-52/2（曾称：红淡比/多枝紫金牛-红楠群落）</p></li>
 <li><p>(C6) 蔓赤车-南紫薇/红楠-香润楠群落（<em>Pellionia
 scabra</em>-<em>Lagerstroemia subcostata</em>/<em>Machilus
 thunbergii</em>-<em>Machilus zuihoensis</em> Comm.）</p>
