--- a/Alli-2a47.html
+++ b/Alli-2a47.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,16 +281,16 @@ $(document).ready(function () {
 <h2><span style="color: blue;">长果青冈-青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-longinux-q.-cyclobalanopsis-glauca-all."
+id="quercus-cyclobalanopsis-longinux---q.-cyclobalanopsis-glauca-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>longinux</em>-<em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>longinux</em> - <em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、长果青冈(<em>Quercus
-longinux</em>)</p>
+<p>青冈（<em>Quercus glauca</em>）、长果青冈（<em>Quercus
+longinux</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -317,16 +317,16 @@ pubescens</em>）、冠盖藤（<em>Pileostegia viburnoides</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含2个群落" class="section level3">
-<h3>目前包含2个群落</h3>
+<div id="目前包含1个群丛1个群落" class="section level3">
+<h3>目前包含1个群丛，1个群落</h3>
 <ul>
 <li><p>(A1）观音座莲-台湾桫椤/厚壳桂-圆果青冈群丛（<em>Angiopteris
 lygodiifolia</em>-<em>Alsophila spinulosa</em>/<em>Cryptocarya
 chinensis</em>-<em>Cyclobalanopsis globosa</em> Ass.）</p>
 <p>分布于南澳南溪(EBLF表8-47，曾称：鹅掌柴/厚壳桂-圆果青冈群落)</p></li>
 <li><p>(C1) 单叶新月蕨-南仁新木姜子/郭氏长果青冈群落（<em>Pronephrium
-simplex</em>-<em>Neolitsea hiiranensis</em>/<em>Cyclobalanopsis
-longinux</em> var. <em>koui</em> Comm.）</p>
+simplex</em>-<em>Neolitsea hiiranensis</em>/<em>Cyclobalanopsis longinux
+var. koui</em> Comm.）</p>
 <p>分布于牡丹池（EBLF表8-46/1-2，曾称：南仁新木姜子/郭氏长果青冈群落）</p></li>
 </ul>
 </div>
