--- a/Alli-2a48.html
+++ b/Alli-2a48.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -282,17 +282,16 @@ $(document).ready(function () {
 style="color: blue;">山榄-大头茶-罗浮锥-港口木荷群团</span></h2>
 </div>
 <div
-id="planchonella-obovata-polyspora-axillaris-castanopsis-fabri-schima-superba-var.-kankoensis-all."
+id="planchonella-obovata---polyspora-axillaris---castanopsis-fabri---schima-superba-var.-kankoensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Planchonella
-obovata</em>-<em>Polyspora axillaris</em>-<em>Castanopsis
-fabri</em>-<em>Schima superba</em> var. <em>kankoensis</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Planchonella obovata</em> -
+<em>Polyspora axillaris</em> - <em>Castanopsis fabri</em> - <em>Schima
+superba</em> var. <em>kankoensis</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>港口木荷（<em>Schima superba</em> var.
-<em>kankaoensis</em>）、大头茶（<em>Gordonia
+<p>港口木荷（<em>Schima superba var.
+kankaoensis</em>）、大头茶（<em>Gordonia
 axillaris</em>）、星刺锥（<em>Castanopsis
 stellato</em>-<em>spina</em>）、山榄（<em>Planchonella
 obovata</em>）</p>
@@ -312,8 +311,8 @@ marginatus</em>）、乌来冬青（<em>Ilex
 uraiensis</em>）、多枝紫金牛（<em>Ardisia
 sieboldii</em>）、细脉蒲桃（<em>Syzygium
 euphlebium</em>）、台湾山柚（<em>Champereia
-manillana</em>）、恒春石斑木（<em>Raphiolepis indica</em> var.
-<em>hiiranensis</em>）</p></li>
+manillana</em>）、恒春石斑木（<em>Raphiolepis indica var.
+hiiranensis</em>）</p></li>
 <li><p>草本层及藤本和附生植物未见记录</p></li>
 </ul>
 <p><br></p>
@@ -322,19 +321,17 @@ manillana</em>）、恒春石斑木（<em>Raphiolepis indica</em> var.
 <h3>目前包含5个群落</h3>
 <ul>
 <li><p>(C1）膜叶猴欢喜-恒春拟单性木兰/港口木荷-星刺锥群落（<em>Parakmeria
-kachirachirai</em>/<em>Schima superba</em> var.
-<em>kankoensis</em>-<em>Castanopsis stellato</em>-<em>spina</em>
-Comm.）</p>
+kachirachirai</em>/<em>Schima superba var.
+kankoensis</em>-<em>Castanopsis stellato</em>-<em>spina</em> Comm.）</p>
 <p>分布在佳洛水（EBLF书中表8-45/1-3，曾称：恒春拟单性木兰/港口木荷-星刺锥群落）</p></li>
 <li><p>(C2）莲花池山龙眼-岭南青冈/港口木荷-星刺锥群落（<em>Helicia
-rengetiensis</em>-<em>Cyclobalanopsis championii</em>/<em>Schima
-superba</em> var. <em>kankoensis</em>+<em>Castanopsis
-stellato</em>-<em>spina</em> Comm.）</p>
+rengetiensis</em>-<em>Cyclobalanopsis championii</em>/<em>Schima superba
+var. kankoensis</em>+<em>Castanopsis stellato</em>-<em>spina</em>
+Comm.）</p>
 <p>分布在南仁山（EBLF书中表8-45/8-17，曾称：岭南青冈/港口木荷-星刺锥群落）</p></li>
 <li><p>(C3）细脉蒲桃/港口木荷-星刺锥群落（<em>Syzygium
-euphlebium</em>/<em>Schima superba</em> var.
-<em>kankoensis</em>-<em>Castanopsis stellato</em>-<em>spina</em>
-Comm.）</p>
+euphlebium</em>/<em>Schima superba var. kankoensis</em>-<em>Castanopsis
+stellato</em>-<em>spina</em> Comm.）</p>
 <p>分布在南仁山（EBLF书中表8-45/4-7，曾称：细脉蒲桃/港口木荷-星刺锥群落）</p></li>
 <li><p>(C4）蚊母树/山榄-大头茶群落（<em>Distylium
 racemosum</em>/<em>Planchonella obovata</em>-<em>Gordonia axillaris</em>
