--- a/Alli-3a50.html
+++ b/Alli-3a50.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,13 +280,13 @@ $(document).ready(function () {
 <div id="山蒲桃-红鳞蒲桃群团" class="section level2">
 <h2><span style="color: blue;">山蒲桃-红鳞蒲桃群团</span></h2>
 </div>
-<div id="syzygium-levinei-s.-hancei-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Syzygium levinei</em>-<em>S.
+<div id="syzygium-levinei---s.-hancei-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Syzygium levinei</em> - <em>S.
 hancei</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>山蒲桃</p>
+<p>山蒲桃（<em>Syzygium levinei</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -296,8 +296,7 @@ hancei</em> All.</span></h2>
 laurinum</em>）、短序润楠（<em>Machilus
 breviflora</em>）、翻白叶树（<em>Pterospermum
 heterophyllum</em>）、樟树（<em>Cinnamomum
-camphora</em>）、榕树（<em>Ficus
-microcarpa</em>）。鉴别种是：白楸（<em>Mallotus
+camphora</em>）、榕树（<em>Ficus microcarpa</em>）、白楸（<em>Mallotus
 paniculatus</em>）、鹅掌柴（<em>Schefflera octophylla</em>）等</li>
 </ul>
 <p><br></p>
@@ -309,14 +308,13 @@ paniculatus</em>）、鹅掌柴（<em>Schefflera octophylla</em>）等</li>
 paniculatus</em>-<em>Sarcosperma laurinum</em>/<em>Syzygium levinei</em>
 Comm.）</p>
 <p>分布在香港九龙半岛。引自：《香港植被》中的
-“白车蒲桃+亮叶肉实树群丛（<em>Syzygium levinei</em>+ <em>Sarcosperma
+“白车蒲桃+亮叶肉实树群丛（<em>Syzygium levinei</em>+<em>Sarcosperma
 laurinum</em>
-Ass.）（张宏达和王伯荪，1989）。（EBLF书中表9-3/1,曾称：白楸-亮叶肉实树/山蒲桃群落）</p></li>
+Ass.）（张宏达和王伯荪，1989）。（EBLF书中表9-3/1，曾称：白楸-亮叶肉实树/山蒲桃群落）</p></li>
 <li><p>(C2) 白楸-翻白叶树/樟-山蒲桃群落（<em>Mallotus
 paniculatus</em>-<em>Pterospermum heterophyllum</em>/<em>Cinnamomum
 camphora</em>-<em>Syzygium levinei</em> Comm.）</p>
-<p>分布在香港九龙半岛。引自：《香港植被》（张宏达和王伯荪，1989）一文中的“白车蒲桃（山蒲桃）+樟树群丛（张宏达和王伯荪，1989）。（EBLF书中表9-3/2，曾称：白楸-
-/樟-山蒲桃群落）</p></li>
+<p>分布在香港九龙半岛。引自：《香港植被》（张宏达和王伯荪，1989）一文中的“白车蒲桃（山蒲桃）+樟树群丛（张宏达和王伯荪，1989）。（EBLF书中表9-3/2，曾称：白楸-翻白叶树/樟-山蒲桃群落）</p></li>
 </ul>
 </div>
 </div>
