--- a/Alli-3a51.html
+++ b/Alli-3a51.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,14 +280,15 @@ $(document).ready(function () {
 <div id="鱼尾葵-水翁蒲桃群团" class="section level2">
 <h2><span style="color: blue;">鱼尾葵-水翁蒲桃群团</span></h2>
 </div>
-<div id="caryota-maxima-syzygium-nervosum-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Caryota maxima</em>-<em>Syzygium
-nervosum</em> All.</span></h2>
+<div id="caryota-maxima---syzygium-nervosum-all."
+class="section level2">
+<h2><span style="color: darkblue;"><em>Caryota maxima</em> -
+<em>Syzygium nervosum</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>水翁(<em>Cleistocalyx operculatus</em>)、鱼尾葵(<em>Caryota
-ochlandra</em>)</p>
+<p>水翁（<em>Cleistocalyx operculatus</em>）、鱼尾葵（<em>Caryota
+ochlandra</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -295,8 +296,8 @@ ochlandra</em>)</p>
 <ul>
 <li><p>乔木层：蒲桃（<em>Syzygium jambos</em>）、假苹婆（<em>Sterculia
 lanceolata</em>）、亮叶肉实树（<em>Sarcosperma
-laurinum</em>）、银柴（<em>Aporusa dioica</em>）、变叶榕(<em>Ficus
-variolosa</em>)、重阳木（<em>Bischofia javanica</em>）</p></li>
+laurinum</em>）、银柴（<em>Aporusa dioica</em>）、变叶榕（<em>Ficus
+variolosa</em>）、重阳木（<em>Bischofia javanica</em>）</p></li>
 <li><p>灌木层：鹅掌柴（<em>Schefflera
 octophylla</em>）、罗伞树（<em>Ardisia
 quinquegona</em>）、九节木（<em>Psychotria
@@ -318,19 +319,16 @@ asiatica</em>）、华南胡椒（<em>Piper austrosinense</em>）</p></li>
 <li><p>(C1) 露兜草-鱼尾葵/蒲桃-水翁群落（<em>Pandanus
 austrosinensis</em>-<em>Caryota ochlandra</em>/<em>Syzygium
 jambos</em>-<em>Cleistocalyx operculatus</em> Comm.）</p>
-<p>分布在广东鼎湖山。它是《广东高要鼎湖山植物群落之研究》中的“水榕（水翁）+蒲桃群落”（张宏达等，1955）以及《鼎湖山自然保护区的植被》的“水翁+蒲桃群落”（王铸豪等,
-1982）的综合。（EBLF书中表9-5/1-2,曾称：鱼尾葵/蒲桃-水翁群落）</p></li>
+<p>分布在广东鼎湖山。它是《广东高要鼎湖山植物群落之研究》中的“水榕（水翁）+蒲桃群落”（张宏达等，1955）以及《鼎湖山自然保护区的植被》的“水翁+蒲桃群落”（王铸豪等，1982）的综合。（EBLF书中表9-5/1-2,曾称：鱼尾葵/蒲桃-水翁群落）</p></li>
 <li><p>(C2) 小盘木-胭脂/九丁榕-鱼尾葵群落（<em>Caryota
 ochlandra</em>+<em>Ficus nervosa</em>-<em>Artocarpus
 tonkinensis</em>+<em>Microdesmis caseariifolia</em> Comm.）</p>
-<p>分布在广东鼎湖山。引自：《鼎湖山自然保护区的植被》中的
-“凸脉榕(九丁榕)、鱼尾葵群落”（王铸豪等，1982）一文（EBLF书中表9-6/1，曾称：胭脂/凸脉榕-鱼尾葵群落）</p></li>
+<p>分布在广东鼎湖山。引自：《鼎湖山自然保护区的植被》中的“凸脉榕(九丁榕)、鱼尾葵群落”（王铸豪等，1982）一文（EBLF书中表9-6/1，曾称：胭脂/凸脉榕-鱼尾葵群落）</p></li>
 <li><p>(C3) 红枝蒲桃/白肉榕-鱼尾葵群落（<em>Syzygium
 rehderianum</em>/<em>Ficus vasculosa</em>-<em>Caryota ochlandra</em>
 Comm.）</p>
 <p>分布在广东鼎湖山。引自：《广东高要鼎湖山植物群落之研究》中的
-“鱼尾葵群落”（张宏达等,
-1955）（EBLF书中表9-6/2，曾称：红枝蒲桃/白肉榕-鱼尾葵群落）</p></li>
+“鱼尾葵群落”（张宏达等，1955）（EBLF书中表9-6/2，曾称：红枝蒲桃/白肉榕-鱼尾葵群落）</p></li>
 <li><p>(C4) 变叶榕/蒲桃-水翁群落（<em>Ficus variolosa</em>/<em>Syzygium
 jambos</em>-<em>Cleistocalyx operculatus</em> Comm.）</p>
 <p>分布在香港九龙半岛。引自：《香港植被》中的“水翁+蒲桃群丛”（<em>Cleistocalyx
@@ -339,8 +337,7 @@ Ass.）（张宏达和王伯荪，1989）（EBLF书中表9-5/3，曾称：变叶
 <li><p>(C5) 锡兰馒头果/蒲桃-水翁群落（<em>Glochidion
 zeylanicum</em>/<em>Syzygium jambos</em>-<em>Cleistocalyx
 operculatus</em> Comm.）</p>
-<p>分布在香港大屿山岛。引自：《香港植被》中的“水榕+香港算盘子（锡兰馒头果）群丛）”
-（EBLF书中表9-5/4，曾称：锡兰馒头果/蒲桃-水翁群落）</p></li>
+<p>分布在香港大屿山岛。引自：《香港植被》中的“水榕+香港算盘子（锡兰馒头果）群丛）”（EBLF书中表9-5/4，曾称：锡兰馒头果/蒲桃-水翁群落）</p></li>
 </ul>
 </div>
 </div>
