--- a/Alli-3a52.html
+++ b/Alli-3a52.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -286,13 +286,14 @@ All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>榕树(<em>Ficus microcarpa</em>)</p>
+<p>榕树（<em>Ficus microcarpa</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li>假苹婆、罗伞树、海红豆（<em>Adenanthera
+<li>假苹婆（<em>Sterculia lanceolata</em>）、罗伞树（<em>Ardisia
+quinquegona</em>）、海红豆（<em>Adenanthera
 pavoniana</em>）、假柿树（<em>Litsea
 monopetala</em>）、银柴（<em>Aporosa
 chinensis</em>）、大叶逼迫子（<em>Bredelia balasae</em>）等</li>
@@ -308,7 +309,7 @@ microcarpa</em>+<em>Litsea monopetala</em> Comm.）</p>
 <li><p>(C2) 九节木/大叶逼迫子-榕树群落（<em>Psychotria
 rubra</em>/<em>Ficus microcarpa</em>+<em>Bredelia balansae</em>
 Comm.）</p>
-<p>分布在香港大屿山岛。根据：《香港植被》中所称：““榕树+九节木群丛”（<em>Ficus
+<p>分布在香港大屿山岛。根据：《香港植被》中所称：“榕树+九节木群丛”（<em>Ficus
 microcarpa</em>+<em>Psychotria rubra</em>
 Ass.）（张宏达和王伯荪，1989）</p></li>
 </ul>
