--- a/Alli-3a53.html
+++ b/Alli-3a53.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -281,15 +281,16 @@ $(document).ready(function () {
 <h2><span style="color: blue;">黄桐-土沉香-假苹婆群团</span></h2>
 </div>
 <div
-id="endospermum-chinense-aquilaria-sinensis-sterculia-lanceolata-all."
+id="endospermum-chinense---aquilaria-sinensis---sterculia-lanceolata-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Endospermum
-chinense</em>-<em>Aquilaria sinensis</em>-<em>Sterculia lanceolata</em>
+<h2><span style="color: darkblue;"><em>Endospermum chinense</em> -
+<em>Aquilaria sinensis</em> - <em>Sterculia lanceolata</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>假苹婆、土沉香、黄桐</p>
+<p>假苹婆（<em>Sterculia lanceolata</em>）、土沉香（<em>Aquilaria
+sinensis</em>）、黄桐（<em>Endospermum chinense</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -306,8 +307,8 @@ axillaris</em>）、山蒲桃（<em>Syzygium
 levinei</em>）、岭南山竹子（<em>Garcinia
 oblongifolia</em>）、建润楠（<em>Machilus
 oreophila</em>）、银柴（<em>Aporusa dioica</em>）、樟树（<em>Cinnamomum
-camphora</em>）、青果榕（<em>Ficus variegata</em>
-var.<em>chlorocarpa</em>）等</li>
+camphora</em>）、青果榕（<em>Ficus variegata var.
+chlorocarpa</em>）等</li>
 </ul>
 <p><br></p>
 </div>
@@ -325,35 +326,30 @@ Ass.）（张宏达和王伯荪，1989）（EBLF书中表9-9/1，曾称：建润
 hookerianus</em>-<em>Garcinia oblongifolia</em>/<em>Sterculia
 lanceolate</em> Comm.）</p>
 <p>分布在香港大屿山岛大东山。引自:
-《香港植被》（张宏达和王伯荪，1989）中 “假苹婆+山竹子群丛”
-（张宏达和王伯荪，1989）（EBLF书中表9-9/2，曾称：岭南山竹子/假苹婆群落）</p></li>
+《香港植被》（张宏达和王伯荪，1989）中“假苹婆+山竹子群丛”（张宏达和王伯荪，1989）（EBLF书中表9-9/2，曾称：岭南山竹子/假苹婆群落）</p></li>
 <li><p>(C3）两广梭罗-红枝蒲桃/樟-土沉香群落（<em>Reevesia
 thyrsoidea</em>-<em>Syzygium rehderianum</em>/<em>Cinnamomum
 camphora</em>-<em>Aquilaria sinensis</em> Comm.）</p>
 <p>分布在香港九龙半岛。它是： “白木香
-+樟树群丛“（张宏达和王伯荪，1989）的综合（EBLF书中表9-7/1，曾称：<em>Cinnamomum
-camphora</em>-</p></li>
++樟树群丛“（张宏达和王伯荪，1989）的综合（EBLF书中表9-7/1）</p></li>
 <li><p>(C4）红皮糙果茶-红枝蒲桃/樟-土沉香群落（<em>Camellia
 crapnelliana</em>-<em>Syzygium rehderianum</em>/<em>Cinnamomum
 camphora</em>-<em>Aquilaria sinensis</em> Comm.）</p>
 <p>分布在香港九龙半岛。它是：《香港植被》中的“白木香（土沉香）+红皮糙果茶（<em>Camellia
-crapnelliana</em>）＋樟树群丛”（张宏达和王伯荪，1989）的综合（EBLF书中表9-7/2，曾称：<em>Cinnamomum
-camphora </em></p></li>
+crapnelliana</em>）+樟树群丛”（张宏达和王伯荪，1989）的综合（EBLF书中表9-7/2）</p></li>
 <li><p>(C5）白背叶-银柴/青果榕-土沉香群落（<em>Mallotus
-apelta</em>-<em>Aporosa chinensis</em>/<em>Ficus variegata</em>
-var.<em>chlorocarpa</em>-<em>Aquilaria sinensis</em> Comm.）</p>
+apelta</em>-<em>Aporosa chinensis</em>/<em>Ficus variegata
+var.chlorocarpa</em>-<em>Aquilaria sinensis</em> Comm.）</p>
 <p>分布在香港大屿山岛大东山。它是：《香港植被》中的“白木香+银柴群丛”(<em>Aquilaria
 sinensis</em>+<em>Aporosa chinensis</em>
-Ass.)（张宏达和王伯荪，1989）（EBLF书中表9-7/3，曾称：银柴/
-青果榕-土沉香群落）</p></li>
+Ass.)（张宏达和王伯荪，1989）（EBLF书中表9-7/3，曾称：银柴/青果榕-土沉香群落）</p></li>
 <li><p>(C6）黑叶小驳骨-银柴/青果榕-土沉香群落（<em>Gendarussa
-ventricosa</em>-<em>Aporosa chinensis</em>/<em>Ficus variegata</em>
-var.<em>chlorocarpa</em>-<em>Aquilaria sinensis</em> Comm.）</p>
+ventricosa</em>-<em>Aporosa chinensis</em>/<em>Ficus variegata var.
+chlorocarpa</em>-<em>Aquilaria sinensis</em> Comm.）</p>
 <p>分布在香港大屿山莫家村。它是：《香港植被》中的
-“白木香+青果榕群丛”(<em>Aquilaria sinensis</em>+<em>Ficus variegata</em>
-var.<em>chlorocarpa</em> Comm.)
-（张宏达和王伯荪，1989）的综合（EBLF书中表9-7/4，曾称：银柴/
-青果榕-土沉香群落）</p></li>
+“白木香+青果榕群丛”(<em>Aquilaria sinensis</em>+<em>Ficus variegata var.
+chlorocarpa</em> Comm.)
+（张宏达和王伯荪，1989）的综合（EBLF书中表9-7/4，曾称：银柴/青果榕-土沉香群落）</p></li>
 <li><p>(C7) 粗叶木-肾果木/黄桐群落（<em>Lasianthus
 chinensis</em>-<em>Pygeum topergii</em>/<em>Endospermum chinense</em>
 Comm.）</p>
