--- a/Alli-3a54.html
+++ b/Alli-3a54.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,15 +280,16 @@ $(document).ready(function () {
 <div id="球壳柯-厚鳞柯群团" class="section level2">
 <h2><span style="color: blue;">球壳柯-厚鳞柯群团</span></h2>
 </div>
-<div id="lithocarpus-sphaerocarpus-l.-pachylepis-all."
+<div id="lithocarpus-sphaerocarpus---l.-pachylepis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus
-sphaerocarpus</em>-<em>L. pachylepis</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus sphaerocarpus</em> -
+<em>L. pachylepis</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>石栎属中西南地区分布的喜暖热树种：球壳柯、厚鳞柯（<em>Lithocarpus
-echinophorus</em> var. <em>bidoupensis</em>）</p>
+<p>石栎属中西南地区分布的喜暖热树种：球壳柯（<em>Lithocarpus
+sphaerocarpus</em>）、厚鳞柯（<em>Lithocarpus echinophorus var.
+bidoupensis</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -297,8 +298,8 @@ echinophorus</em> var. <em>bidoupensis</em>）</p>
 <li><p>乔木层：四角蒲桃（<em>Syzygium
 tetragonum</em>）、云南拟单性木兰（<em>Parakmeria
 yunnanensis</em>）、红果黄肉楠（<em>Actinodaphne
-cupularis</em>）、黑毛四照花(<em>Dendrobenthamia
-melanotricha</em>)、杜英（<em>Elaeocarpus
+cupularis</em>）、黑毛四照花（<em>Dendrobenthamia
+melanotricha</em>）、杜英（<em>Elaeocarpus
 decipiens</em>）、大花八角（<em>Illicium
 macranthum</em>）、山地山龙眼（<em>Helicia
 clivicola</em>）、长圆臀果木（<em>Pygeum oblongum</em>）</p></li>
@@ -330,14 +331,13 @@ tenuicaudatum</em>）、豆瓣绿（<em>Peperomia tetraphylla</em>）</p></li>
 baviensis</em>-<em>Helicia clivicola</em>/<em>Syzygium
 tetragonum</em>-<em>Lithocarpus sphaerocarpus</em> Comm.）</p>
 <p>分布在云南绿春黄连山。引自《云南绿春黄连山自然保护区植被》中的“石栎、四棱蒲桃林（<em>Lithocarpus</em>
-spp.-<em>Syzygium tetragoneum</em> Forest）”（许建初,
+spp.-<em>Syzygium tetragoneum</em> Forest）”（许建初，
 2003）（EBLF书中表9-11/1，曾称：山地山龙眼/四角蒲桃-球壳柯群落）</p></li>
 <li><p>(C2) 裸果胡椒-长圆臀果木/四角蒲桃-厚鳞柯群落（<em>Piper
-nudibaccatum</em>-<em>Plagiopetalum esquirolii</em>/ <em>Lithocarpus
+nudibaccatum</em>-<em>Plagiopetalum esquirolii</em>/<em>Lithocarpus
 pachylepis</em>+<em>Pygeum oblongum</em>-<em>Syzygium
 tetragoneum</em>-<em>Plagiopetalum esquirolii</em> Comm.）</p>
-<p>分布在云南绿春黄连山。引自《云南绿春黄连山自然保护区植被》（许建初,
-2003）中的“云南拟单性木兰-厚鳞石栎林(<em>Parakmeria
+<p>分布在云南绿春黄连山。引自《云南绿春黄连山自然保护区植被》（许建初，2003）中的“云南拟单性木兰-厚鳞石栎林(<em>Parakmeria
 yunnanensis</em>-<em>Lithocarpus pachylepis</em>
 Forest)”（EBLF书中表9-11/2，曾称：长圆臀果木/四角蒲桃-厚鳞柯群落）</p></li>
 </ul>
