--- a/Alli-3a55.html
+++ b/Alli-3a55.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="盆架树-红锥群团" class="section level2">
 <h2><span style="color: blue;">盆架树-红锥群团</span></h2>
 </div>
-<div id="alstonia-rostrata-castanopsis-hystrix-all."
+<div id="alstonia-rostrata---castanopsis-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Alstonia
-rostrata</em>-<em>Castanopsis hystrix</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Alstonia rostrata</em> -
+<em>Castanopsis hystrix</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -325,10 +325,9 @@ sp.）、崖爬藤一种（<em>Tetrastigma</em> sp.）</p></li>
 <li><p>(C1) 乔木紫金牛合果木/大叶红光树-盆架树群落（<em>Ardisia
 arborescens</em>-<em>Paramichelia boillonii</em>/<em>Knema
 linifolia</em>-<em>Alstonia pachycarpa</em> Comm.）</p>
-<p>分布在云南勐腊。引自《西双版纳勐腊自然保护区植被调查》中的“过渡性南亚热带雨林”（云南大学生物系生态地植物学教研室，1960a,b），《云南植被》中称
-“野橡胶（盆架树）、假含笑（合果木）林群系”（云南植被编写组，1987）（EBLF书中表9-12/1,曾称：合果木/红锥-盆架树群落）</p></li>
+<p>分布在云南勐腊。引自《西双版纳勐腊自然保护区植被调查》中的“过渡性南亚热带雨林”（云南大学生物系生态地植物学教研室，1960a,b），《云南植被》中称“野橡胶（盆架树）、假含笑（合果木）林群系”（云南植被编写组，1987）（EBLF书中表9-12/1,曾称：合果木/红锥-盆架树群落）</p></li>
 <li><p>(C2) 东方水锦树-思茅黄肉楠/红锥-长柄金刀木群落 (<em>Wendlandia
-tinctoria</em> var. <em>orientalis</em>-<em>Actinodaphne
+tinctoria var. orientalis</em>-<em>Actinodaphne
 henryi</em>/<em>Castanopsis hystrix</em>-<em>Barringtonia longipes</em>
 Comm.）</p>
 <p>分布在云南勐仑。引自：《西双版纳勐崙自然保护区植被调查》中的“过渡性南亚热带雨林”（云南大学生物系生态地植物学教研室，1960a，b）（EBLF书中表9-12/2，曾称：东方水锦树-思茅黄肉楠-红锥群落）</p></li>
