--- a/Alli-3a56.html
+++ b/Alli-3a56.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,16 +280,16 @@ $(document).ready(function () {
 <div id="川滇木莲-栎子青冈群团" class="section level2">
 <h2><span style="color: blue;">川滇木莲-栎子青冈群团</span></h2>
 </div>
-<div id="magnolia-duclouxii-quercus-cyclobalanopsis-blakei-all."
+<div id="magnolia-duclouxii---quercus-cyclobalanopsis-blakei-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Magnolia
-duclouxii</em>-<em>Quercus</em> (<em>Cyclobalanopsis</em>)
-<em>blakei</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Magnolia duclouxii</em> -
+<em>Quercus</em> (<em>Cyclobalanopsis</em>) <em>blakei</em>
+All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>川滇木莲（<em>Manglietia
-duclouxii</em>）、栎子青冈(<em>Cyclobalanopsis blakei</em>)</p>
+duclouxii</em>）、栎子青冈（<em>Cyclobalanopsis blakei</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -324,16 +324,16 @@ sp.）、菝葜一种（<em>Smilax</em> spp.）</p></li>
 <li><p>(C1) 草鞋木-川滇木莲/鸡毛松-栎子青冈群落（<em>Macaranga
 henryi</em>-<em>Manglietia duclouxii</em>/<em>Podocarpus
 imbricatus</em>-<em>Cyclobalanopsis blakei</em> Comm.）</p>
-<p>分布在云南金平。这个群落引自《云南植被》中的“川滇木莲、栎子青冈、鸡毛松群落”(<em>Manglietia
-duclouxii</em>, <em>Cyclobalanopsis blakei</em>, <em>Podocarpus
-imbricatus</em> Comm.) （云南植被编写组,
-1987）（EBLF书中表9-13/1，曾称：鸡毛松/鸡毛松-栎子青冈群落）</p></li>
+<p>分布在云南金平。这个群落引自《云南植被》中的“川滇木莲、栎子青冈、鸡毛松群落”（<em>Manglietia
+duclouxii</em>、<em>Cyclobalanopsis blakei</em>、<em>Podocarpus
+imbricatus</em>
+Comm.）（云南植被编写组，1987）（EBLF书中表9-13/1，曾称：鸡毛松/鸡毛松-栎子青冈群落）</p></li>
 <li><p>(C2) 毛棉杜鹃-大八角/亮叶含笑-栎子青冈群落（<em>Rhododendron
 moulmainense</em>-<em>Illicium majus</em>/<em>Michelia
 fulgens</em>-<em>Cyclobalanopsis blakei</em> Comm.）</p>
-<p>分布在云南金平。引自《云南植被》中的“栎子青冈、亮叶含笑、群落”(<em>Cyclobalanopsis
-blakei</em>，<em>Michelia fulgens</em>，<em>Illicium majus</em> Comm.)
-（云南植被编写组,
+<p>分布在云南金平。引自《云南植被》中的“栎子青冈、亮叶含笑、群落”（<em>Cyclobalanopsis
+blakei</em>、<em>Michelia fulgens</em>、<em>Illicium majus</em>
+Comm.）（云南植被编写组，
 1987）（EBLF书中表9-13/2，曾称：大八角/亮叶含笑-栎子青冈群落）</p></li>
 </ul>
 </div>
