--- a/Alli-3a57.html
+++ b/Alli-3a57.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -279,24 +279,24 @@ $(document).ready(function () {
 
 <div id="山棕-菲律宾榕-长叶润楠大叶润楠群团" class="section level2">
 <h2><span
-style="color: blue;">山棕-菲律宾榕-长叶润楠(大叶润楠)群团</span></h2>
+style="color: blue;">山棕-菲律宾榕-长叶润楠（大叶润楠）群团</span></h2>
 </div>
-<div id="arenga-engleri-ficus-ampelos-machilus-japonica-all."
+<div id="arenga-engleri---ficus-ampelos---machilus-japonica-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Arenga engleri</em>-<em>Ficus
-ampelos</em>-<em>Machilus japonica</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Arenga engleri</em> - <em>Ficus
+ampelos</em> - <em>Machilus japonica</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>除大叶楠（<em>Machilus kusanoi</em>）、数种榕属植物（糙叶榕<em>Ficus
-irisana</em>，稜果榕<em>F. septica</em>，水同木<em>F. Fistulosa</em>,
-菲律宾榕<em>F. Ampelas</em>，岛榕<em>F.
+irisana</em>、稜果榕<em>F. septica</em>、水同木<em>F.
+Fistulosa</em>、菲律宾榕<em>F. Ampelas</em>、岛榕<em>F.
 Virgata</em>）外，还有山棕（<em>Arenga
 engleri</em>），以及三叶山香圆（<em>Turpinia
 ternata</em>）、台湾山香圆（<em>Turpinia
-formosana</em>），墨鳞（<em>Melanolepis
-multiglandulosa</em>）、樟树(<em>Cinnamomum
-camphora</em>)、菜豆树（<em>Melanolepis
+formosana</em>）、墨鳞（<em>Melanolepis
+multiglandulosa</em>）、樟树（<em>Cinnamomum
+camphora</em>）、菜豆树（<em>Melanolepis
 multiglandulosa</em>），其中大叶楠、糙叶榕、山棕又是鉴别种。</p>
 <p><br></p>
 </div>
@@ -312,11 +312,11 @@ oldhamii</em>）、长梗紫麻（<em>Oreocnide
 pedunculata</em>）、咬人狗（<em>Dendrocnide meyeniana</em>）</p></li>
 <li><p>草本层：海芋（<em>Alocasia
 macrorrhiza</em>）、艳山姜（<em>Alpinia
-zerumbet</em>）、狭叶楼梯草（<em>Elatostema lineolatum</em> var.
-<em>majus</em>），观音座莲（<em>Angiopteris lygodiifolia</em>）</p></li>
+zerumbet</em>）、狭叶楼梯草（<em>Elatostema lineolatum var.
+majus</em>）、观音座莲（<em>Angiopteris lygodiifolia</em>）</p></li>
 <li><p>藤本附生植物：黄藤（<em>Daemonorops
 margaritae</em>）、巢蕨（<em>Neottopteris
-nidus</em>）、石柑子（<em>Pothos chinensis</em>）、 风藤（<em>Piper
+nidus</em>）、石柑子（<em>Pothos chinensis</em>）、风藤（<em>Piper
 kadsura</em>）、球兰（<em>Hoya carnosa</em>）等</p></li>
 </ul>
 <p><br></p>
@@ -326,27 +326,25 @@ kadsura</em>）、球兰（<em>Hoya carnosa</em>）等</p></li>
 <ul>
 <li><p>(A1) 酸叶胶藤-肾蕨/山棕-大叶楠群丛 (<em>Ecdysanthera
 roseaNephrolepis auriculata</em>-<em>Lagerstroemia
-subcostata</em>/<em>Arenga engler</em>-<em>Machilus japonica</em> var.
-<em>kusanoi</em> Ass.）</p>
-<p>分布在南澳南溪，引自：称子英 1997
-《南澳南溪植物资源之调查》,（EBLF书中表9-19，曾称：南紫薇-鹅掌柴/三叶山香圆-大叶楠群落）</p></li>
+subcostata</em>/<em>Arenga engler</em>-<em>Machilus japonica var.
+kusanoi</em> Ass.）</p>
+<p>分布在南澳南溪，引自：称子英，1997，《南澳南溪植物资源之调查》，（EBLF书中表9-19，曾称：南紫薇-鹅掌柴/三叶山香圆-大叶楠群落）</p></li>
 <li><p>(A2) 墨鳞/棱果榕-糙叶榕群丛（<em>Sphaeropteris
 lepifera</em>-<em>Melanolepis multiglandulosa</em>/<em>Ficus
 irisana</em>-<em>Ficus septica</em> Ass.）</p>
-<p>分布在台东海岸山脉，引自：陈明义等，1990.《台东海岸山脉自然保护区植群生态之调查》,（EBLF书中表9-16/1-3，曾称：糙叶榕-棱果榕优势度型群落）</p></li>
+<p>分布在台东海岸山脉，引自：陈明义等，1990，《台东海岸山脉自然保护区植群生态之调查》，（EBLF书中表9-16/1-3，曾称：糙叶榕-棱果榕优势度型群落）</p></li>
 <li><p>(C1) 狭叶楼梯草-咬人狗/樟树-糙叶榕群落（<em>Elatostema
 lineolatum</em>-<em>Dendrocnide meyeniana</em>/<em>Cinnamomum
 camphora</em>-<em>Ficus ampelas</em> Comm.）</p>
-<p>分布在福源森林游乐区，引自：宋永昌等，2003.《台湾常绿阔叶林主要类型与大陆常绿阔叶林之关系》，（EBLF书中表9-15/1，曾称：狭叶楼梯草-咬人狗/樟树-糙叶榕群落）</p></li>
+<p>分布在福源森林游乐区，引自：宋永昌等，2003，《台湾常绿阔叶林主要类型与大陆常绿阔叶林之关系》，（EBLF书中表9-15/1，曾称：狭叶楼梯草-咬人狗/樟树-糙叶榕群落）</p></li>
 <li><p>(C2) 狭叶楼梯草-咬人狗/菜豆树-糙叶榕群落（<em>Elatostema
 lineolatum</em>-<em>Dendrocnide meyeniana</em>/<em>Radermachera
 sinica</em>-<em>Ficus irisana</em> Comm.）</p>
-<p>分布在海岸山脉，引自：陈明义等，1990
-《台东海岸山脉自然保护区植群生态之调查》（EBLF书中表9-15/2，曾称：狭叶楼梯草-咬人狗/糙叶榕群落）</p></li>
+<p>分布在海岸山脉，引自：陈明义等，1990，《台东海岸山脉自然保护区植群生态之调查》（EBLF书中表9-15/2，曾称：狭叶楼梯草-咬人狗/糙叶榕群落）</p></li>
 <li><p>(C3) 阔叶楼梯草-台湾山香圆-鹅掌柴/大叶楠群落
 (<em>Elatostema</em>-<em>Turpinia formosana</em>-<em>Schefflera
 octophylla</em>/<em>Machilus kusanoi</em> Comm.）</p>
-<p>分布在阳明山鹿角坑溪，引自：宋永昌等，2003.《台湾常绿阔叶林主要类型与大陆常绿阔叶林之关系》，（EBLF书中表9-20/1-2，曾称：台湾杨桐-鹅掌柴/大叶楠群落）</p></li>
+<p>分布在阳明山鹿角坑溪，引自：宋永昌等，2003，《台湾常绿阔叶林主要类型与大陆常绿阔叶林之关系》（EBLF书中表9-20/1-2，曾称：台湾杨桐-鹅掌柴/大叶楠群落）</p></li>
 <li><p>(C4) 椭圆叶米仔兰/台湾樫木-大叶楠群落 (<em>Aglaia
 elliptifolia</em>/<em>Dysoxylum kusukusuense</em>-<em>Machilus
 kusanoi</em> Comm.）</p>
@@ -354,7 +352,7 @@ kusanoi</em> Comm.）</p>
 <li><p>(C5) 褐鳞木-假赤杨/水同木群群落（<em>Astronia
 ferruginea</em>-<em>Alniphyllum pterospermum</em>/<em>Ficus
 fistulosa</em> Comm.）</p>
-<p>分布在垦丁南仁山。引自：谢长富等，1992，《垦丁国家公园亚热带雨林永久样区之调查》，以及谢宗欣，1990.《南仁山亚热带雨林树种的组成和分布类型》（EBLF书中表9-17/1-2；曾称：褐鳞木-鹅掌柴/水同木群群落）</p></li>
+<p>分布在垦丁南仁山。引自：谢长富等，1992，《垦丁国家公园亚热带雨林永久样区之调查》，以及谢宗欣，1990，《南仁山亚热带雨林树种的组成和分布类型》（EBLF书中表9-17/1-2；曾称：褐鳞木-鹅掌柴/水同木群群落）</p></li>
 </ul>
 </div>
 </div>
