--- a/Alli-1a10.html
+++ b/Alli-1a10.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,15 +280,16 @@ $(document).ready(function () {
 <div id="甜槠-细柄蕈树群团" class="section level2">
 <h2><span style="color: blue;">甜槠-细柄蕈树群团</span></h2>
 </div>
-<div id="castanopsis-eyrei-liquidambar-altingia-gracilipes-all."
+<div id="castanopsis-eyrei---liquidambar-altingia-gracilipes-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-eyrei</em>-<em>Liquidambar</em> (<em>Altingia</em>) <em>gracilipes</em>
+<h2><span style="color: darkblue;"><em>Castanopsis eyrei</em> -
+<em>Liquidambar</em> (<em>Altingia</em>) <em>gracilipes</em>
 All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>细柄蕈树、甜槠</p>
+<p>细柄蕈树（<em>Liquidambar</em> (<em>Altingia</em>)
+<em>gracilipes</em>）、甜槠（<em>Castanopsis eyrei</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -316,8 +317,9 @@ rudis</em>）、瓜馥木（<em>Fissistigma oldhamii</em>）等</p></li>
 longiauritus</em>-<em>Pleioblastus amarus</em>/<em>Altingia
 gracilipes</em> Comm.）</p>
 <p>分布在福建南平（EBLF书中表5-94a/3；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
-<li><p>(C2) 孝顺竹群落-苦竹/细柄蕈树群落（<em>Bambusa multiplex</em>
--<em>Pleioblastus amarus</em>/<em>Altingia gracilipes</em> Comm.）</p>
+<li><p>(C2) 孝顺竹群落-苦竹/细柄蕈树群落（<em>Bambusa
+multiplex</em>-<em>Pleioblastus amarus</em>/<em>Altingia gracilipes</em>
+Comm.）</p>
 <p>分布在福建南平（EBLF书中表5-94a/1；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
 <li><p>(C3) 曲竿竹-少叶黄杞/细柄蕈树群落（<em>Altingia
 gracilipes</em>-<em>Engelhardia fenzelii</em>-<em>Phyllostachys
@@ -329,12 +331,12 @@ gracilipes</em> Comm.）</p>
 <p>分布在浙江松阳。（EBLF书中表5-94b；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
 <li><p>(C5) 紫金牛-刺毛杜鹃/甜槠-细柄蕈树群落(<em>Ardisia
 japonica</em>-<em>Rhododendron championae</em>/<em>Castanopsis
-eyrei</em> -<em>Altingia gracilipes</em> Comm.）</p>
+eyrei</em>-<em>Altingia gracilipes</em> Comm.）</p>
 <p>分布在福建梅花山（EBLF书中表5-95a/5；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
 <li><p>(C6) 狗脊-野牡丹-轮叶蒲桃/细柄蕈树群落（<em>Woodwardia
 japonica</em>-<em>Melastoma candidum</em>-<em>Syzygium grijsii</em>/
 <em>Altingia gracilipes</em> Comm.)</p>
-<p>分布在福建梅花山（EBLF书中表5-95a/4；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<p>分布在福建梅花山（EBLF书中表5-95a/4；曾称：轮叶蒲桃-刺毛杜鹃/细柄蕈树群落)</p></li>
 <li><p>(C7) 虎舌红-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Ardisia
 mamillata</em>-<em>Syzygium grijsii</em>/<em>Castanopsis eyrei</em>
 -<em>Altingia gracilipes</em> Comm.）</p>
@@ -342,9 +344,9 @@ mamillata</em>-<em>Syzygium grijsii</em>/<em>Castanopsis eyrei</em>
 <li><p>(C8) 小果山龙眼-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Helicia
 cochinchinensis</em>-<em>Syzygium grijsii</em>/<em>Castanopsis
 eyrei</em> -<em>Altingia gracilipes</em> Comm.）</p>
-<p>分布在福建梅花山（EBLF书中表5-95a/1；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
-<li><p>(C9) 青果榕-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Ficus variegata</em>
-var. <em>chlorocarpa</em>-<em>Syzygium grijsii</em> /<em>Castanopsis
+<p>分布在福建梅花山（EBLF书中表5-95a/1；曾称：轮叶蒲桃-刺毛杜鹃/细柄蕈树群落)</p></li>
+<li><p>(C9) 青果榕-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Ficus variegata var.
+chlorocarpa</em>-<em>Syzygium grijsii</em> /<em>Castanopsis
 eyrei</em>-<em>Altingia gracilipes</em> Comm.）</p>
 <p>分布在福建野梁山（EBLF书中表5-96；曾称：青果榕-绢毛杜英∕细柄蕈树群落)</p></li>
 <li><p>(C10) 地菍-毛竹/甜槠-细柄蕈树群落（<em>Malastoma
@@ -356,7 +358,7 @@ gracilipes</em> Comm.）</p>
 <li><p>(C11) 弯蒴杜鹃-轮叶蒲桃/钩锥-细柄蕈树-群落（<em>Rhododendron
 henryi</em>-<em>Syzygium grijsii</em>/<em>Castanopsis tibetana</em>
 -<em>Altingia gracilipes</em> Comm.）</p>
-<p>分布在福建梅花山（EBLF书中表5-95a/6；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<p>分布在福建梅花山（EBLF书中表5-95a/6；曾称：轮叶蒲桃-刺毛杜鹃/细柄蕈树群落)</p></li>
 <li><p>(C12) 里白-鲫鱼胆/甜槠-细柄蕈树群落（<em>Hicriopteris
 glauca</em>-<em>Maesa perlarius</em>/<em>Castanopsis
 eyrei</em>-<em>Altingia gracilipes</em> Comm.）</p>
