--- a/Alli-1a11.html
+++ b/Alli-1a11.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -286,53 +286,53 @@ fargesii</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>栲树和米槠，它们可以互为伯仲</p>
+<p>栲(<em>Castanopsis fargesii</em>)、米槠(<em>Castanopsis
+carlesii</em>)</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
 <li><p>乔木层：南酸枣（<em>Choerospondias
-axillaris</em>），红楠（<em>Machilus
-thunbergii</em>），黄杞（<em>Engelhardtia
-roxburghiana</em>），厚皮香（<em>Ternstroemia
-gymanthera</em>）黄丹木姜子（<em>Litsea
-elongata</em>），毛叶木姜（<em>Litsea mollis</em>）</p></li>
-<li><p>灌木层：草珊瑚（<em>Sarcandra glabra</em>），杜茎山（<em>Maesa
+axillaris</em>）、红楠（<em>Machilus
+thunbergii</em>）、黄杞（<em>Engelhardtia
+roxburghiana</em>）、厚皮香（<em>Ternstroemia
+gymanthera</em>）、黄丹木姜子（<em>Litsea
+elongata</em>）、毛叶木姜（<em>Litsea mollis</em>）</p></li>
+<li><p>灌木层：草珊瑚（<em>Sarcandra glabra</em>）、杜茎山（<em>Maesa
 japonica</em>）、朱砂根（<em>Ardisia
 crenata</em>），老鼠矢（<em>Symplocos stellaris</em>）</p></li>
-<li><p>草本层：狗脊（<em>Woodwardia
-japonica</em>），薹草（<em>Carex</em> spp.）, 里白（<em>Diplopterygium
-glaucum</em>）</p></li>
+<li><p>草本层：狗脊（<em>Woodwardia japonica</em>）、薹草（<em>Carex
+spp.</em>）、里白（<em>Diplopterygium glaucum</em>）</p></li>
 <li><p>藤本植物：流苏子（<em>Coptosapelta
-diffusa</em>），牛老药藤（<em>Thysanospermum
-diffusum</em>），藤黄檀（<em>Dalbergia hancei</em>）等</p></li>
+diffusa</em>）、牛老药藤（<em>Thysanospermum
+diffusum</em>）、藤黄檀（<em>Dalbergia hancei</em>）等</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="a米槠-栲树群团--江南丘陵群丛组" class="section level3">
-<h3>(a)米槠-栲树群团- 江南丘陵群丛组</h3>
+<div id="a-米槠-栲树群团-江南丘陵群丛组" class="section level3">
+<h3>(a) 米槠-栲树群团-江南丘陵群丛组</h3>
 <p>主要分布在浙江、湖南丘陵低山地区。伴生种除群团的鉴别种外，乔木层常见的有：赤楠（<em>Syzygium
-buxifolium</em>）,马银花（<em>Rhododendron
-ovatum</em>），南烛（<em>Vaccinium bracteatum</em>）、杨梅（<em>Myrica
-rubra</em>）、浙江新木姜子（<em>Neolitsea aurata</em> var.
-<em>chekiangensis</em>）、黄丹木姜子（<em>Litsea
+buxifolium</em>）、马银花（<em>Rhododendron
+ovatum</em>）、南烛（<em>Vaccinium bracteatum</em>）、杨梅（<em>Myrica
+rubra</em>）、浙江新木姜子（<em>Neolitsea aurata var.
+chekiangensis</em>）、黄丹木姜子（<em>Litsea
 elongata</em>）、络石（<em>Trachelospermum
 jasminoides</em>）等，分布范围较偏北</p>
 <p><br></p>
 <div id="目前包含2个群丛和4个群落" class="section level4">
 <h4>目前包含2个群丛和4个群落</h4>
 <ul>
-<li><p>(A1) 尖连蕊茶-浙江新木姜子∕米槠群丛(C<em>amellia
-cuspidata</em>-<em>Neolitsea aurata</em> var.
-<em>chekiangensis</em>/<em>Castanopsis carlesii</em> Ass.)</p>
+<li><p>(A1) 尖连蕊茶-浙江新木姜子/米槠群丛(<em>Camellia
+cuspidata</em>-<em>Neolitsea aurata var.
+chekiangensis</em>/<em>Castanopsis carlesii</em> Ass.)</p>
 <p>分布在浙江杭州（EBLF书中表5-66；曾称：杜茎山-浙江新木姜子∕米槠群丛)</p></li>
-<li><p>(A2) 毛柄连蕊茶-浙江新木姜子∕栲树-米槠群丛(<em>Camellia
-fraterna</em>-<em>Neolitsea aurata</em> var.
-<em>chekiangensis</em>/<em>Castanopsis carlesii</em>+<em>Castanopsis
+<li><p>(A2) 毛柄连蕊茶-浙江新木姜子/栲树-米槠群丛(<em>Camellia
+fraterna</em>-<em>Neolitsea aurata var.
+chekiangensis</em>/<em>Castanopsis carlesii</em>+<em>Castanopsis
 fargesii</em> Ass.)</p>
 <p>分布在浙江宁波，引自：《天童植被与区系》中的“木荷ʹ栲群丛”（宋永昌和王祥荣，1995）（EBLF书中表5-67，EBLF书中表5-56，EBLF书中表5-57;
-曾称：毛柄连蕊茶-浙江新木姜子∕栲树群丛，毛柄连蕊茶-浙江新木姜子∕米槠群丛，两者合并)</p></li>
+曾称：毛柄连蕊茶-浙江新木姜子/栲树群丛，毛柄连蕊茶-浙江新木姜子/米槠群丛，两者合并)</p></li>
 <li><p>(C1）穗序鹅掌柴-利川润楠/米槠群落(<em>Schefflera
 delavayi</em>-<em>Machilus lichuanensis</em>/<em>Castanopsis
 carlesii</em> Comm.)</p>
@@ -346,32 +346,33 @@ fargesi</em>+<em>Phoebe hunanensis</em>-<em>Litsea coreana</em> var.
 glauca</em>-<em>Litsea coreana</em> var. <em>lanuginosa</em>/
 <em>Cyclobalanopsis glauca</em>-<em>Castanopsis fargesi</em> Comm.）</p>
 <p>分布在湖南会同(EBLF书中表5-59/2; 曾称：毛豹皮樟∕栲树群落)</p></li>
-<li><p>(C4) 尖连蕊茶/钩锥-栲树群落（<em>Camellia cuspidata</em>/
-<em>Castanopsis tibetana</em>-<em>Castanopsis fargesi</em> Comm.）</p>
+<li><p>(C4) 尖连蕊茶/钩锥-栲树群落（<em>Camellia
+cuspidata</em>/<em>Castanopsis tibetana</em>-<em>Castanopsis
+fargesi</em> Comm.）</p>
 <p>分布在湖南会同。引自：《湖南植被》中
 “栲树、钩锥群落”（祁承经，1990）(EBLF书中表5-60)
-(曾称：杜茎山-钩锥∕栲树群落)</p></li>
+(曾称：杜茎山-钩锥/栲树群落)</p></li>
 </ul>
 <p><br></p>
 </div>
 </div>
-<div id="b米槠-栲树群团--闽粤丘陵山地群丛组" class="section level3">
-<h3>(b)米槠-栲树群团- 闽粤丘陵山地群丛组</h3>
+<div id="b-米槠-栲树群团-南岭山地群丛组" class="section level3">
+<h3>(b) 米槠-栲树群团-南岭山地群丛组</h3>
 <p>主要分布在福建、广东、江西等地丘陵山地。伴生种除群团的鉴别种外，常见的还有：黄杞（<em>Engelhardia
 roxburghiana</em>）、日本杜英（<em>Elaeocarpus
-japonicus</em>），杨桐（<em>Adinandra
-millettii</em>），鹅掌柴（<em>Schefflera
-octophylla</em>），九节木（<em>Psychotria
-rubra</em>），虎舌红（<em>Ardisia
-mamillata</em>），流苏子（<em>Coptosapelta
-diffusa</em>）等，相对于江南丘陵群丛组立地条件更温暖湿润</p>
+japonicus</em>）、杨桐（<em>Adinandra
+millettii</em>）、鹅掌柴（<em>Schefflera
+octophylla</em>）、九节木（<em>Psychotria
+rubra</em>）、虎舌红（<em>Ardisia
+mamillata</em>）、流苏子（<em>Coptosapelta
+diffusa</em>）等，相对于江南丘陵群丛组立地条件更温暖湿润。</p>
 <p><br></p>
 <div id="目前包括1个群丛和8个群落" class="section level4">
 <h4>目前包括1个群丛和8个群落</h4>
 <ul>
-<li><p>(A1) 黑莎草-轮叶蒲桃/栲树-米槠群丛(<em>Gahnia tristis</em>
--<em>Syzygium grijsii</em>/<em>Castanopsis fargesii</em>-<em>Castanopsis
-carlesii</em> Ass.)</p>
+<li><p>(A1) 黑莎草-轮叶蒲桃/栲树-米槠群丛(<em>Gahnia
+tristis</em>-<em>Syzygium grijsii</em>/<em>Castanopsis
+fargesii</em>-<em>Castanopsis carlesii</em> Ass.)</p>
 <p>分布在福建梁野山、天宝岩、梅花山，引自：《福建天宝岩自然保护区综合科学报告》（林鹏
 等，2002），《福建梁野山自然保护区综合科学报告》（林鹏
 等，2001），《福建梅花山自然保护区植被》（邱喜昭，1988），（EBLF书中表5-68;
@@ -391,7 +392,7 @@ octophylla</em>/<em>Castanopsis fargesii</em> Comm.)</p>
 fargesii</em>-<em>Schefflera octophylla</em>-<em>Schefflera
 octophylla</em>/<em>Castanopsis fargesii</em> Comm.）</p>
 <p>分布在福建莆田、南靖。引自：《福建植被》中“米槠+栲树-九节木+百两金+连蕊茶-狗脊+里白群丛”（林鹏，1990）。
-(EBLF书中表8-26/3；曾称：九节木-鹅掌-鹅掌柴/ 栲树-米槠群落)</p></li>
+(EBLF书中表8-26/3；曾称：九节木-鹅掌-鹅掌柴/栲树-米槠群落)</p></li>
 <li><p>(C4) 钩毛草-山牡荆-九节木/栲树群落（<em>Pseudechinolaena
 polystachya</em>-<em>Vitex quinata</em>-<em>Psychotria rubra</em>/
 <em>Castanopsis fargesi</em> Comm.）</p>
@@ -406,24 +407,87 @@ Comm. )</p>
 <li><p>(C6) 箬竹-鹿角杜鹃-翻白叶树/米槠群落(<em>Indocalamus
 tessellatus</em>-<em>Rhododendron latoucheae</em>-<em>Pterospermum
 heterophyllum</em>/<em>Castanopsis carlesii</em> Comm. )</p>
-<p>分布在江西九连山（EBLF书中表5-69/1；曾称：草珊瑚-黄杞∕米槠群落，现从其中分出)</p></li>
+<p>分布在江西九连山（EBLF书中表5-69/1；曾称：草珊瑚-黄杞/米槠群落，现从其中分出)</p></li>
 <li><p>(C7）四川冬青-香花枇杷/米槠群落(<em>Rhododendron
 latoucheae</em>/<em>Castanopsis carlesii</em> Comm. )</p>
 <p>分布在江西九连山（EBLF书中表5-69/2；曾称：草珊瑚-黄杞∕米槠群落，现从其中分出)</p></li>
-<li><p>(C8) 林仔竹-红花荷/ 甜槠-米槠群落(<em>Oligostachyum
+<li><p>(C8) 林仔竹-红花荷/甜槠-米槠群落(<em>Oligostachyum
 nuspiculum</em>-<em>Rhodoleia championi</em>/<em>Castanopsis
 eyrei</em>-<em>Castanopsis carlesii</em> Comm.)</p>
-<p>分布在广东南昆山。(EBLF书中表8-25；曾称：：红花荷∕甜槠-米槠群丛)</p></li>
+<p>分布在广东南昆山。(EBLF书中表8-25；曾称：红花荷/甜槠-米槠群丛)</p></li>
 </ul>
 <p><br></p>
 </div>
 </div>
-<div id="c米槠-栲树群团-黔桂山地群丛组" class="section level3">
-<h3>(c)米槠-栲树群团-黔桂山地群丛组</h3>
-<p>主要分布在广西和贵州东部等地。伴生种除群团的鉴别种外，常见的还有：</p>
+<div id="c-米槠-栲树群团-黔桂山地群丛组" class="section level3">
+<h3>(c) 米槠-栲树群团-黔桂山地群丛组</h3>
+<p>主要分布在广西和贵州东部等地，较上一亚群团偏西。</p>
+</div>
+<div id="优势种-1" class="section level3">
+<h3>优势种：</h3>
+<p>栲(<em>Castanopsis fargesii</em>)、米槠(<em>Castanopsis
+carlesii</em>)</p>
 <p><br></p>
-<div id="目前包含1个群丛和8个群落" class="section level4">
-<h4>目前包含1个群丛和8个群落</h4>
+</div>
+<div id="鉴别种和主要伴生种-1" class="section level3">
+<h3>鉴别种和主要伴生种:</h3>
+<ul>
+<li><p>乔木层：罗浮柿（<em>Diospyros
+morrisiana</em>）、黄杞（<em>Engelhardia
+roxburghiana</em>）、山杜英（<em>Elaeocarpus
+sylvestris</em>）、日本杜英（<em>Elaeocarpus
+japonicus</em>）、锐尖山香园（<em>Turpinia arguta</em>）</p></li>
+<li><p>灌木层：毛冬青（<em>Ilex pubescens</em>）、鸭公树（<em>Neolitsea
+chuii</em>）、莲座紫金牛（<em>Ardisia
+primulaefolia</em>）、穗序鹅掌柴（<em>Schefflera
+delavayi</em>）</p></li>
+<li><p>草本层：扇叶铁线蕨（<em>Adiantum
+flabellulatum</em>）、金毛狗（<em>Cibotium
+barometz</em>）等更喜温暖的种类</p></li>
+<li><p>藤本植物：网络酸藤子（<em>Embelia
+rudis</em>）、买麻藤（<em>Gnetum montanum</em>）、藤黄檀（<em>Dalbergia
+hancei</em>）等</p></li>
+</ul>
+<p><br></p>
+<div id="目前包含4个群丛和6个群落" class="section level4">
+<h4>目前包含4个群丛和6个群落</h4>
+<ul>
+<li><p>(A1）尖连蕊茶-浙江新木姜子/米槠群丛(<em>Camellia
+cuspidata</em>-<em>Neolitsea aurata var.
+chekiangensis</em>/<em>Castanopsis carlesii</em> Ass.)</p>
+<p>分布在浙江杭州（EBLF书中表5-66）(原名：杜茎山-浙江新木姜子/米槠群丛)</p></li>
+<li><p>(A2）黑莎草-轮叶蒲桃/米槠+栲树群丛(Gahnia tristis-Syzygium
+grijsii/Castanopsis fargesii Ass.)</p>
+<p>分布在福建梁野山、天宝岩、梅花山（EBLF书中表5-68）(原名：轮叶蒲桃-少叶黄杞∕米槠群丛)</p></li>
+<li><p>(A3）短梗大参-厚叶鼠刺/米槠群丛（<em>Macropanax
+rosthornii</em>-<em>Itea coriacea</em>/<em>Castanopsis carlesii</em>
+Ass.）</p>
+<p>分布在广西花坪（EBLF书中表5-71/1~2）(原名：短梗大参-厚叶鼠刺/米槠群丛)</p></li>
+<li><p>(A4）十字薹草-凤凰润楠/米槠群丛（<em>Eriobotrya
+cavaleriei</em>-<em>Machilus phoenicis</em>/<em>Castanopsis
+carlesii</em> Ass.）</p>
+<p>分布在广西阳朔（EBLF书中表5-71/
+3-4）(原名：十字薹草-江南越桔/米槠群丛)</p></li>
+<li><p>(C1) 米槠-鹅掌柴-毛果算盘子群落(<em>Castanopsis
+carlesii</em>-<em>Schefflera octophylla</em>-<em>Glochidion
+eriocarpum</em> Comm.)</p>
+<p>分布在福建莆田南昆山 (EBLF书中表8-26∕1)
+，(原名：九节木–鹅掌柴∕/槠群落，现从其中分出)</p></li>
+<li><p>(C2）米槠-鹿角杜鹃群落(<em>Rhododendron
+latoucheae</em>/<em>Castanopsis carlesii</em> Comm. )</p>
+<p>分布在江西九连山（EBLF书中表5-69/1-2），(原名：草珊瑚-黄杞/米槠群落)。</p></li>
+<li><p>(C3）米槠-穗序鹅掌柴群落(<em>Schefflera
+delavayi</em>-<em>Engelhardtia roxburghiana</em>/<em>Castanopsis
+carlesii</em> Comm.)</p>
+<p>分布在湖南慈利（EBLF书中表5-70）(原名：穗序鹅掌柴-黄杞/米槠群落)。</p></li>
+<li><p>(C4）林仔竹-红花荷-米槠群落(<em>Oligostachyum
+nuspiculum</em>-<em>Rhodoleia championi</em>/<em>Castanopsis
+carlesii</em> Comm.)</p>
+<p>分布在广东南昆山。(EBLF书中表8-25)
+(原名：红花荷/甜槠-米槠群丛)</p></li>
+<li><p>(C5）米槠-中华杜英-网脉山龙眼-华西箭竹-狗脊蕨群落（苏宗明等）</p></li>
+<li><p>(C6）米槠-米槠-广东杜鹃-多种杜鹃-狗脊蕨群落（苏宗明等）</p></li>
+</ul>
 </div>
 </div>
 </div>
