--- a/Alli-1a2.html
+++ b/Alli-1a2.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">赤皮青冈-小叶青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-gilva-q.-cyclobalanopsis-myrsinaefolia-all."
+id="quercus-cyclobalanopsis-gilva---q.-cyclobalanopsis-myrsinaefolia-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>gilva</em>-<em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>gilva</em> - <em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>myrsinaefolia</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
@@ -313,28 +313,27 @@ christinae</em>）、阔鳞鳞毛蕨（<em>Dryopteris
 championii</em>）、蓬蘽（<em>Rubus
 hirsutus</em>），以及淡竹叶、狗脊</p></li>
 <li><p>藤本植物：绞股蓝（<em>Gynostemma
-pentaphyllum</em>）、牯岭蛇葡萄（<em>Ampelopsis heterophylla</em> var.
-<em>kulingensis</em>）、白英（<em>Solanum
+pentaphyllum</em>）、牯岭蛇葡萄（<em>Ampelopsis heterophylla var.
+kulingensis</em>）、白英（<em>Solanum
 lyratum</em>）等喜温湿的种类较多</p></li>
 </ul>
 <p><br></p>
 </div>
 <div id="目前包含1个群丛2个群落" class="section level3">
-<h3>目前包含1个群丛、2个群落</h3>
+<h3>目前包含1个群丛，2个群落</h3>
 <ul>
 <li><p>(A1) 阔鳞鳞毛蕨-箬竹/小叶青冈群丛（<em>Dryopteris
 championii</em>-<em>Indocalamus spp.</em>/<em>Cyclobalanopsis
 myrsinaefolia</em> Comm.）</p>
-<p>见于杭州；安徽祁门、清阳；江西庐山(EBLF书中表5-12/1-3；曾称：箬竹∕小叶青冈群丛)。</p></li>
+<p>见于杭州；安徽祁门、清阳；江西庐山(EBLF书中表5-12/1-3；曾称：箬竹/小叶青冈群丛）。</p></li>
 <li><p>(C1) 狗脊-鼠刺/小叶青冈群落（<em>Woodwardia
-japonica</em>-<em>Itea chinensis</em> /<em>Cyclobalanopsis
+japonica</em>-<em>Itea chinensis</em>/<em>Cyclobalanopsis
 myrsinaefolia</em> Comm.）</p>
-<p>见于湖南东部，以及湖南南部桂东八面山。引自《湖南植被》中的“青椆林”（祁承经，1990）(EBLF书中表5-13；曾称：鼠刺∕
-小叶青冈群落)。</p></li>
+<p>见于湖南东部，以及湖南南部桂东八面山。引自《湖南植被》中的“青椆林”（祁承经，1990）(EBLF书中表5-13；曾称：鼠刺/小叶青冈群落）。</p></li>
 <li><p>(C2) 红盖鳞毛蕨-天仙果/红楠-赤皮青冈群落（<em>Dryopteris
-erythrosora</em>-<em>Ficus erecta var. becheyana</em> /<em>Machilus
-thunbergii </em>-<em>Cyclobalanopsis gilva</em> Comm.）</p>
-<p>北仓(EBLF书中表5-14；曾称：红楠/赤皮青冈群落)。</p></li>
+erythrosora</em>-<em>Ficus erecta var. becheyana</em>/<em>Machilus
+thunbergii</em>-<em>Cyclobalanopsis gilva</em> Comm.）</p>
+<p>北仓(EBLF书中表5-14；曾称：红楠/赤皮青冈群落）。</p></li>
 </ul>
 </div>
 <div id="附注" class="section level3">
