--- a/Alli-1a22.html
+++ b/Alli-1a22.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,10 +280,11 @@ $(document).ready(function () {
 <div id="山润楠-油樟-银叶桂群团" class="section level2">
 <h2><span style="color: blue;">山润楠-油樟-银叶桂群团</span></h2>
 </div>
-<div id="machilus-montana-cinnamomum-longipaniculatum-c.-mairei-all."
+<div
+id="machilus-montana---cinnamomum-longipaniculatum---c.-mairei-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Machilus
-montana</em>-<em>Cinnamomum longipaniculatum</em>-<em>C. mairei</em>
+<h2><span style="color: darkblue;"><em>Machilus montana</em> -
+<em>Cinnamomum longipaniculatum</em> - <em>C. mairei</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
@@ -295,24 +296,24 @@ longepaniculatum</em>)、银叶桂(<em>C. mairei</em>)</p>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：川钓樟（<em>Lindera pulcherrima</em> var.
-<em>hemsleyana</em>）、曼青冈（<em>Cyclobalanopsis
+<li><p>乔木层：川钓樟（<em>Lindera pulcherrima var.
+hemsleyana</em>）、曼青冈（<em>Cyclobalanopsis
 oxyodon</em>）、梾木（<em>Swida macrophylla</em>）、亮叶桦（<em>Betula
 luminifera</em>）、水青冈（<em>Fagus
 longipetiolata</em>）、领春木（<em>Euptelea
-pleiospermum</em>）、光叶珙桐（<em>Davidia involucrata</em> var.
-<em>vilmoriniana</em>）</p></li>
+pleiospermum</em>）、光叶珙桐（<em>Davidia involucrata var.
+vilmoriniana</em>）</p></li>
 <li><p>灌木层：少花荚蒾（<em>Viburnum
 oliganthum</em>）、狭叶花椒（<em>Zanthoxylum
-stenophyllum</em>），篌竹（<em>Phyllostachys nidularia</em>）</p></li>
-<li><p>草本层：薹草（<em>Carex</em> sp.），麦冬（<em>Ophiopogon
+stenophyllum</em>）、篌竹（<em>Phyllostachys nidularia</em>）</p></li>
+<li><p>草本层：薹草（<em>Carex</em> sp.）、麦冬（<em>Ophiopogon
 japonicus</em>）、乌鳞耳蕨（<em>Polystichum
 piceo-paleaceum</em>）、顶芽狗脊（<em>Woodwardia
 unigemmata</em>）等较湿生境中的植物</p></li>
 <li><p>藤本植物：狗枣猕猴桃（<em>Actinidia
 kolomikta</em>）、尼泊尔常春藤（<em>Hedera
-nepalensis</em>）、华西俞藤（<em>Yua thomsonii</em> var.
-<em>glaucescens</em>）</p></li>
+nepalensis</em>）、华西俞藤（<em>Yua thomsonii var.
+glaucescens</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
@@ -320,15 +321,15 @@ nepalensis</em>）、华西俞藤（<em>Yua thomsonii</em> var.
 <h3>目前包含3个群落</h3>
 <ul>
 <li><p>(C1）西南假毛蕨-川钓樟/山楠群落（<em>Pseudocyclosorus
-esquirolii</em>-<em>Lindera pulcherrima</em> var.
-<em>hemsleyana</em>/<em>Phoebe chinensis</em> Comm.）</p>
-<p>分布在四川卧龙（EBLF书中表5-117；曾原称：川钓樟∕ 山楠群落)</p></li>
+esquirolii</em>-<em>Lindera pulcherrima var. hemsleyana</em>/<em>Phoebe
+chinensis</em> Comm.）</p>
+<p>分布在四川卧龙（EBLF书中表5-117；曾原称：川钓樟/ 山楠群落)</p></li>
 <li><p>(C2）建兰-篌竹/油樟群落(<em>Cymbidium ensifolium</em>
 -<em>Phyllostachys nidularia</em>/<em>Cinnamomum longepaniculatum</em>
 Comm.)</p>
-<p>分布在四川卧龙（EBLF书中表5-118/1；曾称：篌竹∕ 油樟群落)</p></li>
+<p>分布在四川卧龙（EBLF书中表5-118/1；曾称：篌竹/ 油樟群落)</p></li>
 <li><p>(3）井栏边草-石木姜子/银叶桂群落(<em>Cinnamomum
-mairei</em>-<em>Litsea elongata</em> var. <em>faberi</em>-<em>Pteris
+mairei</em>-<em>Litsea elongata var. faberi</em>-<em>Pteris
 multifida</em> Comm.)</p>
 <p>分布在四川卧龙（EBLF书中表5-118/2；曾称：石木姜子∕银叶桂群落)</p></li>
 </ul>
