--- a/Alli-1a3.html
+++ b/Alli-1a3.html
@@ -239,7 +239,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -304,9 +304,9 @@ superba</em>）、木蜡树（<em>Toxicodendron
 sylvestre</em>）、吴茱萸五加（<em>Acanthopanax
 evodiaefolius</em>）</p></li>
 <li><p>灌木层：细齿叶柃（<em>Eurya nitida</em>）、尾叶冬青（<em>Ilex
-wilsonii</em>）、豹皮樟（<em>Litsea coreana</em> var.
-<em>sinensis</em>）、浙江新木姜子（<em>Neolitsea aurata</em> var.
-<em>chekiangensis</em>）</p></li>
+wilsonii</em>）、豹皮樟（<em>Litsea coreana var.
+sinensis</em>）、浙江新木姜子（<em>Neolitsea aurata var.
+chekiangensis</em>）</p></li>
 <li><p>草本层：朱砂根（<em>Ardisia
 crenata</em>）、阔叶山麦冬（<em>Liriope
 platyphylla</em>）、辽宁堇菜（<em>Viola rossii</em>）</p></li>
@@ -320,33 +320,31 @@ jasminoides</em>）、网络崖豆藤（<em>Millettia reticulata</em>）</p></li
 <h3>目前包含2个群丛和10个群落</h3>
 <ul>
 <li><p>(A1) 紫金牛-马银花/木荷+细叶青冈群丛（<em>Ardisia japonica</em> -
-<em>Rhododendron ovatum</em> / <em>Cyclobalanopsis gracilis</em>
-+<em>Schima superba</em> Ass.）</p>
-<p>见于浙江龙塘山。（EBLF书中表5-20/1-3；曾称：
-马银花∕细叶青冈群落)</p></li>
-<li><p>(A2) 十字薹草-鹿角杜鹃/细叶青冈群丛（<em>Carex cruciata</em>
--<em>Rhododendron latoucheae</em>∕ <em>Cyclobalanopsis gracilis
-</em>Ass.）</p>
-<p>见于浙江乌岩岭、百山祖（EBLF书中表5-21/1-3）(曾称：鹿角杜鹃∕细叶青冈群落)</p></li>
-<li><p>(C1) 缺萼枫香/细叶青冈群落（<em>Liquidambar acalycina</em> /
-<em>Cyclobalanopsis gracilis</em> Comm.）</p>
+<em>Rhododendron ovatum</em> / <em>Cyclobalanopsis gracilis</em> +
+<em>Schima superba</em> Ass.）</p>
+<p>见于浙江龙塘山。（EBLF书中表5-20/1-3；曾称：马银花/细叶青冈群落)</p></li>
+<li><p>(A2) 十字薹草-鹿角杜鹃/细叶青冈群丛（<em>Carex
+cruciata</em>-<em>Rhododendron latoucheae</em>/<em>Cyclobalanopsis
+gracilis </em> Ass.）</p>
+<p>见于浙江乌岩岭、百山祖（EBLF书中表5-21/1-3）（曾称：鹿角杜鹃/细叶青冈群落）</p></li>
+<li><p>(C1) 缺萼枫香/细叶青冈群落（<em>Liquidambar
+acalycina</em>/<em>Cyclobalanopsis gracilis</em> Comm.）</p>
 <p>见于安徽石台牯牛降，以及湖南桑植太平山。引自：《牯牛降科学考察集》（韩也良
 等，1990）和《湖南植被》（祁承经，1990.）（EBLF书中表5-18/1-2；曾称：缺萼枫香∕
-细叶青冈群落)</p></li>
+细叶青冈群落）</p></li>
 <li><p>(C2) 求米草-交让木/细叶青冈群落（<em>Oplismenus
-undulatifolius</em> - <em>Daphniphyllum macropodum</em> -
+undulatifolius</em>-<em>Daphniphyllum macropodum</em> -
 <em>Cyclobalanopsis gracilis</em> Comm. ）</p>
-<p>见于浙江天目山。（EBLF书中表5-19/1-2，曾称：交让木∕
-细叶青冈群落)</p></li>
+<p>见于浙江天目山。（EBLF书中表5-19/1-2，曾称：交让木/细叶青冈群落）</p></li>
 <li><p>(C3) 黑足鳞毛蕨-薄叶山矾/细叶青冈群落（<em>Dryopteris
 fuscipes</em> -<em>Symplocos anomala</em>- <em>Cyclobalanopsis
 gracilis</em> Comm.）</p>
-<p>见于安徽黄山。（EBLF书中表5-19/3-4；曾称：薄叶山矾∕细叶青冈群落)</p></li>
+<p>见于安徽黄山。（EBLF书中表5-19/3-4；曾称：薄叶山矾/细叶青冈群落)</p></li>
 <li><p>(C4) 条穗薹草-铁仔/细叶青冈群落（<em>Carex nemostachys</em>
 -<em>Myrsinae Africana</em> / <em>Cyclobalanopsis gracilis</em>
 Comm.）</p>
 <p>见于湖北漳河源。引自《湖北漳河源自然保护区生物多样性及其保护研究》中的“小叶青冈(细叶青冈)林”
-（汪正祥等, 2008). （EBLF书中表5-23；曾称：铁仔∕细叶青冈群落)</p></li>
+（汪正祥等， 2008) （EBLF书中表5-23；曾称：铁仔∕细叶青冈群落)</p></li>
 <li><p>(C5) 里白-鹿角杜鹃/港柯-云山青冈群丛（<em>Diplopterygium
 glaucum</em> - <em>Rhododendron latoucheae</em>∕ <em>Cyclobalanopsis
 sessilifolia </em>+ <em>Lithocarpus harlandii</em> Ass.）</p>
