--- a/Alli-1a4.html
+++ b/Alli-1a4.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -311,7 +311,7 @@ arisanensis</em>），土茯苓（<em>Smilax glabra</em>）</p></li>
 <h3>目前包含1个群丛和1个群落</h3>
 <ul>
 <li><p>(A1) 异羽复叶耳蕨-猴头杜鹃/ 褐叶青冈群丛（<em>Arachniodes
-simplicior</em> - <em>Rhododendron simoarum</em> / <em>Cyclobalanopsis
+simplicior</em>-<em>Rhododendron simoarum</em>/<em>Cyclobalanopsis
 stewardiana</em> Ass.）</p>
 <p>分布在江遂昌大西坑，(EBLF书中表5-24/1-4；曾称：猴头杜鹃/
 褐叶青冈群丛)</p></li>
