--- a/Alli-1a7.html
+++ b/Alli-1a7.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -318,23 +318,24 @@ china</em>）</p></li>
 <li><p>(C1) 连药沿阶草-箬叶竹/灰柯群落(<em>Ophiopogon
 bockianus</em>-<em>Indocalamus longiauritus</em>/<em>Lithocarpus
 henryi</em> Comm.)</p>
-<p>见于广西容县。引自：《广西柯林分类的研究》中“长果石栎（灰柯）-箬叶竹-南川沿阶草群丛”（王献溥和蒋高明，2001）(EBLF书中表5-30/1；曾称：箬叶竹∕灰柯群落)</p></li>
-<li><p>(C2）蔓赤车-茶杆竹/烟斗柯群落(<em>Pellionia scabra</em>
--<em>Pseudosasa amabilis</em> /<em>Lithocarpus corneus</em> Comm.)</p>
+<p>见于广西容县。引自：《广西柯林分类的研究》中“长果石栎（灰柯）-箬叶竹-南川沿阶草群丛”（王献溥和蒋高明，2001）(EBLF书中表5-30/1；曾称：箬叶竹/灰柯群落)</p></li>
+<li><p>(C2）蔓赤车-茶杆竹/烟斗柯群落(<em>Pellionia
+scabra</em>-<em>Pseudosasa amabilis</em>/<em>Lithocarpus corneus</em>
+Comm.)</p>
 <p>见于广西容县。引自：《广西柯林分类的研究》中“烟斗石栎-
 假肉桂-茶杆竹-蔓赤车群丛”（王献溥和蒋高明，2001）(EBLF书中表5-30/2；曾称：茶杆竹/烟斗柯群落)</p></li>
-<li><p>(C3) 狗脊-匙萼柏拉木/美叶柯群落（<em>Woodwardia japonica</em>
--<em>Blastus cavaleriei</em> /<em>Lithocarpus calophyllus</em>
-Comm.）</p>
+<li><p>(C3) 狗脊-匙萼柏拉木/美叶柯群落（<em>Woodwardia
+japonica</em>-<em>Blastus cavaleriei</em>/<em>Lithocarpus
+calophyllus</em> Comm.）</p>
 <p>见于广西灵川。引自：《广西柯林分类的研究》中“粤桂石栎（美叶柯）-
 四川杨桐-
 黔桂野锦香（匙萼柏拉木）-狗脊群丛”（王献溥和蒋高明，2001）(EBLF书中表5-30/3；曾称：匙萼柏拉木/美叶柯群落)</p></li>
 <li><p>(C4) 中华复叶耳蕨-匙萼柏拉木-双齿山茉莉/泥柯群落(<em>Arachniodes
-chinensis</em> -<em>Blastus cavalerie</em> -<em>Huodendron
-biaristatum</em> /<em>Lithocarpus fenestratus</em> Comm.)</p>
+chinensis</em>-<em>Blastus cavalerie</em>-<em>Huodendron
+biaristatum</em>/<em>Lithocarpus fenestratus</em> Comm.)</p>
 <p>见于广西南部武鸣。引自：《广西柯林分类的研究》中“华南石栎(泥柯)-云贵山茉莉(双齿山茉莉)-黔桂野锦香(匙萼柏拉木)-中华汝蕨群丛”（王献溥和蒋高明，2001）(EBLF书中表5-33，曾称：匙萼柏拉木-云贵山茉莉∕泥柯群落)</p></li>
-<li><p>(C5) 华中蹄盖蕨-阳春红淡比/星毛柯群落（<em>Athyrium wardii</em>
--<em>Cleyra yangchunensis</em> /<em>Lithocarpus petelotii</em>
+<li><p>(C5) 华中蹄盖蕨-阳春红淡比/星毛柯群落（<em>Athyrium
+wardii</em>-<em>Cleyra yangchunensis</em>/<em>Lithocarpus petelotii</em>
 Comm.）</p>
 <p>见于湖南永顺小溪。(EBLF书中表5-31，曾称：阳春红淡比/星毛柯群落)</p></li>
 <li><p>(C6) 红盖鳞毛蕨-红花八角/硬壳柯群落（<em>Lithocarpus hancei</em>-
@@ -344,7 +345,7 @@ Comm.）</p>
 <li><p>(C7) 华东瘤足蕨-冷箭竹/金毛柯+甜槠群落（<em>Plagiogyria
 japonica</em>-<em>Sinarundinaria fangiana</em>/<em>Lithocarpus
 chrysocomus</em>+ <em>Castanopsis eyrei</em> Comm.）</p>
-<p>见于广东乳源八宝山地1300~1800m。
+<p>见于广东乳源八宝山地1300-1800 m。
 引自：《中国植被》中“金毛石栎、木荷、甜槠林（《中国植被表》表7-13）（中国植被编委会，1980）</p></li>
 </ul>
 </div>
