--- a/Alli-1a9.html
+++ b/Alli-1a9.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,9 +280,10 @@ $(document).ready(function () {
 <div id="甜槠-银木荷群团" class="section level2">
 <h2><span style="color: blue;">甜槠-银木荷群团</span></h2>
 </div>
-<div id="castanopsis-eyrei-schima-argentea-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis eyrei</em>-<em>Schima
-argentea</em> All.</span></h2>
+<div id="castanopsis-eyrei---schima-argentea-all."
+class="section level2">
+<h2><span style="color: darkblue;"><em>Castanopsis eyrei</em> -
+<em>Schima argentea</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
