--- a/Alli-2a39.html
+++ b/Alli-2a39.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,15 +280,18 @@ $(document).ready(function () {
 <div id="大叶新木姜子-黄樟-樟群团" class="section level2">
 <h2><span style="color: blue;">大叶新木姜子-黄樟-樟群团</span></h2>
 </div>
-<div id="neolitsea-levinei-cinnamomum-parthenoxylon-c.-camphora-all."
+<div
+id="neolitsea-levinei---cinnamomum-parthenoxylon---c.-camphora-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Neolitsea
-levinei</em>-<em>Cinnamomum parthenoxylon</em>-<em>C. camphora</em>
+<h2><span style="color: darkblue;"><em>Neolitsea levinei</em> -
+<em>Cinnamomum parthenoxylon</em> - <em>C. camphora</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>樟树、黄樟、大叶新木姜子、鸭公树（<em>Neolitsea chuii</em>）</p>
+<p>樟树（<em>Cinnamomum camphora</em>）、黄樟（<em>Cinnamomum
+parthenoxylon</em>）、大叶新木姜子（<em>Neolitsea
+levinei</em>）、鸭公树（<em>Neolitsea chuii</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -299,7 +302,7 @@ phoenicis</em>）、网脉山龙眼（<em>Helicia
 reticulata</em>）、米槠（<em>Castanopsis
 carlesii</em>）、鹅掌柴（<em>Schefflera
 heptophylla</em>）、长毛柃（<em>Eurya patentipila</em>）</p></li>
-<li><p>灌木层：草珊瑚（<em>Sarcandra glabra</em>），九节（<em>Psychotria
+<li><p>灌木层：草珊瑚（<em>Sarcandra glabra</em>）（<em>Psychotria
 rubra</em>）、米碎花（<em>Eurya
 chinensis</em>）、箬叶竹（<em>Indocalamus longiauritus</em>）</p></li>
 <li><p>草本层：大叶仙茅（<em>Curculigo
@@ -317,27 +320,27 @@ coccinea</em>）、酸藤子（<em>Embelia laeta</em>）</p></li>
 <ul>
 <li><p>(C1）银柴-鹅掌柴/黄樟群落（<em>Aporusa dioica</em>-<em>Schefflera
 octophylla</em>/<em>Cinnamomum porrectum</em> Comm.）</p>
-<p>分布在香港。引自：《香港植被》中的“黄樟+荷木+鸭脚木（鹅掌柴）群丛”（张宏达和王伯荪，1989）（EBLF书中表8-29∕1，曾称：银柴-鹅掌柴/黄樟群落）</p></li>
+<p>分布在香港。引自：《香港植被》中的“黄樟+荷木+鸭脚木（鹅掌柴）群丛”（张宏达和王伯荪，1989）（EBLF书中表8-29/1，曾称：银柴-鹅掌柴/黄樟群落）</p></li>
 <li><p>(C2）羊舌树-鹅掌柴/黄樟群落（<em>Symplocos
 glauca</em>-<em>Schefflera octophylla</em>/<em>Cinnamomum porrectum</em>
 Comm.）</p>
-<p>分布在香港。引自：《香港植被》中的“黄樟+羊舌树+鸭脚木群丛”群丛”（张宏达和王伯荪，1989）（EBLF书中表8-29∕2，曾称：羊舌树-鹅掌柴/黄樟群落）</p></li>
+<p>分布在香港。引自：《香港植被》中的“黄樟+羊舌树+鸭脚木群丛”群丛”（张宏达和王伯荪，1989）（EBLF书中表8-29/2，曾称：羊舌树-鹅掌柴/黄樟群落）</p></li>
 <li><p>(C3) 东方乌毛蕨-黄牛木/马尾松-樟群落（<em>Blechnum
 orientale</em>-<em>Cratoxylum cochinchinense</em>/<em>Pinus
 massoniana</em>-<em>Cinnamomum camphora</em> Comm.）</p>
-<p>分布在广西容县杨村，引自：《广西植被志要》书中表格号235/236，原称：？？？？？</p></li>
+<p>分布在广西容县杨村，引自：《广西植被志要》书中表格号235/236</p></li>
 <li><p>(C4) 短茎紫金牛-硬壳柯/米槠-大新木姜子群落（<em>Ardisia
 brevicaulis</em>-<em>Lithocarpus hancei</em>/<em>Castanopsis
 carlesii</em>-<em>Neolitsea chuii</em> Comm.）</p>
-<p>分布在广西容县杨村，引自：《广西植被志要》书中表格号237/238，原称：？？？？？</p></li>
+<p>分布在广西容县杨村，引自：《广西植被志要》书中表格号237/238</p></li>
 <li><p>(C5) 大叶仙茅-冬青/假肉桂群落（<em>Curculigo
 capitulata</em>-<em>lex chinensis</em>/<em>Neolitsea levinei</em>
 Comm.）</p>
-<p>分布在广西容县石头石剑，引自：《广西植被志要》书中表格号239/240，原称：？？？？？</p></li>
+<p>分布在广西容县石头石剑，引自：《广西植被志要》书中表格号239/240</p></li>
 <li><p>(C6) 阔叶沿阶草-茶秆竹/假肉桂群落（<em>Ophiopogon
 platyphyllus</em>-<em>Pseudosasa amabilis</em>/<em>Neolitsea
 levinei</em> Comm.）</p>
-<p>分布在广西容县天堂山，引自：《广西植被志要》书中表格号241/242，原称：？？？？？</p></li>
+<p>分布在广西容县天堂山，引自：《广西植被志要》书中表格号241/242</p></li>
 </ul>
 </div>
 </div>
