--- a/Alli-2a45.html
+++ b/Alli-2a45.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -277,21 +277,21 @@ $(document).ready(function () {
 </div>
 
 
-<div id="米槠-白校欑-淋漓锥群团" class="section level2">
-<h2><span style="color: blue;">米槠-白校欑-淋漓锥群团</span></h2>
+<div id="米槠-白校攒-淋漓锥群团" class="section level2">
+<h2><span style="color: blue;">米槠-白校攒-淋漓锥群团</span></h2>
 </div>
 <div
-id="castanopsis-carlesii-castanopsis-carlesii-var.-carlesii-f.-sessilis-lithocarpus-castanopsis-uraianus-all."
+id="castanopsis-carlesii---castanopsis-carlesii-var.-carlesii-f.-sessilis---lithocarpus-castanopsis-uraianus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-carlesii</em>-<em>Castanopsis carlesii</em> var. <em>carlesii</em>
-f. <em>sessilis</em>-<em>Lithocarpus</em> (<em>Castanopsis</em>)
-<em>uraianus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis carlesii</em> -
+<em>Castanopsis carlesii var. carlesii f. sessilis</em> -
+<em>Lithocarpus</em> (<em>Castanopsis</em>) <em>uraianus</em>
+All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>淋漓锥(<em>Lithocarpus uraianus</em>)、米槠(<em>Castanopsis
-carlesii</em>)、白校攒（<em>Castanopsis carlesii var. carlesii
+<p>淋漓锥（<em>Lithocarpus uraianus</em>）、米槠（<em>Castanopsis
+carlesii</em>）、白校攒（<em>Castanopsis carlesii var. carlesii
 f. sessilis</em>）</p>
 <p><br></p>
 </div>
@@ -322,21 +322,20 @@ serpens</em>）、石柑子（<em>Pothos chinensis</em>）</p></li>
 <li><p>(A1）台东山矾-台湾罗汉松/淋漓锥群丛（<em>Symplocos
 konishii</em>-<em>Podocarpus nakaii</em>/<em>Castanopsis uraiana</em>
 Ass.）</p>
-<p>分布于莲花池(EBLF书中表8-42/1-3，曾称：台湾罗汉松-黄杞∕淋漓锥群落)</p></li>
-<li><p>(C1）大黄花虾脊兰-蔓九节-多枝紫金牛/ 白校欑群落（<em>Lasianthus
-appressihirtus</em>-<em>Ardisia sieboldii</em>/<em>Castanopsis
-carlesii</em> var. <em>sessile</em> Comm.）</p>
-<p>分布于乌来(EBLF书中表8-42/4-5.
-曾称：伏毛鸡屎树–多枝紫金牛/白校欑群落)</p></li>
+<p>分布于莲花池(EBLF书中表8-42/1-3，曾称：台湾罗汉松-黄杞/淋漓锥群落)</p></li>
+<li><p>(C1）大黄花虾脊兰-蔓九节-多枝紫金牛/白校攒群落（<em>Lasianthus
+appressihirtus</em>-<em>Ardisia sieboldii</em>/<em>Castanopsis carlesii
+var. sessile</em> Comm.）</p>
+<p>分布于乌来(EBLF书中表8-42/4-5。曾称：伏毛鸡屎树–多枝紫金牛/白校攒群落)</p></li>
 <li><p>(C2）观音座莲-台湾挱椤/台湾山香圆-米槠群落（<em>Angiopteris
 lygodiifolia</em>-<em>Alsophila spinulosa</em>/<em>Turpinia
 formosana</em>-<em>Castanopsis carlesii</em> Comm.）</p>
-<p>分布于大元山(EBLF书中表8-43. 曾称：挱椤/台湾山香圆-米槠群落)</p></li>
+<p>分布于大元山(EBLF书中表8-43。曾称：挱椤/台湾山香圆-米槠群落)</p></li>
 <li><p>(C3) 南仁山新木姜子-台湾八角-鹅掌柴/米槠群落（<em>Neolitsea
 hiiranensis</em>-<em>Illicium arborescens</em>-<em>Schefflera
 octophylla</em>/<em>Castanopsis carlesii</em>+<em>Illicium
 arborescens</em> Comm.）</p>
-<p>分布于南仁山(EBLF书中表8-43. 曾称：台湾八角-鹅掌柴-米槠群落)</p></li>
+<p>分布于南仁山(EBLF书中表8-43。曾称：台湾八角-鹅掌柴-米槠群落)</p></li>
 </ul>
 </div>
 </div>
