--- a/Alli-3a49.html
+++ b/Alli-3a49.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -280,16 +280,16 @@ $(document).ready(function () {
 <div id="淋漓锥-红锥群团" class="section level2">
 <h2><span style="color: blue;">淋漓锥-红锥群团</span></h2>
 </div>
-<div id="lithocarpus-castanopsis-uraianus-castanopsis-hystrix-all."
+<div id="lithocarpus-castanopsis-uraianus---castanopsis-hystrix-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Lithocarpus</em>
-(<em>Castanopsis</em>) <em>uraianus</em>-<em>Castanopsis hystrix</em>
+(<em>Castanopsis</em>) <em>uraianus</em> - <em>Castanopsis hystrix</em>
 All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>淋漓锥(<em>Castanopsis uraiana</em>)、红锥(<em>Catanopsis
-hystrix</em>)</p>
+<p>淋漓锥（<em>Castanopsis uraiana</em>）、红锥（<em>Catanopsis
+hystrix</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -323,8 +323,7 @@ utilis</em>）等多种大型木质藤本</p></li>
 <li><p>(A1) 亮叶猴耳环-鹅掌柴/淋漓锥-红锥群丛（<em>Pithecellobium
 lucidum</em>/<em>Castanopsis uraiana</em>+<em>Castanopsis hystrix</em>
 Ass.）</p>
-<p>分布在福建南靖。它是《福建省南靖南亚热带雨林自然保护区科学考察报告》中的“红栲+乌来栲（淋漓锥）+
-红鳞蒲桃-罗伞树+九节木-单叶新月蕨群丛”和“乌来栲-罗伞树-华山姜群丛”（林鹏，1999）的综合。（EBLF书中表9-2/1-3，曾称：亮叶猴耳环∕淋漓锥-红锥群丛）</p></li>
+<p>分布在福建南靖。它是《福建省南靖南亚热带雨林自然保护区科学考察报告》中的“红栲+乌来栲（淋漓锥）+红鳞蒲桃-罗伞树+九节木-单叶新月蕨群丛”和“乌来栲-罗伞树-华山姜群丛”（林鹏，1999）的综合。（EBLF书中表9-2/1-3，曾称：亮叶猴耳环/淋漓锥-红锥群丛）</p></li>
 <li><p>(A2) 黄绒润楠-鹅掌柴/红锥群丛（<em>Machilus
 grijsii</em>-<em>Schefflera octophylla</em>/<em>Catanopsis hystrix</em>
 Ass.）</p>
