--- a/index.html
+++ b/index.html
@@ -298,12 +298,12 @@ $(document).ready(function () {
 <hr>
 <p><span style="color:red;">
 <em>  “当人们寻求生物资源，并为生物多样性丧失而忧伤的时候，关注的重点是热带雨林；当人们为荒漠扩张、生态环境恶化而恐慌的时候，更多关注的是荒漠和草原。要知道常绿阔叶林生物多样性也很丰富，其分布区域人口密集，长期的人类活动对常绿阔叶林的消耗和破坏产生的资源和环境问题也很严重，在关注生物多样性保护和防治生态环境恶化时不能忽视常绿阔叶林。对现存的这种我国独特的植被类型进行系统研究，不仅有利于生物多样性的保护，而且也有利于生态环境的改善，对地区的可持续发展具有重要意义。”
-</em></span></p>
+</em> </span></p>
 <p><span style="color:blue;"><em>—
 宋永昌《中国常绿阔叶林》第15页（2013）</em> </span></p>
 <p><br></p>
-<p><span style="color:red;">
-<em>  “从现有的事实看，生物是在一定的时期，一定的地区生态系统中发生和演化的，被子植物和它相关的高等动物都是以常绿阔叶树种为主的常绿阔叶林，特别是热带、亚热带山区发生和发展演化。……
+<p><span
+style="color:red;"><em>  “从现有的事实看，生物是在一定的时期，一定的地区生态系统中发生和演化的，被子植物和它相关的高等动物都是以常绿阔叶树种为主的常绿阔叶林，特别是热带、亚热带山区发生和发展演化。……
 热带山地、亚热带常绿阔叶林的研究不仅对现在的生态系统保护和发展有重要意义，将来很可能在人类’上天’的时候，也要用这些科学资料。”
 </em></span></p>
 <p><span style="color:blue;"><em>—
