--- a/reference.html
+++ b/reference.html
@@ -278,42 +278,42 @@ $(document).ready(function () {
 
 
 <ul>
-<li><p>Song Y.C., Wang X.H., Yan E.R. 2013. Evergreen forest in China:
-Classification Ecology Conservation, Science Press, Beijing. 801p. (in
-Chinese). [宋永昌, 王希华, 阎恩荣. 2013.
-中国常绿阔叶林-分类，生态，保育. 北京：科学出版社，801+558页.]</p></li>
-<li><p>Song K., Zhang J., Yan E.R., Wang X.H., Song, Y.C. 2024.
-EcoFloVCS: An eco-physiognomic-floristic vegetation classification
-system. Applied Vegetation Science, 27(4): e70005. <a
+<li><p>Song YC, Wang XH, Yan ER (2013) Evergreen Broad-Leaved Forests in
+China: Classification, Ecology, Conservation. Beijing: Science Press.
+801p+558p. (in Chinese). [宋永昌, 王希华, 阎恩荣 (2013)
+中国常绿阔叶林：分类-生态-保育. 北京：科学出版社，801+558页.]</p></li>
+<li><p>Song K, Zhang J, Yan ER, Wang XH, Song YC (2024) EcoFloVCS: An
+eco-physiognomic-floristic vegetation classification system. Applied
+Vegetation Science, 27(4): e70005. <a
 href="https://doi.org/10.1111/avsc.70005">doi:10.1111/avsc.70005</a></p></li>
-<li><p>Song Y.C. 2004. Tentative Classification Scheme of Evergreen
-Broad-leaved forests of China. Chinese Journal of Plant Ecology,
-28(4):435-448 ( in Chinese).[宋永昌. 2004. 中国常绿阔叶林分类试行方案.
+<li><p>Song YC (2004) Tentative Classification Scheme of Evergreen
+Broad-leaved forests of China. Chinese Journal of Plant Ecology, 28(4):
+435-448 (in Chinese).[宋永昌 (2004) 中国常绿阔叶林分类试行方案.
 植物生态学报, 28(4): 435-448.]</p></li>
-<li><p>Song YC (1994). On the scientific term of evergreen broad-leaved
+<li><p>Song YC (1994) On the scientific term of evergreen broad-leaved
 forest and their typology. In: Jiang and Chen CD ed. Vegetation Ecology.
-Beijing: Science Press. p.189-199. [宋永昌 (1994).
+Beijing: Science Press. p.189-199. [宋永昌 (1994)
 关于常绿阔叶林名称和类型划分的问题.（见：姜恕、陈昌笃主编：植被生态学研究.
 北京:科学出版社. p.189-199]</p></li>
-<li><p>Song YC, Xu GS, Chen WL, Wang XH, Da LJ, Chen TC (2003).
-Evergreen broad-leaved forests in Taiwan and its relationship with
-counterparts in mainland China. Chinese Journal of Plant Ecology, 27(6),
-719-732. [宋永昌, 徐国士，陈伟烈，王希华，达良俊，陈添财 (2003).
-台湾常绿阔叶林主要类型及其与大陆常绿阔叶林的关系. 植物生态学报, 27(6),
+<li><p>Song YC, Xu GS, Chen WL, Wang XH, Da LJ, Chen TC (2003) Evergreen
+broad-leaved forests in Taiwan and its relationship with counterparts in
+mainland China. Chinese Journal of Plant Ecology, 27(6): 719-732.
+[宋永昌, 徐国士，陈伟烈，王希华，达良俊，陈添财 (2003)
+台湾常绿阔叶林主要类型及其与大陆常绿阔叶林的关系. 植物生态学报, 27(6):
 719-732.]</p></li>
-<li><p>Song YC (2011). Recognition and proposals on the vegetation
+<li><p>Song YC (2011) Recognition and proposals on the vegetation
 classification system of China. Chinese Journal of Plant Ecology, 35(8),
-882-892. [宋永昌 (2011). 对中国植被分类系统的认知和建议. 植物生态学报,
-35 (8), 882-892.]</p></li>
-<li><p>Song YC, Yan ER, Song K (2017). An update of the vegetation
-classification in China. Chinese Journal of Plant Ecology, 41(2),
-269-278. [宋永昌, 阎恩荣, 宋坤 (2017). 再议中国的植被分类系统.
-植物生态学报, 41(2), 269-278.]</p></li>
-<li><p>Zhang J, Song K, Song YC (2020). History of French-Swiss School
-of phytosociology and its influences on modern vegetation ecology.
-Chinese Journal of Plant Ecology, 44(7), 699-714. [张健, 宋坤, 宋永昌
-(2020). 法瑞学派的发展历史及其对当代植被生态学的影响. 植物生态学报,
-44(7), 699-714. DOI: 10.17521/cjpe.2020.0054]</p></li>
+882-892. [宋永昌 (2011) 对中国植被分类系统的认知和建议. 植物生态学报, 35
+(8), 882-892.]</p></li>
+<li><p>Song YC, Yan ER, Song K (2017) An update of the vegetation
+classification in China. Chinese Journal of Plant Ecology, 41(2):
+269-278. [宋永昌, 阎恩荣, 宋坤 (2017) 再议中国的植被分类系统.
+植物生态学报, 41(2): 269-278.]</p></li>
+<li><p>Zhang J, Song K, Song YC (2020) History of French-Swiss School of
+phytosociology and its influences on modern vegetation ecology. Chinese
+Journal of Plant Ecology, 44(7): 699-714. [张健, 宋坤, 宋永昌 (2020)
+法瑞学派的发展历史及其对当代植被生态学的影响. 植物生态学报, 44(7):
+699-714.]</p></li>
 </ul>
 <hr>
 <p><img src="Pictures/EBLF%20book%20and%20EcoFloVCS.png" /></p>
